format md in 06

--- a/06.沉思日记类/大学日记后期乙集.md
+++ b/06.沉思日记类/大学日记后期乙集.md
@@ -1,4 +1,8 @@
-#《大学后期日记乙集》目录
+# 大学后期日记乙集
+
+<!-- toc -->
+
+## 目录
 
 * 《大学后期日记乙集》前记
 * 一、1959年1月
@@ -11,9 +15,7 @@
 * 八、1959年8月
 * 九、给钱思亮校长的一封公开信
 
-
-
-##《大学后期日记乙集》前记
+## 《大学后期日记乙集》前记
 
 这是我在台湾大学文学院历史系四年级的简略日记，时间是1959年（民国四十八年）1月1号到8月2号。8月2号是我回台中的日子，回台中以后三十五天，我就到军队去了。
 
@@ -41,9 +43,7 @@
 
 1966年10月之半
 
-
-
-##1959年1月
+## 1959年1月
 
 1959年以跳舞开始。1958年以跳舞送走了。
 
@@ -877,9 +877,7 @@
 
 五、在玲珑与CM约明日去其宿舍，吾之交际周到，更进一步为之。
 
-
-
-##1959年2月
+## 1959年2月
 
 2月1日星期日
 
@@ -1261,9 +1259,7 @@
 
 二、夜与宏祥在博物馆后台阶上吃玉米，吾近日殊无情人之需要。给宏祥筹二十元。借自英星。
 
-
-
-##1959年3月
+## 1959年3月
 
 3月1日星期日
 
@@ -1685,9 +1681,7 @@
 
 三、自晨借书起，研究西藏葬俗，并作一文。
 
-
-
-##1959年4月
+## 1959年4月
 
 4月1日星期三
 
@@ -2037,9 +2031,7 @@
 
 二、夜在周家，我觉得我还是不够体贴，不够设身处地地为别人设想。
 
-
-
-##1959年5月
+## 1959年5月
 
 5月1日星期五
 
@@ -2461,9 +2453,7 @@
 
 三、沈言女生第五宿舍所传我之外号——“咸湿姥”，意犹“大色狼”也。
 
-
-
-##1959年6月
+## 1959年6月
 
 6月1日星期一
 
@@ -2535,7 +2525,7 @@
 
 小子徒把好梦做（“陡”当作“空”字）。
 
-五、下午与彦增、祝泰、庄因看Cat	ontheHotTinRoof，坚拒彦增请我。看出来我说：“男人有的还是好的，女人却全是坏的！”
+五、下午与彦增、祝泰、庄因看Cat ontheHotTinRoof，坚拒彦增请我。看出来我说：“男人有的还是好的，女人却全是坏的！”
 
 六、夜与阙至正谈到11点。
 
@@ -3019,9 +3009,7 @@
 
 二、下午阿地来，大消遣之。
 
-
-
-##1959年7月
+## 1959年7月
 
 7月1日星期三
 
@@ -3169,7 +3157,7 @@
 
 四、送彼等上车前，车中小女学生指着我说：“历史系的。”不知其故。
 
-五、午后善培及鸿飞来，同看James	Jones之SomeCameRunning，感于风尘中或有真知己也，天下文人之遭遇洵如是也。
+五、午后善培及鸿飞来，同看James Jones之SomeCameRunning，感于风尘中或有真知己也，天下文人之遭遇洵如是也。
 
 六、赶回参加请傅乐成、杜维运的晚宴，原人马、原地方。今晚酒酣，决定不考了！英善、周弘、凤翰、天中皆劝我不可放弃研究所。
 
@@ -3523,9 +3511,7 @@
 
 六、午后至正请看《怒海焚舟》于国际。
 
-
-
-##1959年8月
+## 1959年8月
 
 8月1日星期六
 
@@ -3549,9 +3535,7 @@
 
 四、抵台中后，夜10时48分接鼓应。取行李。
 
-
-
-##给钱思亮校长的一封公开信
+## 给钱思亮校长的一封公开信
 
 ——大学的外一章
 
@@ -3592,6 +3576,3 @@
 李敖1966年，被胡秋原诬告后第五年的开始之日，在台北敬祝
 
 思亮校长早早退休！
-
-
-
