--- a/06.沉思日记类/早年日记.md
+++ b/06.沉思日记类/早年日记.md
@@ -1,15 +1,15 @@
-#《早年日记》目录
+# 早年日记
 
-*一、十七天的校园生活
-*二、毕业以后，从军以前
-*三、四席小屋日记
-*四、二十年前的一些断片
+<!-- toc -->
 
+## 目录
 
+* 一、十七天的校园生活
+* 二、毕业以后，从军以前
+* 三、四席小屋日记
+* 四、二十年前的一些断片
 
-
-
-##十七天的校园生活
+## 十七天的校园生活
 
 我的《大学后期日记》（收入《李敖大全集》（台湾版）第五册中）是1958年6月8日开始的。是我由大学三年级升到四年级的一大段完整的日记。在这大段日记以前，我零星有十七天日记，从1958年5月27日到6月7日，正好下接《大学后期日记》，就是这些。
 
@@ -199,9 +199,7 @@
 
 五、“神识超迈，飘然而来，忽然而去，不屑于雕章琢句，亦不劳劳于镂心刻骨。”
 
-
-
-##毕业以后，从军以前
+## 毕业以后，从军以前
 
 ——1959年8月3日到9月6日的曰记
 
@@ -609,9 +607,7 @@
 
 三、夜赴世民家，与徐大姐谈，小其恩，世民约为其未出世小孩子起名。
 
-
-
-##四席小屋日记
+## 四席小屋日记
 
 前记
 
@@ -2575,9 +2571,7 @@ eccehomo！
 
 二、读《老子》《陶诗》，立意做田园派之自然主义者。
 
-
-
-##二十年前的一些断片
+## 二十年前的一些断片
 
 二十年前1966那一年，我留下一些札记、日记、信件、备忘录……这些文字本身并不完整，再加上我被警总二度抄家，所以剩下的，是名副其实的断片。
 
@@ -3702,6 +3696,3 @@ H来。
 下午彦增来。看病。晚饭于R.M.后即回家做工。近三天来工作不恶，当持之以不断与大量。
 
 傍晚电小左，知基隆方面又发生禁卖李敖书之事。小左已电李中校，李中校答应去电解决。
-
-
-
