--- a/06.沉思日记类/李敖五五日记.md
+++ b/06.沉思日记类/李敖五五日记.md
@@ -1,4 +1,8 @@
-#《李敖五五日记》目录
+# 李敖五五日记
+
+<!-- toc -->
+
+## 目录
 
 * 《李敖五五日记》前记
 * 一、1990年4月
@@ -15,9 +19,7 @@
 * 十二、1991年3月
 * 十三、1991年4月
 
-
-
-##《李敖五五日记》前记
+## 《李敖五五日记》前记
 
 这是我五十五岁那年的日记，从1990年4月25日我五十五岁生日写起，直写到第二年1991年4月10日，日记小缺数天，大体完整。
 
@@ -25,9 +27,7 @@
 
 1999年3月17日
 
-
-
-##1990年4月
+## 1990年4月
 
 4月25日星期三
 
@@ -115,9 +115,7 @@
 
 夜一中苏瑞华来电，训导主任张永铭找他们，同意约我讲演。
 
-
-
-##1990年5月
+## 1990年5月
 
 5月1日星期二
 
@@ -447,9 +445,7 @@
 
 家立来坐两小时。谈其友苏先生拟买“自由女神”事转售于我。我建议改名“独裁魔鬼”号，向公海广播，责骂KMT，四十年来不自由真相，然后送到大陆解体以献祖国。
 
-
-
-##1990年6月
+## 1990年6月
 
 6月1日星期五
 
@@ -847,9 +843,7 @@
 
 周之鸣来电。
 
-
-
-##1990年7月
+## 1990年7月
 
 7月1日星期日
 
@@ -879,7 +873,7 @@
 
 敬备桃樽恭候
 
-台光	承庆
+台光 承庆
 
 子裴稚、少、幼潘
 
@@ -1201,9 +1195,7 @@
 
 性忠、姬美来电，说大陆统战部有录影带。
 
-
-
-##1990年8月
+## 1990年8月
 
 8月1日星期三
 
@@ -1515,9 +1507,7 @@
 
 在峰考取东吴微生物系。
 
-
-
-##1990年9月
+## 1990年9月
 
 9月1日星期六
 
@@ -1859,9 +1849,7 @@
 
 买file轮架两个。
 
-
-
-##1990年10月
+## 1990年10月
 
 10月1日星期一
 
@@ -2161,9 +2149,7 @@ Ease是早起在床上，用惺忪之眼，抵住美女大腿内侧养神。
 
 在季园，有读者杨雨亭来自我介绍。
 
-
-
-##1990年11月
+## 1990年11月
 
 11月1日星期四
 
@@ -2603,9 +2589,7 @@ Martha来电。
 
 电基峻。
 
-
-
-##1990年12月
+## 1990年12月
 
 12月1日星期六
 
@@ -3075,9 +3059,7 @@ Martha来电。
 
 企祥来电。
 
-
-
-##1991年1月
+## 1991年1月
 
 1月1日星期二
 
@@ -3423,9 +3405,7 @@ Alice去美。
 
 夜德健来坐，详谈天安门事，认为只是群众泄愤而已，极少自由民主之争。
 
-
-
-##1991年2月
+## 1991年2月
 
 2月1日星期五
 
@@ -3751,9 +3731,7 @@ Martha电告刘焦林已死。
 
 维纲来。
 
-
-
-##1991年3月
+## 1991年3月
 
 3月1日星期五
 
@@ -4095,9 +4073,7 @@ AP保养机器的先生说：你写的《厚黑学》我看过。
 
 兆基来。
 
-
-
-##1991年4月
+## 1991年4月
 
 4月1日星期一
 
@@ -4154,6 +4130,3 @@ AP保养机器的先生说：你写的《厚黑学》我看过。
 听小钊与主人谈吃经，殊觉“没出息”。
 
 夜小沈夫妇来。
-
-
-
