--- a/06.沉思日记类/李敖札记.md
+++ b/06.沉思日记类/李敖札记.md
@@ -1,4 +1,8 @@
-#《李敖札记》目录
+# 李敖札记
+
+<!-- toc -->
+
+## 目录
 
 * 一、《李敖札记-语录》自序
 * 二、“只有一师吗？”
@@ -134,8 +138,6 @@
 * 一三二、日久见人心
 * 一三三、裸画与自由
 
-
-
 《李敖札记-语录》自序
 
 这本书分由两部分合成。前半部是《李敖札记》、后半部是《李语录》，李敖出版社总编辑吕佳真建议题为“李敖札记-语录”，就此定名。
@@ -148,21 +150,15 @@
 
 （台湾版《李敖大全集》将《李敖札记-语录》分为二书。）
 
-
-
 “只有一师吗？”
 
 碰到段昌国、韩崇智（周渝东海同班）、黄小姐。昌国转告萧启庆在普林斯敦说李敖抵得住国民党一师的军队。我笑着说：“只有一师吗？”启庆，老友也，来台讲学一年，不敢来看我。国民党的恐怖不只它本身，而是它衍生出来的使人“自己吓自己”的恐怖感觉，它能使高等知识分子人人俯首帖耳、人人噤若寒蝉，高等知识分子一一成了逃世的懦夫的时候，国民党的作恶，也就更无忌惮了。（1984年5月14日）
-
-
 
 谁中风了？
 
 王杏庆电询，说海外来消息，盛传李敖中风了。我听了大笑。
 
 只有中风疾走的人，才会怀疑李敖中风。（1984年5月14日）
-
-
 
 新女性下场
 
@@ -214,15 +210,11 @@
 
 此文述新女性下场，事实一应俱全。女人有好条件就闹闹闹，闹到“一个人坐在椅子上，痴呆地盯着窗外”而后已。悲夫！（1984年5月16日）
 
-
-
 使气与生气
 
 对俗人使气，对自己却不生气，是尘网中高人玩世之道。
 
 对俗人不使气好像是不行的。俗人多不逊而做混蛋事，所以要常常予以性格表演，使他们知所警惕。但这种性格表演，只是朝外的，而不是朝内的。所以，我自己却一点也不气，只是假装生气耳！（1984年5月16日）
-
-
 
 施不全的尊容
 
@@ -233,8 +225,6 @@
 《清史稿》又说他“当官聪强果决，摧抑豪猾，禁戢胥吏。所至有惠政，民号曰‘青天’”。
 
 施不全以怪相做能吏好官，中国相术之不灵，可知矣！（1984年5月16日）
-
-
 
 拉着他
 
@@ -266,8 +256,6 @@
 
 英国国会两党对峙，坐在第一排的，有的以拐杖钩对方的脚以开玩笑者，但从没有“拉着他”以使之不能发言者。丘吉尔脱离保守党，可以悍然走到对峙的那一排坐下，以示拆伙，但在国民党“拉着他”的高招下，纵有丘吉尔，也必然被大家一拥而上，拉住不放。想来想去，还是国民党的代议政治有效。我建议何不在每一立法委员座位上加装一副手铐？谁上台发言，要俞国华下令打开手铐，才能办到，这样一来，会比拉拉扯扯更规律些、整齐些，国民党的形象也就更威武了！（1984年6月16日）
 
-
-
 俞国华的谎话
 
 今天《联合报》上登俞国华消息，说：
@@ -280,19 +268,13 @@
 
 我真奇怪，连国民党总统文告都是先发表后再在大会中“再念一遍”，俞国华的谎话，岂不太好笑了吗？国民党的总统都不“尴尬”，做奴才的俞国华又何“尴尬”之有呢？（1948年6月16日）
 
-
-
 大盗面前布袋戏
 
 在专制政治之下，臣子间以“直声”互相攻击，一如布袋戏中角色的互相攻击，操纵者，专政者之两手耳。自古所谓直臣也、御史也，正人君子了半天，最后是“伏乞皇上”、“伏乞皇太后皇上”的伏乞格局，走狗互咬而已、奴才争宠而已，置窃国大盗于不问、不敢问，是大盗面前布袋戏角色而已。国民党中的所谓好人、所谓清流、所谓正人君子、所谓正义之声，自无一例外，洵可如是观。（1984年7月14日）
 
-
-
 有朋党无政党
 
 从唐朝牛李党争以来，有朋党而无政党，所谓政党，其实是朋党。国民党是最大的朋党，但却假托政党之名。以为国民党是政治学上的政党的，是大傻瓜。欧阳修说：“小人无朋，其暂为朋者，伪也。”国民党却是“小人有朋”的，他们在虚伪中结之以利，“小人与小人，以同利为朋，此自然之理也。”虽然这种结合是暂时的，但国民党根本是只争一时的，狗抢骨头，当然不会争干秋。（1984年7月14日）
-
-
 
 1984年7月23日
 
@@ -306,8 +288,6 @@
 
 《新潮流》有一位张先生投书说：“国民党当局禁止离别父母兄弟姊妹三十多年的人回大陆原乡探亲，实在是不得人心之举。不仅如此，甚至由境外转来不谈政治的家信都给没收，如系现役军人则交由政治部门登入安全资料，以为日后出境之管制（出境人员忠贞品德考核表内有‘曾否与匪区通信’一栏）。为了反共竟要我们六亲不认，那是何等的残忍。”——国民党竟有此种考核表，真是奇闻。（1984年7月23日）
 
-
-
 伟人是很容易被脱手的
 
 李宁来做访问。李宁说日前她去远东公司买衣服，因身上带的钱不够，缺两百元，女店员看她手中有新出《千秋》二册，说：“你可以用李敖这两本书抵两百元。”李宁同意，乃成交。
@@ -316,13 +296,9 @@
 
 这两个故事的玩笑性教训是：——伟人是很容易被脱手的。（1984年7月26日）
 
-
-
 “聚敛之臣”的德政
 
 小魏夫妇、南榕、会云夜谈。我说今天报上说银行跑3点半延长半小时，改为4点了。报上说：“银行延长营业，最大的受惠者是经常跑3点半的工商业者。按目前银行支票交换作业，如果交换后发现支票存款不足，该存户为免发生退票，必须在下午3点半以前筹足款项，到银行补齐支票存户中短少部分。银行延长为4点关门，经常调支票头寸的工商业者，可多出半小时筹款。”并说这一德政是“构想来自财政部长陆润康”，真令人哭笑不得。一个笑话说，妇女节那天，丈夫对太太说：“今天是妇女节，你今天不要洗碗了，留着明天一起洗吧。”国民党“聚敛之臣”的德政，大率类此。（1984年7月27日）
-
-
 
 执言与抓人
 
@@ -330,13 +306,9 @@
 
 午后与祥辉谈，我建议他戏拟国民党大抓人名单，看看要抓多少人才能镇得住党外杂志的“世纪大进击”、“绝地大反攻”。我说国民党至少要抓二十人以上才能稍微镇住一点儿，可是久了还是不行。谈到党外诸公排挤李敖的事，祥辉说：“你是党外的在野党。”（1984年7月28日）
 
-
-
 我和订书机
 
 兆基夜送剪报。我一边做工一边跟他谈天下事。我说我用订书机订资料，订书机最后一枚订书针用完的时候，自己当然不知道，会空钉一下，那种感觉，就像用手枪打人打到子弹光了，最后空扣扳机一下一样，要急着赶紧补充子弹。那种急着补充的心情，正反射出我工作的勤奋。（1984年7月28日）
-
-
 
 杂种国民党和杂种党外
 
@@ -344,13 +316,9 @@
 
 这些人集合在一起纪念段海光，其实只是亵读殷海光而已。（1984年8月1日）
 
-
-
 要做中国人，先做美国人
 
 会云生日，以祺夫妇请午饭。以祺他们因为入了美国籍、做了美国人、有了洋护照护航，才有了海峡三地的自由。这一现象，说明了中国人要“做堂堂正正的中国人”，得先做美国人。你做了美国人，中国人才把你当中国人；你纯做中国人，中国人就把你当狗。（1984年8月15日）
-
-
 
 “拜码头”
 
@@ -360,21 +328,15 @@
 
 《战国策》记齐宣王见颜斶，曰：“斶前！”斶亦曰：“王前！”宣王不悦。左右曰：“王，人君也；斶，人臣也。王曰：‘斶前！’斶亦曰：‘王前！’可乎？”斶对曰：“夫‘斶前’为慕势，‘王前’为趋士。与使斶为慕势，不如使王为趋士。”王忿然作色，曰：“王者贵乎？士贵乎？”对曰：“士贵耳！王者不贵。”我在《千秋评论》第二十一期谈到我对党外人士“以傲慢示人”的事，我在跟这个岛上的朋友的交往中，一直摆下高姿式，好像要人“拜码头”似的，其实这不是傲慢，也不是大架子，而是成全别人的“趋士”（礼贤下士），训练朋友对“士贵耳！”的领悟，使他们知道“士”的重要。我的行为，有一点黄石公对张良的测验性质。孺子可教的朋友、有妙根慧谛的朋友，当然会了解我为什么要大模大样，要人“拜码头”，老是摆高姿式。（1984年8月15日）
 
-
-
 国民党统治下的知识分子
 
 平景来电，谈到鼓应去大陆的事。我说鼓应若不在大陆谈自由主义，将把殿门所学尽付东流；若在大陆谈自由主义，又何能谈得下去？鼓应一生总是飘来飘去，没有主见，也不坚定，是一个不成格局的知识分子。
 
 今天报上登了不少纪念周弃子的文字，一片“个人滥情”与“廉价伤感”耳，跟国民党走的知识分子，总是这些货色。国民党统治下的知识分子总是“做人成功、作文失败”，“做人成功”者，只整天搞文酒之会、做公共关系，大家以肉麻当有趣；“作文失败”者，这些人的作品，统统不成个东西。总之，国民党统治下的知识分子实在不成格局。古人不成格局者，尚知藏拙；可是国民党统治下的知识分子却又个个只知现丑，真恶心人！（1984年8月26日）
 
-
-
 以假易真
 
 右眼近视减0.25，去配眼镜。眼镜店老板认出我，同我闲聊。他伸出手臂，指着他的手表说：“这是台湾出的假劳力士，只要一千元。比我那真的劳力士还准，所以我把真的收起来，戴上假的。”——有真的压箱底，而以假的示人、以假的实用，有趣哉！（1984年8月28日）
-
-
 
 萧孟能窃占罪入狱
 
@@ -388,15 +350,11 @@
 
 11日启扬托国强转告，萧孟能是7月31日被通缉的。被通缉后东躲西藏近一个月，终不免于服刑。国民党《中央日报》以下，碰到李敖入狱，就大登特登；碰到萧孟能入狱，则一片遮掩，若无其事，国民党之志在斗臭李敖，对比之下可知矣！（1984年8月30日）
 
-
-
 “政府威信”与“流氓威信”
 
 国民党口口声声维护“政府威信”，但你自己狗屁倒灶，有何威何信可言？这次高雄流氓李慧昌朝警察局连放数枪，使国民党胆寒——你整我，我就整你，此真维护“流氓威信”者也！此种流氓，真情毕露，真不朽矣！
 
 我前年出狱当天，就以《天下没有白坐的黑牢》整国民党，使国民党胆寒，此亦维护威信者也。昨天“林产科”笑谓：“朋友敌人都怕李敖如怕老虎。”一介匹夫，有威信如此，亦不朽矣！（1984年9月5日）
-
-
 
 怎样杀老混蛋？
 
@@ -406,49 +364,33 @@
 
 人类学中“弃姥”（弃老）的例子很多，只是这个例子最有趣味。我建议我们要搭很多高台子给台湾这些老混蛋，让他们“乐极生狂，忘其在台上歌舞，跌下身死”。（1984年9月5日）
 
-
-
 “与子偕小”与“与子偕亡”
 
 小如夫妇昨天过台，中午与老孟来，十四年不见了。上次小如来看我，正是我被警总门口“站岗”之时。小如当年在阳明山家中打字，被特务诬指为向大陆打电报；后来开敦煌书店，又被诬指为卖禁书（他们不识货，凡是英文书封面上有red字眼的，一律以匪货视之！）。最后不堪其扰，乃放洋做美国人矣！小如问我今后的方向，我说跟国民党陷在一个岛上，又有个屁方向！在这种局面下，我们做的一切努力，都会因国民党在世界上无立足之地而连累得也无立足之地——台湾变小了，你也跟着变小了。我们牢也没少坐、刑也没少受、罪也没少遭，可是声名成绩却不如苏联的人权斗士，也不如韩国的，也不如菲律宾的，这都是因为同国民党“与子偕小”的缘故。但是，“与子偕小”还是走运的呢，搞不好还要“与子偕亡”呢！要看快看，十四年后，你大概看不到我了！（1984年9月6日）
-
-
 
 动物园的感想
 
 中秋节。午后与导群返老还童，去逛动物园，已经十六年没去逛了。棕熊（罴，BrownBear）出生时只有五百克，但一年后可长到九十公斤，就是重了一千倍，真有趣。喜玛拉雅熊（HimalayanBear）除交配外，喜欢独居，此点甚似李敖。大长臂猿（黑手长臂猿SiamangGibbon）以高速在单杠间飞跃，敏捷利落，观众为之鼓掌，我向导群说：“真正该得金牌者，此公也！”长臂猿的活动，每天手比脚忙，此点亦甚似李敖。（1984年9月10日）
 
-
-
 有仇不报的人，就是有恩不报的人
 
 我控萧孟能诬告我，台北地院今早开庭。因萧孟能被会云告成，正以窃占罪在台北监狱服刑，故剃光头、戴手铐而来，神情惨沮。午子戈请吃饭，十七年不见了。我说我有恩必报、有仇必报，我的理论是：有仇不报的人，就是有恩不报的人，因为有仇不报，适足以证明这种人是非感薄弱，是非感薄弱，就最容易忘恩负义。在这种是非不明的环境下，主张正义的人，就必须坚持不要滥用宽恕。（1984年9月11日）
-
-
 
 迟来的饭
 
 申虹来电，说继高同意解除萧孟能的“女朋友”王剑芬在《音乐与音响》杂志社的职务，以缓和我对他的不满。并转告继高说要请我吃饭。我说四五年前我在名人巷碰到继高，继高就说要请，我已经“饿”了四五年了，老朋友既然怕我如此，我看这顿饭还是免了吧！继高已是宋楚瑜之友，不是李敖之友了。（1984年9月13日）
 
-
-
 唐德刚之言
 
 宏正来电代德刚约，说星期天下午来看我，我说我星期天没空。只有今天下午有点空。后来再约，改下午4点来。德刚谈锋甚健，他说他虽是哥伦比亚大学的史学专家与图书馆专家，可是看到我处理图书资料的本领，自叹弗如。我劝他设法筹印《胡适全集》，他说：“他们把我也排挤在外，结果他们不做，也不让别人做。”我想，胡适一辈子结交乡愿朋友、乡愿学生，自己也常做大乡愿，结果死后，使真正了解他的人（像唐德刚、像李敖），也格于乡愿的拦阻，无法帮他完成身后事，这真是人间的一大讽刺！（1984年9月14日）
-
-
 
 “假共产党”
 
 黄怡在电话中说，王拓坐牢后，他的同志瓜分了办《春风》出版登记的三十万元，使王拓欠债至今。又说，陈鼓应弟子某女士在美丽岛事件时大肆出卖同志。我说这些人对敌人没能力实行“共产主义”，反倒先对朋友实行起“共产主义”来了；对敌人不能出卖，反倒先对朋友出卖起来了。我早就看不起台湾的左派，这些事发生，——证明了我常说的他们是“假共产党”，他们真是“假共产党”！（1984年9月15日）
 
-
-
 钓者大悦个什么，
 
 南榕来，一起午餐，我自告奋勇，要为他们写一篇《孙中山反对双十国庆》。傍晚永丰来，清玉、雨静来，一起晚餐。后与永丰在植物园散步，植物园本来是很具规模的，但被国民党的一些机构东挖一块西挖一块，变得割裂了。再与永丰去直潭看夜钓，我说我真想不通钓鱼有什么意义，这些人白天钓鱼还没完，半夜三更为鱼风露立中宵，真不可思议。永丰说，钓鱼的人对你写作的想法也是一样。有人认为你李敖如果爱钱，你早就腰缠万贯，可是你却志不在钱，有人就觉得不可思议。（1984年10月10日）
-
-
 
 要加三级
 
@@ -460,8 +402,6 @@
 
 我生平痛恨混蛋和伪善，一些乍看起来奇才异能之士，似乎颇有清气一番，可是真相大白之后，这种人的混蛋度与伪善度，其实比别人还要加三级。《愚人船》（ShipofFools）中写貌似上智者实为下愚，领教了这个愚人岛上的光怪陆离，我对他们的来来去去，真是一点也不以为异了。（1984年10月19日）
 
-
-
 国民党又造谣了！
 
 国民党传播媒体又造谣。今天《大华晚报》登出《吴勉之世纪大骗徒，日前已遭警方逮捕》的专栏报导，其中有一段说：
@@ -470,13 +410,9 @@
 
 这全是造谣。我只在李翰祥办公室见过吴勉之一面，一句话也没说过，毫无交往，更何来“深入交往”？我的书“流入境外市场”，更与李翰祥、吴勉之无关，而是毕丽娜（费翔妈妈）等不领台湾身份证的人仗义帮的忙。马星野最近口口声声“造谣为记者大忌”，不知祸起国民党自己墙头，又做何感想也！（1984年10月29日）
 
-
-
 谁追国民党？
 
 方豪神父告诉我说，在国民党兵败山倒四处逃亡之际，他在厦门《中央日报》看到有标题是：“我军一撤千里，匪军追赶不及。”我传出这一名句，它就流传至今。一个老兵告诉我：他们剿匪多年，可是从来都是被自己人追着逃，从没被共产党追着逃。其实共产党还没来，国民党就先逃了。（1984年11月8日）
-
-
 
 注意可行性与大众性
 
@@ -488,25 +424,17 @@
 
 今天我们需要的是能打仗的，而不是能谈兵的。（1984年11月8日）
 
-
-
 没有大忏悔，只有大遮盖
 
 陶百川、徐复观这些帮国民党做恶的杂碎，他们做恶后到了台湾，偷洗血手，冒充清流，这一自我清洗的小动作是可以理解的，但是素来清白的党外人士却还帮他们清洗，反而奉他们为清流，这就不可以理解了。事实上，这种人首先该做的，是公开的、诚意的向我们大忏悔，以示诚意。但他们没有大忏悔，只有大遮盖。这种态度，是最没有诚意的态度，反证了他们只是欺骗我们罢了。王维的诗说：“遥爱云水秀，初疑路不同，安知清流转，偶与前山通。”他们毕竟是与前山通的国民党啊，跟我们总是路不同的！（1984年12月16日）
-
-
 
 三百六十的数字现
 
 田汝成《游览志余》说：“杭州三百六十行，各有市语。”所谓“三百六十”，在中国文献中，从《礼记》开始，常常运用。《淮南子》中有“三百六十节”；苏城诗中有“三百六十寺”；施肩吾诗中有“三百六十日”……这种描写方法，不外是表示数目很多。用三百六十来称呼各行各业，是明朝开始的。事实当然不是三百六十行，也不止三百六十行。（1984年12月16日）
 
-
-
 开饭的社会
 
 2月24日中视午间新闻中有李登辉谈话，他把“开放的社会”念成“开饭的社会”，这个笨东西，连话都说不清楚。不过，他把“开放”念成“开饭”，倒也歪打正着呢！国民党统治台湾，不能“开放”，却能“开饭”——人人有得吃或勉强有得吃，才形成一片顺民的世界。设若没饭吃，大家铤而走险矣，纵有“主义”、“领袖”、“国家”、“责任”、“荣誉”等“五大信念”，又有何用哉？人人有饭吃，则随你“信念”五大十大一百大耳！（1984年12月16日）
-
-
 
 批蒋通电出土
 
@@ -516,8 +444,6 @@
 
 这一通电的事，在《蒋总统秘录》第七册中记其原委说：“国庆节的10月10日，宋哲元、石敬亭等二十七人联名通电反抗中央，反对编遣国军；此时，他们的首领冯玉祥还闲居在山西省的五台阎锡山处，当然他和这些作乱的部属是有着联系的。……国民政府立即于11日下令将宋、石等人免职拿办，并决定武力讨伐的方针。”这一通电，《传记文学》中除了有“对蒋先生肆意诋毁，措词极为激越。我们现在读了那篇电文，犹不禁痛愤其狂悖无状”等三十四个字评论外，通电全文，一律照登，设想如果党外刊物这样登了，非给查禁并戴上诋毁元首大帽子不可矣！国民党查禁与戴帽的漫无标准，由此可见一斑。（1984年12月16日）
 
-
-
 下跪得太早了一点
 
 王晓波去年写信给洪金立，就外界盛传陈鼓应在警备总部的软骨行为，有所辩解，他说：
@@ -526,13 +452,9 @@
 
 这一辩解，很令我们开眼界。只是陈鼓应他们只不过在警总待了一夜，就放出来了，这么短的时间里就传出这种事，似乎跪地求饶得太早了些、似乎太没种了一点。听说他们有人在进门前就高举双手，大喊：“别打我，你们要我说什么我就说什么！”这种人，其种在水平以下，实开警总人犯洋相之新纪录。我们当然“应该同情被压迫者”，但是他们实在也该像样的撑一撑吧？（1984年12月17日）
 
-
-
 古语今用更真实
 
 “不战而屈人之兵”也、“决胜于千里之外”也，都是古话而有现代新义者。在按钮战争时代，胜负之间，这些话用于现代，比用于古代更真实。（1985年1月4日）
-
-
 
 国民党谄洋鬼而祭之
 
@@ -546,8 +468,6 @@
 
 《礼记-曲礼》有“非其所祭而祭之”的话；《论语-为政》有“非其鬼而祭之，谄也”的话，其此之谓乎？（1985年2月2日）
 
-
-
 中人的歧路
 
 中国大政治家王安石在《上仁宗皇帝言事书》里，有这样一段话：
@@ -556,13 +476,9 @@
 
 在我看了这个岛上的许多“中人”（所谓自由人士、学者专家）以后，我真的相信他们真是“穷则为小人，泰则为君子”的货色了，只可惜他们老是“小人固穷”，所以老是给老K做狗，君子之泰，总是不见了！（1985年2月11日）
 
-
-
 那时你在哪里？
 
 前进被诬诽谤案，在蔡仁坚等被判刑后，林正杰忽然大做其秀，跑到台北地检处“自首”，说责任在他，与蔡仁坚等无涉。我奇怪，既然责任在他，为什么在蔡仁坚他们被审多次时他不露面？那时他是不是意在要人顶罪、被国民党“宰白鸭”？他在《挑担者言》中说：“批评不如参与，党外的担子，全体党外都有义务来挑。如果嫌挑担子的人姿势不美，有大肩膀的人，应该站出来说：‘我来挑。’”如今我们总算见识了他的“大肩膀”了。原来是在别人为他压垮了以后，他才站出来“参与”，好个乖巧的新生代！（1985年2月11日）
-
-
 
 张春男的卓见
 
@@ -572,21 +488,15 @@
 
 张春男的看法是很敏锐的。我总觉得，这是一个中国人有史以来最没有是非大义的岛，到处是伪君子和乡愿、到处是伪君子和乡愿、到处是伪君子和乡愿，过去虽然黑暗，但阉党是阉党、清流是清流，两者一下一上，有云泥之判；现在阉党固然仍为阉党，而所谓清流者，却是一个又一个“准阉党”，两者不相上下，而云即是泥。滑稽的是，勾结“国民党同路人与党友”的党外老小政客，居然还无耻的指责别人是“恶势力”，是非大义在真伪混淆之中，已经如此陵夷，这真是“汉唐以来所未有也”的鲜事。我纵横古今这么多年，从来没见识过这么多的伪君子和乡愿充斥在一个号称前进、号称党外的旗帜之下，我虽不大惊，却难免小怪，我真的有点激动呢！（1985年2月11日）
 
-
-
 无聊双绝
 
 昨天我告诉老孟说，顾华已进了老人院。老孟说像顾华、冯承基、台静农这些知识分子，他们从大陆挫败来台，在国民党统治下，这种挫败之气，一直不能平息，他们一路垮下来了。我觉得虽然同是垮，可是其中台静农却垮得走样，台静农当年是鲁迅的大将，被捕后吓破了胆，从此“不干了”，以诗酒毛笔字自娱（实乃自“误”），如今垂老反倒愈发妖娆，一笔妖字上市，令人殊感其愈老愈无聊。至于与梁实秋同上台受国民党颁奖，则更属无聊双绝矣！（1985年3月20日）
-
-
 
 中国的游记
 
 顾炎武说：“有体国经野之心，然后可以登山临水。”一山一水，凡夫俗子去了看了，只是去过看过而已，至多在树皮上石块上刻了“某某到此一游”而已，不能再有任何意义。可是一山一水，若被有心人去过看过，结果就不相同。有心人常把山水之乐得之心而寓之文，这类文字，就是所谓“游记”。
 
 “游记”在中国文学中，还算是一种比较自由解放的文体，也是比较接近真实的文体。因为山水之乐与中国出世、遁世的思想颇有关系。作者又大都是政治失意者或思想放达者，寄情游兴之作，往往真情流露。读过苏东坡前后《赤壁赋》的人，都会有这种感觉。（1985年7月10日）
-
-
 
 沙门岛与魔鬼岛
 
@@ -596,8 +506,6 @@
 
 宋朝的沙门岛“有军牢约束”，这与国民党军管绿岛（火烧岛）同级——国民党复兴中国文化呢！又法国流放囚犯，在南美有魔鬼岛（Devil'sIsland，属法属圭亚那），也与绿岛同级——国民党又全盘西化呢！（1985年7月11日）
 
-
-
 谁看“三民主义”？
 
 《传记文学》第三十八卷第三期有庄政《国父的先世与后裔》一文，注中说：
@@ -605,8 +513,6 @@
 近五年来，笔者任教于北投复兴岗政治作战学校预官班，学生俱为大专以上程度者，每于授课之前，均曾实地调查统计，其结果为：看过《三民主义》（演讲本）一书者，平均不到十分之一：看过孙中山传记（任何一种者），则百不一见。私忖：高级知识分子尚且如此，一般国民涉猎上述两书者，恐怕更是少之又少的了。
 
 多好笑啊！国民党整天宣传“三民主义”、考试“三民主义”，并号召以“三民主义统一中国”，可是大家却没看过“三民主义”！没看过正本足本“三民主义”。孙中山死而有知，不知做何感想也！（1985年7月11日）
-
-
 
 给全民上了专制的一课
 
@@ -618,25 +524,17 @@
 
 我看却正好相反——要等高高在上的、若依宪法并无实权的专制者开口说了话才肯放假，正好反证了是给全民上了专制的一课！（1985年9月27日）
 
-
-
 拒见林希翎
 
 登思4号请晚饭，说林希翎想约席中一谈，如不能去，林希翎饭后想来拜访。我都谢绝了。我告诉登恩，可转告林希翎：“李敖说，你来台湾干吗？你不该来台湾的，来台湾多少会被国民党利用。”今天登恩转告：“林希翎回话说：我来台湾干吗？我来看李敖啊！”（1985年10月13日）
-
-
 
 国民党的自大狂
 
 国民党党营的正中书局出版国民党教授李定一译《世界史纲》，不识原文中“MegalomanialedthematlasttotheprossessionofEgypt．”中Megalomania（自大狂）一字，竟翻译成“最后麦格隆满尼（Megalomania）王竟征服埃及”（应该译为“最后自大狂使他们占有埃及”）闹出了大笑话。不过话说回来，国民党的“麦格隆满尼王”其实未尝不是“自大狂”的同义字。看到这种人失国之际，犹以立国元勋的身份发言；做了亡国之君，犹以开国之君的气派发言，除了自大狂以外，真无法别做他解矣！（1985年12月7日）
 
-
-
 在天使一边
 
 迪斯累里1864年演说，有名言曰：“Thequestionisthis：Ismananapeoranangel？I，mylord，amonthesideoftheangels．”（问题是：人是猴子呢？还是天使？我主啊！我是在天使一边的。）其言甚辩，但也颇为自许。其实自己在天使一边，并非就不成问题。撒旦（Satan）就是被谴下凡了的天使，广义的说，猪八戒也未尝不是，只不过面目差了些。问题不在你在天使一边，而在你选的是哪一种天使。选错了天使，你不会好看的。（1985年12月10日）
-
-
 
 只证明你们更残忍而已
 
@@ -644,26 +542,17 @@
 
 国民党在暗杀江南以后，一方面“一清专案”出卖了黑社会头子，一方面一再证明江南是国民党的情报员。但，是了又怎样？揭了这个底，除了证明你们连自己人都杀、证明你们更残忍以外，还能证明些什么？（1985年12月24日）
 
-
-
 又是露奶头问题
 
 去年1月19日我写信给国民党新闻局长张京育，说：“在贵局迭次‘扫黄’行动中，揭橥的标准是‘三点不露’，就是刊出的图片上，不得露出女人的两个奶头和阴部，凡露奶头和阴部者，皆在取缔之列、法办之列。虽然如此，藐视贵局规定而大露特露者，贵党主持之报纸固优为之。即以1984年2月21日到22日短短两日间为例，2月21日，《中国时报》刊出裸女图、同一天《新生报》刊出裸女图、同一天《大华晚报》刊出裸女图，奶头和阴部无一不露；2月22日，《联合报》又刊出裸女图，奶头和阴部又无一不露……凡此密集安露，贵局及有关单位皆睁一只眼闭一只眼，而唯小民是抓，此何等视野乎？又何等视觉乎？”最后我又举出国民党第一党报《中央日报）去年1月19日也登露奶头的照片，并告诉张京育：“我写这封信，并不是反对贵党第一党报登裸照，正相反的，我是赞成登裸照的，我始终相信，一代尤物，把她的裸体流传古今，雅俗共赏，亦大佳事，人人都愿意看，看了皆大欢喜，又假道学个什么？可叹的是假道学的是你们，你们订了‘三点不露’的标准，自己又不能遵守，因此特写此信，请局长先生明告取舍，俾使小民知所进止，在未蒙明告惩办《中央日报》前，吾侪小民，自当援例刊出着蝉透之衫、露峰起之奶的裸女照片，以为跟进。”如今，一年将尽了，张京育没回我的信，但“是他们的传播媒体，却照样露峰起之奶不绝。即以今天（1985年12月24日）《民族晚报》为例，他们不但登出巴黎“滚马俱乐部”的上空乳房，并以《众人皆隐我独出》的标题，广事宣扬，真令人佩服也。吾侪小民，安得不跟进乎？（1985年12月24日）
-
-
 
 你的小留学生呢？
 
 国民党驻美黑代表钱复，1月7日报告，谈到“小留学生”的问题。他指出：我们在美国的小留学生，人数一万以上，他们虽是中国人，但中国语文教育基础不足，又因护照过期，要升大学也成了问题，最严重的是隔离父母，缺乏家庭教育，影响人格的发展，个人又无法照顾自己生活，滋生了许多问题。将孩子过早送到外国的父母，实在对不起孩子云云。但是，19873年1月4日，钱复上任登机前，却明明看到他念高三的儿子、念初三的女儿，和他一道儿去美国了，这一子一女，难道不是小留学生吗？不同的是：别人只是没有钱复这种可以举家赴美的特权而已。正因别人无此公然由正门大道逃避兵役的特权，所以才不得不出之以旁门左道。钱复之言，真不要脸哉！（1986年1月9日）
 
-
-
-
 不想见翁松燃了
 
 宏正转告翁松燃问候之意，我说松燃老是跟莫名其妙的人（指官方与通官方的党外分子）来往，对过去的他，实在是一种退步与失格，我不想见他了。（1985年12月27日）
-
-
 
 黄石城的马屁经
 
@@ -673,25 +562,17 @@
 
 我看了，直起鸡皮疙瘩，并且大笑不止。查《荒漠甘泉》乃洋教根著的书，怎能说成蒋经国的“手著”？“江西剿共”乃蒋介石干的事，怎能算在蒋经国的头上。《守灵百日记》并无此文，有的只是《守父灵一月记》，黄石城显然硬把孝子蒋经国按在“慈湖”，多住了七十天也！蒋经国真要哭笑不得了也！寄语黄石城：多看点书，拍马屁也得有点章法吧？（1985年12月19日）
 
-
-
 匡复起点搬家了，重建基地动摇了
 
 今天《新生报》登：为了配合台北市区铁路地下化施工，位于东隧道上方的“国父史迹纪念馆”，订明（1986）年1月起拆移，由于该馆为国父在台有关史迹唯一保存完整之房舍，施工单位在原馆北端，将依原形状、建材予以复建。全部迁建复原工作，预定1986年12月完成。国父史迹馆位于台北市北平西路与中山北路交会处，与救国团青年服务社房舍比邻相接，原系日本族舍“梅屋敷”旧址，国父于民国二年二次革命失败后，赴日时道经台湾即下榻于此。“梅屋敷”约建于民国前十年间，为日据时代台北市第一流日本酒家，遍植梅花，摇曳生姿，日人达官巨贾，多在此聚会，常人不得进入；至于寄宿，必须具有特别身份之高级贵宾。光复后，因国父曾在此寄寓，当局指定国父下榻之“梅屋敷”房舍为国父史迹之一，建立“国父史迹纪念馆”，于民国三十五年落成，将国父当时的起居室保存如昔，另并陈列有关革命史料，供人参观瞻仰。台北市区地下铁工程处表示，现以铁路地下化工程兴工在即，而“国父史迹纪念馆”因正位于铁路地下化工程隧道上方，施工时必须拆移。先拆除救国团青年服务社房屋，随即拆移国父史迹纪念馆，将位置略予北移云云。看了以后，不禁为国民党致哀。因为这次给拆了的，不止“国父史迹纪念馆”，还有旁边的“纪念亭”。“纪念亭”是1954年11月为国民党“建党六十年纪念”盖的，亭中有石碑，上刻蒋介石题字：“匡复中华的起点，重建民国的基地。”如今一切连根拔起矣，哀哉！（1985年12月30日）
-
-
 
 李敖的小头有远见
 
 当年（1964）小文在美国出生的时候，陈鼓应跟人说：“李敖这个女儿在美国出生，就是美国人了，李敖的目的，是二十多年后，可以以‘美国人的爸爸’身分去美国。”这话传到我耳里，我开玩笑说：“李敖这么有远见吗？有本领把计划定到二十年后吗？二十年太长了吧？变化太多了吧？我靠小文去美国，还木如靠老落回大陆也！”如今，“岁月如矢，革命未成”，二十多年一晃就过去了，靠老蒋回大陆固是笑谈，靠小文去美国却逼人成真了！如今许多家长大做“小留学生”之梦，他们的“大头”，其实还不如李敖的“小头”有远见呢！又何止他们，连我李敖自己，恐怕也都我“大头”不如我“小头”有远见呢！鼓应老友，真深知我“小头”者，在这一点上，他真是先知呢！（1986年1月29日）
 
-
-
 尤清明于责人、昧于知己
 
 邱连辉竞选屏东县长失败，不甘寂寞之余，高速投靠国民党，竟出任省政府顾问兼诉愿委员会主任委员。1月17日《八十年代》登出尤清谈话，尤清说，事先他劝阻邱连辉，理由有二：“第一点，选举的失败不值得灰心，因为以他一人的力量与国民党对抗自然是处于劣势。第二点，依他的身分、地位‘管’邱创焕是绰绰有余，何必屈就邱创焕之下呢？”尤清的话，都言之成理、都没有错。但是，令人不解的是：你尤清这次抢破头来竞选台北县长，幸亏你落选了；如果你没落选，当上台北县长，试问以那时候的县太爷“身份、地位”，是受谁“管”呢？国民党省主席邱创焕岂不正是你的顶头上司么？你不正是抢破头要“屈就邱创焕之下”么？（1986年1月29日）
-
-
 
 辜振甫出丑记
 
@@ -701,13 +582,9 @@
 
 辜振甫也、钱复也，他们真可恨、可耻、又可怜！其实话说回来，老美国务卿实在是错怪了这位国民党中常委。舒尔兹不知道，辜振甫的即席致词，根本不是说给华府的舒尔兹听的，乃是说给台北的蒋经国听的。这个情况，一如当年国民党外交部长魏道明在联大演说，当时大会主席赶魏道明下台，魏道明仍不肯下台，还是要说个没完，原因无他，要说给在台北的蒋介石听耳！——洋人的智能毕竟比国民党正式外交官和“国民外交官”差一大截，舒尔兹太不可怜人啦！（1986年1月29日）
 
-
-
 橘皮何辜？
 
 初一午间华视新闻，国民党竟利用独占的传播媒体，提倡迷信，访问起当代“妖僧”林云来！林云说，“中华民国”国运已经否极泰来，“中华民国”的气非常兴旺，现在走泰来的运，大陆则是乌云蔽日。大家接祥气、除晦气的方法，初一、十五晚上子时（11至1点）以十五分钟时间，用九片新鲜橘子皮，剪成圈，扔到每个主要房间去。……接着他以指上手势为蒋经国祈福。——一派迷信的妖妄之行，看了真令人厌恶。（1986年2月9日）
-
-
 
 海地与美国
 
@@ -717,43 +594,29 @@
 
 中午电视新闻，里根说，美国除了提供杜瓦利埃一架飞机，没对海地提供任何援助。但是，帮忙祸国殃民的独裁者逃避正义的制裁，也是犯众怒的啊！（1986年2月12日）
 
-
-
 打官司的成与败
 
 我在国民党统治之下，一直是以“成固欣然，败亦可喜”的心态打官司的。我反正站在正义的一边，法官苟有异数，同我一边，是谓“欣然”；法官同流合污，不同我一边，但他们的判决书可以被我遗臭万年，留为历史活证，这也不错，是谓“可喜”。（1986年2月12日）
-
-
 
 狗与罗马法
 
 罗马法中小偷偷东西，永远不准取得所有权。老友赵承厚家有小狗，占有欲极强，偷你东西，放到它窝里，你去拿回，它就把你以强盗现之，盖不知罗马法者也。小狗木识字，不知罗马法，不怪它，但窃国者国民党总识字吧？（1986年3月5日）
 
-
-
 呜呼胡适专家！
 
 台大历史系教授张忠栋，《在动乱中坚持民主的胡适》讲稿（1986年2月25-27日）中，用的是“蒋委员长与汪精卫于民国二十三年11月27日发表一则通电”的次序，这是与史法不合的。汪精卫当时排名明明在前，如今崇蒋抑汪，当然不对。又说“胡适写信给周鲠生，公开发表于《独立评论》”云云，更是大错。《独立评论》创刊于1932年5月22日，停刊于1937年7月25日，共出二四四期，是抗战前的重要刊物。《独立时论》则是抗战后的产物，创于1947年。1948年4月，曾有《独立时论集第一集》出版（发行者独立时论社、发行所北京大学出版部）。在序中明说：“在民国三十六年的春天，我们一些在北平教学的朋友们，觉得应该利用余暇，写写文章，对重要的时事问题，以独立的与公正的立场，发表一点意见。我们认为在目前我国情形之下，这是我们在教学以外应尽的一种社会职责。我们很希望我们的意见能够有助于国家政治、经济、社会、教育、文化及科学的进步。但是单独出版刊物是我们的财力所不许的；专给一地的刊物撰文，读者究竟是有限的；同时给各地许多刊物分别撰稿，我们的时间是不够的。因此我们决定仿照欧美专栏作家的办法，将文稿寄发国内外各地报馆同时发表，而文责仍由作者自负。”可见它的性质所在。胡适给周硬生的信，原题《国际形势里的两个问题》，我在《胡适选集》中曾对它加以考订说：“选自《独立时论》文稿（三十七年2月1日北平出版）。此文当时报章杂志转载极多。后收入《胡适的时论一集》（三十七年北平六艺书局出版），《我们必须选择我们的方向》（1950年台北自由中国社出版）。”如今张忠栋不学，竟闹出《独立评论》《独立时论》都分不清的笑话，实在不配研究胡适。我看还是去做信口开河的座谈会专家吧，别做胡适专家了！（1986年3月6日）
-
-
 
 戒严四十年？
 
 1949年5月19日，国民党在这一天起在台湾实施戒严。最近，郑南榕发起“五一九绿色行动”，来纪念这个“台湾戒严日”。在菲律宾“黄色运动”成功的今日，这一行动，当然别有意义。回想1982年10月15日，孙运璿在立法院答复许荣淑，居然说：“戒严令不是实行多久的问题，而是该不该实行的问题，该实行，三十年要实行，四十年也要实行！”这种悍然无耻的心态，真是千古所无。不过，国民党要想戒严一戒四十年，恐怕也时不我与了，至少孙运璿看不到，他的主子蒋经国也看不到了。（1986年4月8日）
 
-
-
 收音机何辜？电视机何辜？
 
 3月28日国民党《中央日报》载：三十九岁的工厂职工接瑞华，酒后观看电视连续剧，不知何故突然捣毁电视机，凌晨被家人发现上吊自杀断气命绝，其妻抚尸恸哭，悲伤逾恒云云。使我联想到蒋介石当年从广播中听到李宗仁当选副总统时，曾捣毁收音机；徐复观从电视中看到梁容若著书得奖时，曾捣毁电视机。可见“自天子以至庶人”，虽口诵圣人“不迁怒”之训，但动起手脚，却都性好此道也。只是收音机何辜、电视何辜，令人不解耳！（1986年4月8日）
 
-
-
 “视弃天下，犹弃敝屣也！”
 
 菲律宾祸国者马科斯夫人，3月5日在美国接受访问，答复她遗留在菲律宾三千双鞋子的事。她说：“我不相信那里有三千双鞋子。那是我财产的全部，我从不丢弃任何东西，即使是坏掉的拖鞋和高踉鞋，我不是浪费的人，这些鞋子是过去近二十一年中留下的。”真是奇论也！从不丢弃任何东西，就可大量买进任何东西而不构成浪费么？孟子说：“视弃天下，犹弃敝屣也！”如今马夫人总算“天下”与“敝屣”被迫两弃了，孟子真是预言家！（1986年4月8日）
-
-
 
 黄炎培记蒋介石暗杀事
 
@@ -763,19 +626,13 @@
 
 黄炎培感慨说：“爱国主义、民主主义、人道主义、反封建主义，许多同志为了实现这些理想，不惜牺牲生命，是大大可敬的。太可惜的是发现了若干人枪口不对外而对内。这些从革命全局说来，到底是很大很大的损失。”真是沉痛之言。（1986年4月8日）
 
-
-
 三中全会的怪老子
 
 国民党三中全会，秘书长江苏人马树礼，把“三中全会的闭幕”发音成“三中全会的屄毛”；中常委贵州人谷正纲，把“国父遗嘱”都背不完，在宣读之际，忽然忘了下文。我笑猜这是死鬼汪精卫作怪之故。谷正纲以前跟汪精卫，而汪精卫是“国父遗嘱”的执笔人，如今在六十年后，开老谷一玩笑，大有可能也！（1986年4月8日）
 
-
-
 施启扬泄底
 
 华视午间新闻，施启扬招待记者，说高雄看守所新建，可收容两千人，建看守所是不得已的措施，但是为了使人犯可以平着睡，维持起码的人道，不得不尔。这话反证了人犯在没有新建看守所时是怎么睡觉的、怎么人道待遇的。施启扬今天这话一出，十足泄了底、十足反证了法务部的狱政的真面目。（1986年4月11日）
-
-
 
 扫把星看扫把星
 
@@ -783,13 +640,9 @@
 
 国民党这些败军之将，他们丢了大陆，十足是一群扫把星。如今在台湾不务正业，扫把星去看扫把星，真是无聊极矣！（1986年4月12日）
 
-
-
 计程车司机与李敖
 
 坐计程车，司机一声不响。下车后拒收车资，只说：“支持你，不收车资。”我强把车资留在座位上。这位司机先生真可记，他看出乘客是李某人，可是不说一句好奇的话，真是木讷近仁者矣。（1986年4月27日）
-
-
 
 外交部次长关镛的丑陋
 
@@ -809,19 +662,13 @@
 
 这一文件，一来可以看到国民党外交部高层人员的腐败，一来可以看到“敢怒不敢挺身的职员”的不平。（1986年5月1日）
 
-
-
 国民党的外交
 
 西方俗话说：“外交是用最好的方法，做出并说出最脏的事。”（Diplomacyistodoandsaythenastiestthinginthenicestway．）这种俗话，乃是洞彻外交通则而来。这种外交通则，传统的中国人并不太懂。传统的中国人，只懂得“万国衣冠拜冕流”、只懂得“夷狄进入中国则中国之”。但是中国人不懂得万一万国不肯拜冕旒或夷狄不肯进入中国则怎么办？光凭军队去打固不是办法；“怀柔”、“和亲”、“人质”、“驭夷”、“赏赐”。“片板不许入海”等等手段，有效的程度也不乐观。于是，中国人不得不慢慢练习正视这个中国以外的世界、慢慢调整与这个世界的关系、慢慢学着别人的样子，去用最好的方法，做出并说出一些事。这一转变，是中国从夷务进入外交的开始。可笑的是，今天国民党办外交，却一反其道，“用最‘坏’的方法，做出并说出最脏的事。”其水准不但不外交，甚至夷务都不如矣！（1986年5月1日）
 
-
-
 先烈家属下场
 
 午与王小痴谈。小痴说：“黄花岗七十二烈士，福建省十九人。最出名的是林觉民，他的孙子和我小学同学。意映我也见过。只知道抗战时全家饿死。在方声涛做福建省长时，这些烈士家属定下由省府供养的例子，后来国民党就不太履行，经常欠付，到了抗战，就中断了。”由此可见，同志无情如此，革命先烈尚可为哉？（1986年7月2日）
-
-
 
 党外助选下场
 
@@ -839,8 +686,6 @@
 
 从这封信里，可以看到尤清这种货色是何等志思负义、何等无趣无情——由此可见，同志无情如此，党外人土尚可为哉？（1986年9月9日）
 
-
-
 我就是神、吾就是高人
 
 七八月号《台湾文艺》第一〇一期有文抄公《天下文章一大抄》一文，中有一段说：
@@ -848,8 +693,6 @@
 李敖是台湾有名的独行侠，自许散文前三名均非他莫属，自他重返江湖以来，笔锋锐利，所向披靡，盖国民党固然头痛，党外亦难逃一劫，所谓自由派学者亦莫不敬而远之。文抄公一向为李大侠读者之一，看他猛抄中外名著，因李大侠史学训练有素，一向注解分明，因此，没有人胆敢说其为文抄公也。不过，李大侠抄党史、抄秘籍、抄美女屁股，冥冥中似有神助或高人指点，虽然武林高手均虎视眈眈，但是，多半只以查禁了事。
 
 这段话甚逗。我写文章，真希望“冥冥中似有神助或高人指点”，问题是何方神圣能助我呢？哪来高人来指点我呢？事实上，我就是神、吾就是高人也！（1986年9月9日）
-
-
 
 五十年前的批语
 
@@ -859,8 +702,6 @@
 
 这种批语，现代国民党官僚不会用也。（1986年9月9日）
 
-
-
 日历在我眼中全是黑字
 
 工作和消遣我根本没把它看做两件事，对我根本是一件。世俗把工作和消遣分成两件，并且认为有点对立，工作是苦、消遣是乐，我认为是大错。
@@ -869,37 +710,25 @@
 
 有人说星期天要消遣，但日历在我眼中全是黑字，我是工作狂啊！（1986年9月9日）
 
-
-
 台湾人与外省人
 
 我那样羞辱外省人、歧视外省人，外省人不介意；我那样羞辱台湾人、歧视台湾人，台湾人就吃不消了。这证明了：外省人比台湾人脸皮厚；或是外省人比台湾人有度量。（1986年9月16日）
-
-
 
 杨传广与一记耳光
 
 今天报上说：“亚洲铁人杨传广，今天决定‘以行动证明一切’，提前于明天返回台北，以澄清有关他的谣传。杨传广目前正以中华民国亚运考察团团员的身分，在韩国访问，原定10月6日随团返台。因为谣传他有意前往中国大陆，担任中共‘中国体委会副主任’。他决定提前返台，以行动澄清谣言。台湾驻韩国的邹坚，对杨传广以行动证明爱国的做法，表示赞扬与钦佩。邹坚今天下午曾与杨传广晤谈后告诉中央社记者，杨传广表示‘很不会讲话，不晓得要如何澄清’无谓的谣言。但对邹大使对他的信任，表示安慰。”这段消息，使我想起：杨传广这种提前返台的表态与急促，其实与当年他吃一记耳光有关。当年他参加亚运，由调查局派大将范子文押队，不料还是有选手开溜，投奔“奴役”去也！范子文乃紧急集合，大点其名。不料杨传广适不假外出，很久才姗姗而回，急得范子文迎上前去，伸手就是一记耳光！如今事隔多年，又发生这种嫌疑之事，杨传广想到那一记耳光，岂能不赶紧上道耶？（1986年9月26日）
 
-
-
 “贤”就“贤”吧！
 
 今天报载坐落在济南路上的立法院新盖大楼落成后，取名“群贤楼”，一年多来有关名称问题，时有争论。因为有的立委认为，自喻“贤”人，实有未妥。依我看来，这些立委毋乃太谦了。因为“中华民国”明明是蒋家天下的“中华帝国”，却自喻“民”国不误，立委老兄们“贤”它一下，又何必脸红哟！（1986年9月26日）
-
-
 
 捣乱七要件
 
 1936年2月27日，王正廷在厦门演说，题目是：“要如何去破坏一个团体？”方法有七：一、开会不到；二、每到必迟；三、到会不发言；四、散会后发不负责的批评；五、选举必争；六、争到手了又不负责；七、争不到手便宣告退会。这七点高招，前四点国民党最拿手；后四点党外最行家。（1986年10月7日）
 
-
-
 从麻将喻大
 
 记得包奕洪告诉我：台湾麻将打十六张，与大陆麻将打十三张的不同。大陆麻将不急于抢和牌（胡牌），可把牌尽量做好、做大，打起来有成就感、有大志；而台湾麻将却以“和屁和”（胡屁胡）为能事，尽量不放冲、格局小，打起来无成就感、没出息。麻将小事，可以喻大。（1986年10月7日）
-
-
 
 监狱与日记
 
@@ -909,31 +738,21 @@
 
 我在台湾很少写日记，因为广义来说，台湾就是一座大监狱，单调得很少值得一记。（1986年10月7日）
 
-
-
 献个哪门子花！
 
 先生们搞游行示威，示到后来，却由夫人们向警察大献其花，我真不明白这是哪一国的政治规格！比照起上一次搞清愿，请到后来，却与警察对唱起山歌来那一幕，今日之献花，自是顺理成章者也！但比照起1974年葡萄牙起事，小女童以花插在军方枪口上那一幕，则今日所谓党外献花派，真要羞愧而死矣！（1986年10月7日）
-
-
 
 来回带物法
 
 我是天下第一忙人。忙的情形，有“来回带物法”可见一斑。“来回带物法”是我自己摸索出来的方法，就是在家里，只要一走动身体，不论从书桌到餐桌，或是从这间房到那间房，来去之间，绝不空手，总要顺便带件资料，把相关的一切顺手归位。甚至小便时也此尿不白洒，一边小便，一边看马桶盖上的零星资料，顺手带回，即予分类入档。虽然这样勤勉，一天下来，总还觉得时间不够用，恨不能延寿半世纪，把永远做不完的事，再多做一些。（1986年10月12日）
 
-
-
 转话是不够的
 
 与龙律师谈多件讼案。龙律师转告：林正杰入狱前托郑胜助律师转告，说他如今已入狱，请李敖不要再告他了。我说他们诽谤我时，不可一世，固不知要入狱；我告他们诽谤时，也不知他要入狱，他今天入狱不入狱，根本跟我告他是两码事。不过他如认错道歉，我自然可以放他一马。换句话说，这事的关键在他肯不肯认错道歉，不在他入不入狱，两件不相干的事，不要扯在一起也。（1986年10月13日）
 
-
-
 工专长寿-台大短命
 
 台北工专今日庆祝建校七十五周年，显然是从日治时代创校起算的。但是台湾大学的建校算法却邪门得很。它明明建校在1928年（若从医学部起算，且可追溯到民国前十二年之台湾总督府医学校），却被拦腰剪断，硬从1945年抗战胜利接收台北帝国大学算起，真是太没道理了。比较起来，台北工专是小学校，反倒可以不被注意，得保前史。此所谓“校失求诸小”也。（1986年11月1日）
-
-
 
 出版《蒋介石研究》
 
@@ -941,57 +760,39 @@
 
 这些杂碎，不能成气候，此适为一例。他们内斗内行、外斗外行，他们对斗李敖的兴趣远超过斗蒋介石，这叫什么党外？（1986年11月3日）
 
-
-
 戒烟妙盒
 
 一个漫画，有戒烟妙盒（HOWTOSTOPSMOKING），打开一看，突然匕首飞出，顿将想戒烟的杀死，所谓一了百了、所谓根本解决，人心叵测，正此之谓也。
 
 国民党以纸烟公卖牟利几十年，最近被美国逼得手足无措，盖洋烟进口，由于物美价廉，公卖下场，势必如戒烟妙盒一般，也将一了百了、也将根本解决，天道好还、恶有恶报，正此之谓了。（1986年11月6日）
 
-
-
 “泪阑干”与“倚阑干”
 
 阑干在古典文学里有两个用法，一个是“泪阑干”的用法，一个是“倚闹干”的用法。前者的阑干是“纵横”的意思，所以蔡琰《胡筋十八拍》中说“岂知重得兮入长安，叹息欲绝兮泪阑干”，就是指泪流满面；后者的阑干是“栏杆”的意思，所以李白《清平调》中说“解释春风无限恨，沉香亭北倚阑干”，就是指倚栏寄怀。这两个用法本是分开的，如果有美人焉，要一边泪流满面一边倚栏寄怀，那就阑干又阑干，二合一矣。不过，这并不是什么好现象，虽然很诗意。但我看到一张裸女图，一洋美人也是倚栏，但却一派勾魂巧笑，全无泪痕，看后不由觉得“倚阑干”派实比“泪阑干”派更诗意。快乐就是诗意，我由此图得之。（1986年12月8日）
-
-
 
 “熊匪猫”问题
 
 从东京动物园的熊猫录影带中，看到这种可爱动物的动态画面，喜欢得不得了。最近中国共产党表示：如果台北动物园有意，他们可以赠送一对熊猫过来。共产党打这种“熊猫牌”，真不知国民党怎么接法。熊猫固然为“熊匪猫”，但在大陆中药公然由物资局进口之际，若说能拒熊猫于台湾海峡之外，实在无以自圆其说。好在国民党老下脸皮已久，总是那边该过来的不准过来，这边该出去的不准出去，结果那边从爹娘到熊猫，一概不准看；这边从老兵到李敖，一概不准走。年复一年演出的，是一派荒唐绝顶的政治戏，真他妈的王八蛋哉！（1986年12月8日）
 
-
-
 广告成问题吗？
 
 这次国民党当局和它“美国爸爸”订烟酒协议，五次谈判下来，丧权辱己，丢人之至。今天国民党《中央日报》登：“经济部高级官员指出，我在中美烟酒谈判的计价方面让步，是换取美国烟酒进口商的广告数量，这显示当局宁可收入减少，也不放弃保障人民健康的原则。”“这位官员承认：最初美方同意的公卖利益比现在协议的数字高；但是要求不能有广告方面的限制，我方担心在强力促销下，会使青少年吸烟人口大增，因此坚持不能大作广告，经反复磋商，双方各让一步。”云云，听来不胜好笑。查国民党禁刊李敖和党外书刊的广告，一声令下，各报纷纷拒登，既然行政命令如此方便，为什么不对“美国爸爸”来这么一招呢？何苦以“计价方面让步”，换取广告数量的减少呢？由此一事，可见国民党的本领全是“家里光棍”，一出了门，就被人揍得鼻青眼肿。古今汉奸政权多矣，但对内内行对外外行如国民党者，未之有也！（1986年12月9日）
-
-
 
 民进党绝非佳兆也
 
 唐朝玄武门之变，李世民的哥哥李建成、弟弟李元吉都被杀。唐高祖问左右意见，萧瑀、陈叔达说：“建成、元吉本不预义谋，又无功于天下。”无功如此，竟想夺权，自然招祸。今天的所谓民进党新贵，大都也是“不预义谋，又无功于天下”的党外投机者，这种人篡夺党外正统，一如当年蒋介石篡夺国民党正统，对党而言，绝非佳兆也。（1986年12月9日）
 
-
-
 我的悲剧
 
 我的悲剧是总想用一己之力，追回那浪漫的、仗义的、狂飙的、快行已意的古典美德与古典世界，但我似乎不知道，这种美德世界，如果能追回的话，还得有赖于环境与同志的配合，而20世纪的今天台湾，却显然奇缺这种环境与这种同志。环境对于我，活像爬座雪山，愈爬温度愈冷；同志对于我，活像三轮追汽车，愈追距离愈长。虽然如此，我自己却奋然前进，继续升高与加速，我不在乎做悲剧的角色。（1986年12月9日）
-
-
 
 只要前三名还算客气的呢！
 
 1979年6月，远景出版社沈登恩为我印《独白下的传统》。我在扉页里自我歌颂，说：“五十年来和五百年内，中国人写白话文的前三名是李敖，李敖，李敖，嘴巴上骂我吹牛的人，心里都为我供了牌位。”——这几句“复出题辞”，看过的人，震于气魄者固多，骂我吹牛者亦不少。殊不知《释常谈》中记谢灵运的话，比我还吹得凶。谢灵运说：“天下才一石，曹子建独占八斗，我独得一斗，天下共分一斗。”可见我只要前三名而已，谢灵运和曹植却要十分之九呢！（1987年2月6日）
 
-
-
 美国总统专瞒国务卿
 
 最近为伊朗秘密军售案，里根总统瞒着国务卿舒尔茨，全美为之震惊。其实美国总统私下瞒着国务卿办事，所在多有，尼克松总统进军入柬境，国务卿罗杰斯就被瞒着。人不知历史，故常大惊小怪也。（1987年2月6日）
-
-
 
 “知彼知己，量敌为计”
 
@@ -1001,13 +802,9 @@
 
 钱塘沈括真是读书得间者，中国历史上像他这样好头脑的读书人太少太少了。（1987年2月6日）
 
-
-
 抢夷齐与抢荷马
 
 伯夷、叔齐饿死在首阳山，首阳山在哪里？众说纷纭，但“后世好奇之士，争欲私之”（杨恩《首阳山辨》中语）。结果有的说首阳山在辽西、有的说在偃师、有的说在蒲坂、有的说在陇西、有的说在歧山之西，遂有五首阳之说。其实这种锦上添花式的附会，西方也一样。荷马死后，有七个城市“争欲私之”。海伍德（ThomasHeywood）说荷马生前在七城无片瓦（Sevencitieswarr'dforHomer,beingdead，／Who，living，hadnorooftoshroudhishead．）；苏厄德（ThomasSeward）说荷马生前在七城讨饭（SevenwealthytownscontendforHomerdead,/ThroughwhichthelivingHomerbegg'dhisbread.）。俗人对圣者前倨后恭，中外同例也。（1987年2月6日）
-
-
 
 警备总司令大发雷霆
 
@@ -1015,43 +812,29 @@
 
 又有消息：警总书刊审查负责人约假党外□姓小人吃饭，指示如何批斗李敖与党外云云。（1987年2月19日）
 
-
-
 法律延宕也别有好处
 
 哈姆雷特（Hamlet）把“法律的延宕”（thelaw’sdelay）列为人生苦痛之一，但对我说来，却觉得延宕之中，也别有一种凌迟敌人的战斗风味。洋人谚语说：“Sowthewindandreapthewhirlwind．”（恶有加倍恶报；恶事之报，果大于因，为恶者终食更恶之果。）看到在延宕中，敌人一个个遭到加倍恶报，不亦快哉！（1987年3月8日）
-
-
 
 动武不够看
 
 这个岛上的一切都不够看，即使在议会动武亦复如此。议会中偶有一点动武场面，大家就大惊小怪、一再称道、喊万岁，其实那又算什么！看看北洋时代的议员吧，北洋时代的议员，为了指斥议长任期已满、要改选，动武的程度，是痰盂与墨盒齐飞，拳打共脚踢一色，绝不像国民党和它的民进党这样小场面。总之，这岛上多是没见过市面的，大家引为洋洋自得者，其实都是无知自大耳！（1987年3月8日）
 
-
-
 望风
 
 侯赢望风刎颈，报知己也；李陵望风怀想，念知己也。望风是一种浩瀚的心境。侯赢出了险棋给信陵君下，在信陵君奔赴前线的时候，七十岁的侯赢说我太老了，不能共患难，但是算计你们到达前线的时候，我“北乡自刭，以送公子”（面向北方，以自杀来答谢你，给你送行）。侯赢这种奇人奇事，千载之下读之，犹令人震撼不已，这种隐士，真是隐而不退的大豪杰啊！（1987年3月9日）
-
-
 
 一榻内外
 
 胡虚一先生算是“大有为政府”肯照料的老退伍军人之一，前些日子他被恩准有终老之所，他兴致冲冲，跑去一看，原来终老之所竟是一间房中许多榻榻米中的一块榻榻米！国民党如此待遇大陆老兵，真堪令人痛恨！宋人笔记《邵氏闻见录》记宋太祖冒风雪夜访赵普，说：“吾睡不着，一榻之外，皆他人家也。”宋太祖的意思是敌国末灭、天下犹非我所有之意，如今天下非国民党所有，所以一榻之内，即他人家矣！（1987年4月13日）
 
-
-
 死后走运与死后发财
 
 美联社伦敦3月31日电讯说：“印象派大师梵高一生穷苦潦倒，他的名画《向日葵》，生前连125美元也卖不出，结果30日在克里斯蒂（Christies）拍卖公司竟以有史以来最高的价格卖出。一位匿名买主采电话竞标，以3985万美元的高价买下，创下了画作拍卖的新纪录。”按这天拍卖之日，正是梵高134岁冥诞。此公生前潦倒，死后走运，他做梦也没想到，在他134岁生日之日，竟可这样为人大发死后财也！（1987年4月13日）
 
-
-
 旅美六人电话
 
 下午会云、黄三、继梅、以棋、绪华、Leslie六位，从休斯顿来电。黄三说：“殷海光生前对我说：‘我不要死，我要睁着眼睛看他们如何收场。’可是殷海光死了，我们可要活着看收场啊！”（1987年4月26日）
-
-
 
 掐死“伪”文星
 
@@ -1065,8 +848,6 @@
 
 但林建星期天晚上并未留字，我知彼等反复，今早电告他，我不等了，大家各显神通可也。电话后我即写了给台北市政府新闻处唐处长的信，打字后亲去市政府一遭，唐处长不在，见到赵科长，请他注意，他说他一直注意，我遂告辞。掏死萧孟能的“伪”文星，是我第一道神通，此后他的苦头，还有得吃呢！（1987年4月27日）
 
-
-
 只准家祭，不准奔丧
 
 今天《新生报》登：
@@ -1079,105 +860,71 @@
 
 呜呼，国民党的德政！（1987年5月1日）
 
-
-
 吴越潮死了
 
 今天《新生报》登洛杉矾4日专电：“立法委员吴越潮今天因心脏病病逝此间寓所，享年七十三岁。吴越潮毕业于北京大学，曾任黑龙江省政府财政厅长、中华民国财政学会理事长、中国租税研究会理事长等职。”
 
 吴越潮在萧孟能诬告我的案中，曾力持正义，责备萧孟能，并请王铁汉出面力劝胡星妈胡茵梦母女不可胡来伪证。此公在公事上虽然属于无言派立委，在私谊上却比其他东北同乡立委热心助人，比起梁肃戎、费希平之冷血作秀派，高明多多矣！（1987年5月6日）
 
-
-
 萧郎的无奈
 
 小蕾电李放，说陆啸钊去探监会萧孟能，啸钊说你跟李敖是多年老友，如今李敖坚持你道歉才不追究你诬告他的官司，我看你就道个歉吧。孟能面露无奈之色，说：“我愿意道歉，你去问问剑芬吧。”王剑芬竟有如此女权，我听了，一直忍不住笑。（1987年5月6日）
-
-
 
 “没有人敢告他”
 
 今天上午在地院十七庭开控司马文武等八人庭。司马文武说李敖写文章也有骂人的话，推事黄德贤说：“那是另一回事，别人可以告他，与本案无关啊。”司马文武说：“可是，没有人敢告他。”（1987年5月7日）
 
-
-
 同样货色的党、同样货色的骑
 
 国民党是中国人，它都要骑在自己人民头上；台湾人即使不是中国人，它不朝自己人民的头上骑吗？独立了又怎样？看到目前这些政治杂碎的嘴脸，可以断言的是：他们骑自己人民的作风，跟国民党别无二致，他们是同样货色啊！（1987年8月11日）
-
-
 
 追加的眼泪
 
 小女生拔牙回来，告诉我说，她在牙医那儿，看到一个小男孩拔牙后好一阵，突然哭了，医生问他是不是疼？他说现在不疼了，可是刚才拔牙时好疼。人能把眼泪这样追加，真是有趣。（1987年8月25日）
 
-
-
 “敌无分生死”
 
 当年蒋介石在庐山谈话时，说“如果战瑞一开，那就地无分南北，人无分老幼”，都要迎战。如今我却以为，要再加上“敌无分生死”，才能更尽此义。例如我对蒋氏父子，便是如此。对死者鞭尸、对生者追击，这才是复仇者的公理啊！（1987年9月23日）
-
-
 
 从“李敖死了”到“蒋经国死了”
 
 在所谓党外人土、所谓民进党员印行“李敖死了”谤书的时候，在所谓无党无派独立经营的国民党同路人刊出“李敖死了”广告大为宣传的时候、我却夷然出版“蒋经国死了”（《蒋经国研究》）的书。谁的境界高、谁的胆量大、谁的枪口真正对外，明眼人一看便知矣！（1987年9月23日）
 
-
-
 小偷的逻辑
 
 王小痴告人盗印他的文章成书，被告当庭陈述，反倒责怪王小痴说：“原告方面太不体谅人了，他不知道我们印这些书，半夜里搬来搬去多辛苦！”云云。所有小偷都是半夜不能睡觉，出门辛苦的，这样说来，他们不但没罪，还该慰劳呢！（1988年3月4日）
-
-
 
 被告的逻辑
 
 我告康宁祥等诽谤案，被告之一王杏庆（南方朔）当庭陈述，说他们八名被告要一再出庭，出得好累，他们才是被害人云云。这样说来，他们也该慰劳呢！这种人有工夫诽谤人，却没工夫出庭，可真怪哉！（1988年3月5日）
 
-
-
 斥公关（公共关系）
 
 一切要靠“拉关系”、要靠人际关系好才能办事的现象，是可耻的！因为它把“人情”高过“是非”，又违反公平原则。中国人最犯此病。结果人的精神、时间都花在做公关、交朋友、拍肩捏臂、酒食征逐上面，一切都讲关系才能过关了，这成什么话啊！（1988年3月5日）
-
-
 
 要吓一千年后的人一跳
 
 中国小姐选拔，由名女人崔苔菁等担任评判，其结果必选出丑女无疑，以崔苔菁等雅不欲有美人出其头地也！最后选出胡翡翠来，在环球小姐选拔会上果然不堪一竞，被各国佳丽比得大惊失色，连前十名皆未入围、连“地主国”保障名额都无可救也！最妙的，事后记者问她：“若要在地下埋一个千年后才被世人发现的物品，想埋什么？”胡翡翠说：“我的照片。”可见这位女士雄心不小——她的尊容，不但今天吓了中外人士一跳，还要吓一千年后的人一跳！人之不自知也，由此可鉴。（1988年5月25日）
 
-
-
 双料不懂
 
 陈鼓应讲尼采，不懂德文；讲庄子，不懂古文，却在大陆冒充学者，真替台湾丢人也！（1988年5月30日）
-
-
 
 海外自由学人的嘴脸
 
 所谓海外自由学人，其实正是国民党不给人自由的人证。试看国民党一再不准丘垂亮等人入境，他们一再受挫受辱，却在海外“感皇恩”不绝，以便再获入境作秀。这种知识分子既无聊又无脊梁，连自己所受的不自由待遇，都不敢奋起抗争，若叫他们为苦难同胞奋起抗争，岂可得乎？随手翻看RalphBuchsbaumAnlmalsWithoutBackbones，我想作者若晚五十年再写这部书，一定为所谓海外自由学人加一章矣！（1988年6月7日）
 
-
-
 末
 
 “末”是中国传统的戏剧脚色名目，一般演中年以上男子。元曲中本以“末”与“旦”为当场正角，到了传奇至昆曲，又以“生”“旦”对立为正角，但以“末”开场。所以从字面上看，“末”像收尾，但其作用，又是开场。末代皇帝溥仪这个人，是中国帝王之“末”，但又何尝不是中国平民之“末”？此人的象征意义，真是古之所无、今之绝有。他从帝王转为囚犯、再从囚犯转为平民的过程，最富传奇性。研究这一个人，无异研究了最好的取样，他是人类浮沉对比最强烈的缩影。（1988年6月7日）
-
-
 
 左拉与我
 
 我是随时随地利用零碎时间的，今天刮脸时想起：我为张学良、孙立人辩冤白谤，其实和左拉（EmileZola）写《我控诉》（J’accuse）又有什么不同？我为所谓张学良、孙立人叛国事件辩冤白谤，其实无异左拉为所谓德雷夫斯事件（TheDreyfusAffair）辩冤白谤一样。整天所做的，是把右派朝左拉而已。（1988年11月26日）
 
-
-
 极权国家的言论尺度
 
 极权国家的言论尺度不是一个，而是两个。一个是官方允许的尽度，一个是因恐惧官方而自我设限的尺度，后者其实比前者还严。前者的尺度是“剃刀”，后者的尺度是“剃刀边缘”，为了跟剃刀保持一点安全距离，所以不能紧逼边缘，而要留点空间。这一空间，就使上限更下降了。按说言论的尺度是要愈来愈突破它的，可是国民党极权下的知识分子没胆量，却愈来愈躲开它，结果“君子自量”的自我设限，比官方允许的极限还要低，官方高枕大乐矣！（1988年11月26日）
-
-
 
 孙立人种种
 
@@ -1187,38 +934,24 @@
 
 潘德辉说昨天报上的孙立人启事是张佛千这些别有用心的人代拟的。我说胡秋原做立法委员，三十多年来没为孙将军讲过一句话，如今跑去祝一下寿，就被感谢，这置为孙将军恢复自由尽力的李文邦以及民进党员于何地？这对李文邦。民进党员是不公平的。潘德辉说这次祝寿活动，有关方面如临大敌，整个祝寿活动自然会被利用也。（1988年11月30日）
 
-
-
 从以文会友到以舞入党
 
 今天晚报登：三千多位北区大专院校学生，昨晚11点到今天凌晨5点，聚集在北一女中活动中心，狂热地度过一个热力奔放兼感性的“跨年夜”，其中一千余名学生，在国民党中央委员会秘书长李焕监誓下，宣誓加入中国国民党。当节目进行到凌晨12点正前十秒，全场开始倒数，跟着时光狂热地跌入1989年，会场放出烟火、气球，学生们尖叫、嘶喊，场内忙着踩气球，就连李焕等人也忙着抱住空飘下来的气球，与学生们玩得不亦乐乎。
 
 古人以文会友，今人则以舞入党，国民党入党仪式一直是庄严的、神秘的，如今却不择手段一至于此，真可悲也！（1989年1月1日）
 
-
-
 如此学者教授
 
 陈宏正又来向我借资料。我说：“你一再找我提供资料，你到底借给谁呀？”他说：“是张忠栋托我借的。”我说：“这些学者教授们，他们自己没有本领，却老是靠我们。学者教授是这样成名的吗？”（1989年1月18日）
-
-
 
 非法当选的首届国代
 
 本月9日，张俊宏、许荣淑请晚饭。许荣淑助理吕金霙问国大选举内幕资料，我说可查《国民大会实录》，并“指示”她哪里可以找到。十天后见报，知道张俊宏主持的台湾政治经济研究室公布报告，共计有四〇九名老国代是非法当选的。报告指出至少有三大疑点：一、当年选举时全国已有七百零二个县市（包括蒙古七盟旗在内）沦陷匪区，其选举系由设在各地的“绥靖公署”负责登记该沦陷区的难民，而由难民互选，各地“绥靖公署”登记的难民多则数百人，少则仅五六人，但也能选出代表其原籍的“中央民代”。据调査，至少有八百零六位国代属于这种“难民民代”或“旅客民代”；二、由国民党与民社党、青年党协商造成“保障当选”、“定量分配”、“各自伪造”的恶例，也迫使许多高票当选人“退让”给落选人，而造成许多荒唐的选举纠纷；三、1986年，内政部说国大代表递补为三百九十人，国民大会实录记载四百零一人，中华民国实录记载为四百九十八人，合法递补人数到底有多少？张俊宏毕竟是细腻的人，他处理问题，比其他民进党员用心多了。其他民进党员多是毛糙之徒，不读书的。（1989年1月19日）
 
-
-
-
 日久见人心
 
 荣文请晚饭，谈到出版甘苦，谈到柏杨不守每月交稿一册的约定。我对席上陈宏正、苏荣泉说：“王荣文与柏杨接触得愈久，愈发现李敖多么好。”王荣文听了，为之苦笑。（1989年2月23日）
 
-
-
 裸画与自由
 
 北京举行大规模的人体油画展了，一张门票二元，是平均每日工资的一半，一个星期天，就有一万五千人去参观；一本画册四十元，是平均每月工资的三分之一，一下子就销售一空。两年前，大陆国家出版署通知各出版机构，说有三个题材尽可能不予出版：一是有关“反右”的；二是有关“文革”的；三是有关“性”的，可见中共对“性”忌讳之深。事实上，“性”的开放是争取自由的一种前奏，而裸体艺术又是“性”的开放的张本。一般浅人不知道此中奥妙，徒以假道学与真教条钳制有关“性”的一切，真笨蛋哉！（1989年2月27日）
-
-
-
