--- a/06.沉思日记类/李敖秘藏日记.md
+++ b/06.沉思日记类/李敖秘藏日记.md
@@ -1,4 +1,8 @@
-#《李敖秘藏日记》目录
+# 李敖秘藏日记
+
+<!-- toc -->
+
+## 目录
 
 * 一、软禁残记
 * 二、金兰琐碎
@@ -19,9 +23,7 @@
 * 十七、李登辉对谁而发
 * 十八、陈履安的房事问题
 
-
-
-##软禁残记
+## 软禁残记
 
 1970年1月里，彭明敏在被国民党全天候软禁下，神秘偷渡到瑞典，并取得政治庇护。消息传来，国民党立刻把我软禁，不分日夜，由专车一辆、专人若干，对我紧迫盯人起来。这一紧迫盯人，先由警察单位派人，后由警总单位接力，前后“跟监”（跟踪监视）了我十四个月，直到我在1971年3月19日被捕为止。
 
@@ -281,7 +283,7 @@
 
 三、夜1点，楼下三人行。汽车、摩托车俱全。
 
-四、夜1点25分，我先warm	up车，他们也跟着热起车来。
+四、夜1点25分，我先warm up车，他们也跟着热起车来。
 
 2月14日星期六
 
@@ -565,9 +567,7 @@
 
 彭明敏的太太上
 
-
-
-##金兰琐碎
+## 金兰琐碎
 
 ——1978年札记
 
@@ -1115,9 +1115,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 （以上《金兰琐碎》，最和我隐居生活有关，可以看出我隐居的基础。在第二年6月我复出之前，我已有五个半月没下楼的纪录了。如今我五十闭关，所以能过得得心应手，和我那时的隐居训练，实有关系。这种成长的痕迹，在《金兰琐碎》中可以看到不少。1985年6月6日，李敖附记。）
 
-
-
-##杂评鲁迅和他孙子
+## 杂评鲁迅和他孙子
 
 ——1982年9月23日的日记
 
@@ -1165,9 +1163,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 1982年9月23日
 
-
-
-##5月26的日记
+## 5月26的日记
 
 ——1983年
 
@@ -1203,9 +1199,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 夜做工到11点。
 
-
-
-##“黑军师”手记
+## “黑军师”手记
 
 ——1983年9月9日3记
 
@@ -1239,9 +1233,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 9日开的这次会，自然是对10日开的“党外后援会”的当头棒喝。10日的会中，逼使康宁祥“对簿公庭”，最后使这种政客败绩，联谊会的作用莫大焉。自“党外后援会”以来，林亚卿的默默推动、郑南榕的独力作战、邓维贤的力持大义、林正杰的以会制会、林世煜的安定全局。……他们的功劳或明或晦，都是不可忘记的。正杰说老康谈话中暗示一切乃出自李敖之操纵，其实政客失人心、犯众怒，自然会被群起而攻，又何待乎“黑军师”操纵也哉？（1983年9月13日补记）
 
-
-
-##独游“太原五百完人成仁招魂冢”
+## 独游“太原五百完人成仁招魂冢”
 
 ——1984年5月12日日记
 
@@ -1261,9 +1253,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 今天到台湾的国民党，他们以“归骨于田横之岛”自许，但田横不田横，又谁知道？只知道他们能有今日，是拜他们的先烈与“活先烈”卖命之赐；正因有“活先烈”之断后、有亲密战友在掩护他们撤退到台湾，他们才有今天。如今国民党喘息已定，对“活先烈”们却无情丑诋、不准归队、不准骨肉团聚，实在太不忠厚了。国民党的无情，可真叫人心寒呀！（1984年6月7日）
 
-
-
-##“统战”也要选择对象的
+## “统战”也要选择对象的
 
 ——1984年7月20日日记
 
@@ -1277,9 +1267,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 我劝章义辞去大学教授职务，我说今天在台湾不被解聘，你在大学教书，就反证你一定有某种程度的同流合污。为了保持自己的快意与清白，还是趁早做摔饭碗的准备，台湾三十多年来，总该有一个大学教授主动辞职以为抗议啊！
 
-
-
-##代曹禺驳夏志清
+## 代曹禺驳夏志清
 
 ——1985年1月16日日记
 
@@ -1323,9 +1311,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 呜呼！国民党的同路人！
 
-
-
-##1月的日记
+## 1月的日记
 
 ——1985年
 
@@ -1581,9 +1567,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 夜接筱峰限时信。
 
-
-
-##2月的日记
+## 2月的日记
 
 ——1985年
 
@@ -1927,9 +1911,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 与兆基晚饭。
 
-
-
-##3月的日记
+## 3月的日记
 
 ——1985年
 
@@ -2257,9 +2239,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 三姐夫自美来，十五六年不见了，畅叙家国事，至夜深3时。
 
-
-
-##4月的日记
+## 4月的日记
 
 ——1985年
 
@@ -2645,9 +2625,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 “千秋”四十三查禁令如下：“由台北市信义路天元图书公司代理发行之《千秋评论丛书》四十三《五十-五十-易》一书之下册，其中之《从杀人灭口到抓人脱罪》一文，原刊《发扬》周刊，经明令查禁，今该书又予刊载散布，以淆乱视听，挑拨政府与人民情感，核已违反台湾地区戒严时期出版物管制办法第三条六、七款之规定，依同法第八条，应扣押其出版物。”
 
-
-
-##欲看湖光不自由
+## 欲看湖光不自由
 
 ——1986年2月5日到6日
 
@@ -2715,9 +2693,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 “他的成就应该比现在更高。”（1980年2月24日）
 
-
-
-##夺魄的代价
+## 夺魄的代价
 
 ——1986年6月2日的日记
 
@@ -2759,9 +2735,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 “忠烈图”中的南榕被捕后，我这一天“身靡余劳，心有常闲”，一切都看得轻松，原因就在这是我们这种“放火的”所必须付的代价。南榕《自由时代系列》杂志二周年时，我曾写“你叫我的魂，我夺你的魄”，如今南榕要付夺魄的代价，岂非当然乎？
 
-
-
-##垦丁随记
+## 垦丁随记
 
 9月13日夜9时，三百五十二页的“千秋评论”第五十九、六十期完稿。11时50分，坐莒光号夜车南下。车上众人皆睡，唯我独醒，一直校反国民党的书稿，到天亮时，只小寐二小时。7点40再转车赴恒春，约二小时到。再花一百元抵垦丁凯撒大饭店。
 
@@ -2811,9 +2785,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 1986年9月13-14日
 
-
-
-##江述凡来电
+## 江述凡来电
 
 江述凡来电说我这次拍卖，孙中山一幅，中央党部放话下来，说该幅不得落入外人之手，结果国民党失算，因而诬指该字为赝品以掩其失。
 
@@ -2827,9 +2799,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 1995年3月22日
 
-
-
-##李登辉对谁而发
+## 李登辉对谁而发
 
 坊间《时代杂志》第一八五期（5月6日出版）首有曾瑞钦《看“诚信”、“双重国籍”惨跌并谈警察“跌停”》一文，其中说：
 
@@ -2851,9 +2821,7 @@ Fiction实比Non-fiction好写（12月19日）
 
 1995年5月4日
 
-
-
-##陈履安的房事问题
+## 陈履安的房事问题
 
 1998年2月28日《中央日报》登载：
 
@@ -2870,6 +2838,3 @@ Fiction实比Non-fiction好写（12月19日）
 午饭时我告诉清峰《中央日报》登陈履安事。饭后我传给她，她转给陈履安。陈履安来电解释，说是他丈母娘为他小孩买的。并说自己舍了，并不等于不为小孩置产。
 
 1998年3月2日
-
-
-
