--- a/06.沉思日记类/李敖随写录前集.md
+++ b/06.沉思日记类/李敖随写录前集.md
@@ -1,4 +1,8 @@
-#《李敖随写录前集》目录
+# 李敖随写录前集
+
+<!-- toc -->
+
+## 目录
 
 * 《李敖随写录前集》自序
 * 一、凡例
@@ -183,9 +187,7 @@
 * 一八〇、李镇源的可鄙
 * 一八一、刘捷与《黑龙江百科全书》
 
-
-
-自序
+## 自序
 
 1990年冬天，有陌生人由海王印刷厂张坤山老大哥之介，携资要与我办报，遂有1991年《求是报》的2月早产和8月早夭。《求是报》夭折后，我在11月改办《李敖求是评论杂志》以善其后，在发刊词中，我声明说：
 
@@ -197,15 +199,11 @@
 
 文性大发，任性不已，索性成序，以告读者。
 
-
-
-凡例
+## 凡例
 
 两个月来，《北京法源寺》出版、《求是报》结束，使我的“天路”今后展开新的“历程”。我发愿要集中主力，继《北京法源寺》之后，一一完成我此生想写的大书。其中最重要的是《北京法源寺》以外的几部重要小说，以及非小说的《中国思想史》等书。这些大书，是我余生生命贯注的主力。至于大书以外的，只算杂书，只是拾遗性的、备忘性的、笔记性的、杂感性的、弃之可惜性的。写它们，不可“喧宾夺主”、也不要占太多时间，随手写之可也。（1991年9月1日）
 
-
-
-野柳望远
+## 野柳望远
 
 台湾岛上风景区，一来以其游人脏乱、二来以其加工太丑（凡是人工加做的，无一不丑，已毫无艺术水准可言也。近年来，且流行一种水泥做的伪树干，看来要命已极！），以致使我游兴阑珊，哪儿都不想去。
 
@@ -225,13 +223,9 @@
 
 为强迫游客购物，游野柳者，竟遭遇正门以铁栅墙围住的怪现象，游客除越墙而入外，只好先走入狭窄腥臭之市场，才得购票入门。——民进党尤清做台北县长，其德政究与国民党何以异？（1991年9月1日）
 
-
-
-不上电视了
+## 不上电视了
 
 全能制作公司吴永佳约上华视张小燕、阳帆节目，谢绝之。目前已谢绝上中视《女人女人》九十九次播出特别节目。并谢绝东海大学邀演讲。（1991年9月2日）
-
-
 
 酷吏李元簇居然也想说笑话！
 
@@ -239,13 +233,9 @@
 
 酷吏李元簇也想说笑说，这才是大笑话！（1991年9月2日）
 
-
-
 陈彦增夫妇大陆归来
 
 陈彦增夫妇述上月游黄山，自南京以一百三十元美金搭计程车，九小时后抵黄山。西湖胜景受“文革”破坏，新修的假古迹不少。彦增说苏小小墓已被秋瑾墓移居其上，我断言其说不确。（1991年9月2日）
-
-
 
 马英九咬指甲
 
@@ -255,13 +245,9 @@
 
 我从没见过马英九。但我从纸上作业，观察入微。前几天我向基竣说：你整天研究苏联，你知道叶利钦乃“八指头陀”吗？他说他从不知道叶利钦只有八个指头，你怎么知道，我说我知道的可多了。（1991年9月2日）
 
-
-
 《卧窗惊魂》
 
 看据安妮霍尔登（AnneHolden）小说拍成电影的《卧窗惊魂》（TheBedroomWindow）录影带，写通奸后，女方隔窗目击凶案，因怕奸情外泄，乃由男方出面说他目击，作证欲绳凶手于法。不料对方律师问出破绽，为了有正义感，却几以被当做凶手及伪证者追诉的窘局。（1991年9月3日）
-
-
 
 《人民日报》论要不要改革的问题
 
@@ -273,8 +259,6 @@
 
 以上《人民日报》立论，可以看出中共在苏联巨变下的态度。（1991年9月4日）
 
-
-
 江西发现晋代大型砖室墓
 
 香港中国通讯社南昌9月2日电：一座晋代藻井大型砖室土墩墓，最近在江西省吉水县城郊发现。
@@ -283,21 +267,15 @@
 
 考古专家称，该墓平面结构形似汉晋时期大地主庄园的楼阁，左右两侧藻井式穹隆顶，是大地主庄园“鸟堡”式四角碉楼的写照。其规模大于江苏宜兴晋大将军周处墓。正方形回廊结构，不仅江西从未见过，在中国也为罕见。（1991年9月4日）
 
-
-
 与周渝逛古董店
 
 周渝约午饭。饭后同走到光华等商场逛古董店。以三千五百元买到百年前玳瑁眼镜一副，颇为难得。
 
 我跟周渝说，今天在台湾玩古董的，都不读或不能读古书，这又如何能懂古董？（1991年9月4日）
 
-
-
 傅朝枢来台
 
 请基峻、鑫生晚饭。我说傅朝枢连日电话，我都躲开了。这位老兄来台湾虽对老友李敖热情澎湃，但是跟达官贵人扯个不停，我要躲之矣！（1991年9月5日）
-
-
 
 傅朝枢来寓
 
@@ -305,23 +283,17 @@
 
 他说他向国民党当权派表示：你们大错在做了江南，结果反成全了他；但更大错在惹了李敖。李敖以一人敌一党敌一“国”，你们惹了他，大错特错。（1991年9月6日）
 
-
-
 陈又亮过台
 
 又亮昨晚抵北。午后同去野柳，小屯海边捞鱼蟹，我和又亮爬山到灯塔。又亮知识广博，边走边谈水成岩等。他经亚利桑那州，为我买到一块化石木，一亿六千万年。
 
 又亮在美做教授，现已51岁。在台大第一宿舍与我同住第四室时，才17岁。（1991年9月7日）
 
-
-
 五佛斩魔也上街头
 
 由民进党等团体及蔡同荣等主办的“公民投票进入联合国”游行，昨日下午除了政治诉求外，队伍中还有“车鼓阵”、“牛犁阵”、“佛祖降白鹰”等。据《中国时报》报道：“万佛会龙泉山寺的密宗教友身着黄色僧袍，头戴斗笠成为队伍里的醒目标志。还有戴着狰狞面具的黑魔、白魔沿途叫嚣及五名戴着佛祖面具的教友随行演出，象征着‘除魔斩妖’。”“在游行队伍中，龙泉山寺的教友以其特殊装扮吸引众人注目，并散发‘为台湾尊严而战，佛教徒不缺席’的传单；此外并演出‘宗教实验剧’，由戴着黑魔、白魔面具的教友，在锣鼓声中叫嚣，象征‘黑色恐怖’与‘白色恐怖’。而五名戴着‘佛祖’面具的教友一排随行，代表‘五智’，帮助世人辨淸是非，排除妖魔。”
 
 民进党的格调，一至于此！（1991年9月8日）
-
-
 
 台湾到处是书法家，真不知其丑也！
 
@@ -330,8 +302,6 @@
 孙法民老而不自知，竟以连账房先生都不如的鬼毛笔字献宝，真不知其丑也！
 
 报上又宣传“王愷和九十书法展”说“先后从其学习者逾三千人”，其实这王老头和孙老头一样，毫无才气，如何能成书法家！台湾到处是书法家，真不知其丑也！（1991年9月9日）
-
-
 
 大陆法学家分析台湾“审理”大陆渔民的法律漏洞
 
@@ -349,21 +319,15 @@
 
 以上法律见解，都不错。国民党在台湾演法律戏，益增其丑耳！（1991年9月9日）
 
-
-
 追究停刊责任
 
 “伍总”自美返台，下午来谈两小时，我举出证据，证明彼方在《求是报》合作过程中背诺毁信乱来胡搞之行径。他为之太息，并说X先生搞家族企业、反为其家族所累，以至祸延《求是报》。
 
 我要求赔偿损失。（1991年9月10日）
 
-
-
 报纸停了以后
 
 《求是报》停刊，各界慰问不绝。公司方面今日留话：洪范书局孙小姐：“《求是报》停刊，我们都很难过。”其实我不但不难过，还达观得很。（1991年9月10日）
-
-
 
 订报余款冲抵毛笔字
 
@@ -393,21 +357,15 @@
 
 1991年9月11日
 
-
-
 保护洋人“智慧财产权”？
 
 大苹果股份有限公司柯金珠来商代理合约，她淡大中文系毕业，甚聪敏。我送她《海盗万岁》一册，表示我在商业观点上赞成保护洋人“智慧财产权”，但在公义上和知识传布上，却有意见。
 
 我说丹青图书公司的杜洁祥在《大英百科全书》上打倒中华书局的熊钝生，我幕后支持，杜洁祥在公义上和知识传布上宁坐牢也不让洋人一鱼两吃，是完全站得住的义举。（1991年9月11日）
 
-
-
 不与美女共舞
 
 《中国男人》社赖灿德约参加中国小姐选拔会的酒会与舞会，美女三十多位云云，我说我不跳舞，我也从不参加婚丧喜庆。（1991年9月11日）
-
-
 
 女同性恋者拆伙付代价
 
@@ -416,8 +374,6 @@
 这是纳芙拉蒂诺娃和茱蒂从今年4月决裂后首次面对面，茱蒂控告纳芙拉蒂诺娃违约，没有按照协议，将总值约五百万到九百万美元的财产分她一半。
 
 现年已四十五岁的茱蒂尼尔森，以前曾是选美皇后，与纳芙拉蒂诺娃共同居了七年，4月分手之后，于6月诉诸法律要分财产。（1991年9月11日）
-
-
 
 龚忠武来
 
@@ -435,8 +391,6 @@
 
 六、水灾一事，证明西方口口声声人权人权，对真正中国人生死交关，反置而不问。（1991年9月11日）
 
-
-
 蒙古总统退出共产党
 
 路透社乌兰巴托10日电：蒙古总统奥其尔巴特与数名蒙古高级官员，今天依法退出蒙古共产党。
@@ -451,15 +405,11 @@
 
 不知李登辉何时退出“国民党”也。（1991年9月11日）
 
-
-
 蒋家奴才的家家酒
 
 中新社北京9月10日电：10日上午，“中共中央总书记、中央军委主席江泽民，国家主席、中央军委第一副主席杨尚昆和国务院总理李鹏等在华北某地，检阅了北京军区军事训练成果演练。”“参加这次演练的有北京军区所属炮兵、工程兵、装甲兵、通信兵、防化兵、航空兵等十几个兵种上百个专业的部队。长城脚下，铁马驰骋，炮声轰鸣，大地颤抖，火光冲天，十分壮观。”
 
 海峡这边，李登辉等蒋家奴才也展开演习，办家家酒耳！（1991年9月12日）
-
-
 
 体检中饯基峻行
 
@@ -469,23 +419,17 @@
 
 我笑在美友人，一离婚，前半生努力全部付之前妻，一切都得从头再来，但多已时不我与。基峻见报说撒切尔夫人说日本经济力强与离婚率低有关，我说日本鬼子离婚率低，在于日本女人争婚姻稳定而不争权，其智在欧美婆子之上也。（1991年9月13日）
 
-
-
 被告王纪五死矣！
 
 今日《中央日报》，我之被告王纪五死矣！前几天傍晚碰到张忠琳，她还向我介绍其子王敬毅。从讣文上得知，另一被告王秋华原来是老处女。
 
 卖国者王世杰儿子只有两个，如今全死矣！（1991年9月14日）
 
-
-
 国家到底为何？
 
 政治学上说国家构成的要项：“领土”也、“人民”也、“政府”也、“主权”也，列举备至，但我总觉得漏列了最被忽视的一项，就是“那一群结党营私的坏人”。真正国家的运作，其实全在这群人手里，他们实际作恶，却以“国家”、“政府”等抽象招牌行之，以“国家”、“政府”等抽象盾牌挡之，而使世人、国人不察，也从而以“国家”、“政府”等为对象服从之、效忠之、献身之、评论之、岂不上当也耶？
 
 英文中“国家”（state）一词，观念始于16世纪马基维利（Machiavelli）之首创，但马基维利时的国家观念、就比现代构成的要项少，例如缺一定领土观念、也缺现代主权观念等。可见古人比今人还实亊求是得多，古人比较能单刀直入，扣紧真正关键在君臣臣民人际上的“恶”，反不易为幻象所欺也。（1991年9月14日）
-
-
 
 与维桢谈
 
@@ -495,21 +439,15 @@
 
 维桢说有人说《北京法源寺》不及高阳小说。我说高阳小说有何思想？——以高阳小说尺度看《北京法源寺》，真太侮辱我的书了。这种水平的读者，也配谈我的书么？（1991年9月14日）
 
-
-
 如此“国军”！
 
 下午去正中书局买风渍书，与帅哥归。帅哥说在马祖服役时，国造65步枪（仿美制M16）一发后即故障，美造枪全连不过数枝，每次上级检阅，只好向各连调借。军备如此作伪自欺，国民党部队能作战乎？（1991年9月14日）
-
-
 
 看海
 
 下午小屯开车，去关渡、八里看海。
 
 海应该带给人浩瀚的胸襟，但是台湾岛上的人却殊乏此一效果，反倒一派小家子气。看他们整天眼里只有台湾，日以摆脱祖国为念，非小家子气而何？（1991年9月15日）
-
-
 
 《世界论坛报》论吕秀莲
 
@@ -529,15 +467,11 @@
 
 很多台湾人玩政治，总是出很多不入流的怪招，完全不合乎世界水准，乃至一般常识，尤以民进党员为甚。真不知四十年来外省人国民党怎么教化出来的！（1991年9月16日）
 
-
-
 官迷教授
 
 《自立晚报》上说，师大教授林玉体借调台北县政府九职等核稿秘书，今天正式到任，面对未来将被县长尤清委以重任，担任代理教育局长一事，林玉体并不愿多说。林玉体教授从师大借调至台北县政府，原来学校支薪将停止，但上课堂数仍维持五堂，县府每月支薪，使他每月减少两万元，据人事室指出，县府九职等核稿秘书月薪为三万九千元左右。
 
 台湾人林玉体放着好好大教授不做，却甘愿委身做小吏，真官迷也！（1991年9月16日）
-
-
 
 白发红颜齐办报
 
@@ -545,15 +479,11 @@
 
 老段的报办得太烂了，他始终不能自悟这个报办得多烂。但烂归烂，精神却是第一。——老段为了报纸，牺牲自己，在所不惜；牺牲别人，亦在所不惜，这种精神，唯张其昀办“中国文化学院”（文大）时差可比拟也。（1991年9月16日）
 
-
-
 二来电
 
 小金（金一）来电，说林正杰已与杨祖珺离异，新欢为《中时晚报》记者矮胖的黄绢绢。已有身孕。小金说林正杰玩政治，玩到最后只有以道德为号召，如今道德也破产了。
 
 谢定裕（丁一）来电，明日返港。科技大学下月即招生。定裕在美为数学教授。在台大学土木，班高于我。他说他父亲（谢冠生）的遗件，除了给他的信外，已经无存。（1991年9月17日）
-
-
 
 噩梦不绝
 
@@ -563,13 +493,9 @@
 
 噩梦自与当年坐黑牢有关。（1991年9月19日）
 
-
-
 身体不错
 
 今早取回体检报告。董玉京大夫夸赞我的身体还可以大干特干。大便全黑乃吃了治手伤药物引起，肠胃都好好的。（1991年9月20日）
-
-
 
 蒋宋美龄临走还耍大牌
 
@@ -578,8 +504,6 @@
 这王八蛋死老太婆临走还耍大牌，而众奴才自李登辉以下却陪她耍，真集体无耻也！
 
 报上又说：“与宋美龄女士较有往来的妇女团体人士如辜严倬云等人，都不在邀请送行之列。”可见做奴才也分等级的，级数不够，连“拍马送行权”都不赏给你呢！（1991年9月22日）
-
-
 
 大陆农村的官方统计
 
@@ -597,15 +521,11 @@
 
 现在，97%的农村学龄儿童入学，农村成人教育和农村职业教育也有较大发展，农村人口中的文盲率已从新中国成立初期的80%以上，下降到27%以下。全国近五万个乡级卫生院，形成了一个覆盖面广、福利性强的医疗网络，提高了农民的健康水平。（1991年9月22日）
 
-
-
 台大中文系与意淫
 
 林文月在《人间》副刊写文追悼郑骞，写台大中文系自台静农以下交谊活动，全篇都是滥情之作。其实台大中文系教授都是一堆酸文人，学阀中之酸者也！
 
 当年这群教授意淫美人儿林文月，颇有争风吃醋味道。除林文月外，亦唯女弟子是尚。1961年度中文系五名助教清一色是女生，可以概见矣！（1991年9月22日）
-
-
 
 李光耀论中共经改成就
 
@@ -637,8 +557,6 @@
 
 让我提醒大家一句，没有其他东西会比政治动乱或更糟的是政治冲突对经济增长造成的破坏来得更大。（1991年9月23日）
 
-
-
 邓毛毛忆陈毅
 
 香港中国通讯社北京15日电：邓小平的女儿毛毛今天以《怀念陈伯伯》为题，在《人民日报》撰文怀念陈毅。
@@ -665,23 +583,17 @@
 
 陈毅在中共中，不失为虎虎有生气的人。“文革”时对红卫兵讲话而气不挠，浩然显示真性情者，一人而已。（1991年9月23日）
 
-
-
 警察含笑入图来
 
 《自立晚报》登：“民进党主席黄信介上午前往立法院，欲进入议场时，遭驻院警卫强力阻挡，发生推挤后，转出议场外的阶梯上静坐。黄信介并表示，他心中很难过，他也很同情驻卫警，因为他们‘连不合理的命令也要服从’。并指立院的运作，显然郝柏村的面子比总统的命令更重要。10点左右，黄信介欲上厕所，结果引来大群驻卫警陪同前往。10点10分院会休息时间，谢长廷出来向黄信介报告表示，双方已‘打成平手’，黄不能进入议场，郝柏村也不用上台。此时黄碰到一位老委员出来，相互握手打招呼，黄对他说：‘现在你好像真委员，我倒像是假委员了。’因为100行动联盟的到来，驻卫警约四五十人排于议场外戒备，黄和许信良却于此时立在驻卫警前拍照留念，驻卫警小队长陈山杉此时向驻卫警们表示：‘大家面带微笑，陪主席拍一张照片’，引来现场一阵哄笑。”
 
 看了最后警察对黄信介的态度，可知国民党作弄民进党，可真作弄得令人哭笑不得呢！（1991年9月24日）
 
-
-
 王小痴死于三军总医院庸医之手
 
 宣中仪、赖智信向我报告三军总医院误诊王小痴情形，中午约她们吃饭。从病历上，查不出什么“庸医杀人”的明显证据。但事实上，小痴明明死于庸医之手。
 
 像赖智信那样热心、那样有正义感的医师，我想举世罕有。她现在在一牙科诊所服务。收入百分之七十皆为诊所取去。（1991年9月24日）
-
-
 
 朱高正之无耻
 
@@ -690,8 +602,6 @@
 这事真滑稽。朱高正之无耻，真罕见也！
 
 不过，无耻是一回事，见识却是另一回事。在对台湾前途的远见上，朱高正比民进党中任何人都有见识，见识高他们一等。民进党是一群毫无见识只会一厢情愿的浑人，朱高正也浑，但浑中带清。朱高正是我的敌人，但我却不埋没他这一长处。（1991年9月25日）
-
-
 
 我爱“黑煞日”
 
@@ -705,23 +615,17 @@
 
 我不迷信，生前既“鬼月”买房，死后自然“黑煞日”快活。（1991年9月25日）
 
-
-
 台湾人玩政治的水准
 
 《中国时报》登：“民进党立委与社民党主席朱高正，于立法院第八十八会期开议日的互殴互骂冲突，25日延伸到高雄市。此间民进党人士发动群众，前往社民党南区工作委员会抗议。这项抗议行动由民进党市议员黄昭星服务处发起，动用一辆‘民主战车’，约有二十余人参与，黄昭星只在旁观‘战’，不表示意见，而由新潮流系要角高宗英、郑明进与蔡朝鹏共同发号施令。他们在下午3时10分抵达设在博仁街一号的社民党南区工作委员会，而警方早已据报，由三民分局出动近百名霹雳小组员警，于该址骑楼布成人墙，阻止民进党群众侵入社民党南区工作委员会。民进党群众与警方对峙时，‘民主战车’对着社民党办公室播放《牵亡歌》，高宗英与蔡朝鹏则先后拿麦克风骂朱高正是‘台奸’、‘国民党的走狗’等。社民党南区工作委员会文宣部总干事郑进丰打电话，要求警察局长姚高桥命令员警立即驱散在场的民进党群众。不过，警方现场指挥官三民分局督察组长赵常源仅命员警录影搜证，并三度举牌警告群众违反集会游行法。据悉，朱高正在台北另打电话给警政署长庄亨岱，要求警方妥善维护南区工作委员会人员与设施安全。到下午3时40分，民进党群众准备离去时，社民党一名党工突然窜出，扯下‘民主战车’悬挂的两幅书写‘猪高走狗，拢是畜生’布条。民进党人见状拥上喊打，该名党工背部挨了一拳，迅速回打一民进党员一拳后，双方被霹雳小组员警隔开。接着，民进党群众要求社民党交出该名躲进屋内的党工，否则不善罢干休。经过赵常源组长保证由警方秉公处理后，民进党拔下插在骑楼上的两面社民党旗，丢掷于地泄愤，同时宣布26日下午3时将发动更多的群众回到原地抗议。”
 
 这就是台湾人玩政治的水准！朱高正始作俑者，最后反弹到自己头上来了。（1991年9月26日）
 
-
-
 管区警察
 
 新的管区警察——瑞安街派出所的林慧雄来拜码头，按例行手续查了户口。他说他的管区中有三位人物：李敖、李焕、卢修一。我说如果有人欺负你，比如说你的主管等人，你可以来找我。
 
 前任管区警察刘德华已调敦化南路派出所，刘德华为人很好。（1991年9月26日）
-
-
 
 钱其琛抨击美国的人权论
 
@@ -747,8 +651,6 @@
 
 “众所周知，中国是一个有11亿5000万人口的发展中国家。尽管我们实行了卓有成效的计划生育政策，但每年仍要净增人口1700万。我们用占百分之七的耕地养活了占世界百分之二十二的人口，这是中国对保护人类生存权的最大贡献。中国政府还通过立法和其他有效措施，积极维护和保障老年人、青年、妇女、儿童和残疾人的合法权益，并取得了显著的成效。任何不怀偏见的人都不难看到，今日之中国政通人和，经济发展。中国的稳定与发展，无疑是亚洲乃至世界的和平与稳定的重要因素。反之，中国如果发生动荡，将会极大地影响亚洲乃至世界的稳定。”（1991年9月27日）
 
-
-
 荣总三日
 
 从25日到今天，连去荣民总医院三日。
@@ -757,8 +659,6 @@
 
 蒋家的皇家套房，也在荣总。这真是“荣”中之辱！（1991年9月27日）
 
-
-
 何来JohnSamuelson！
 
 今日《联合报》为庆祝四十年，满版登出自己广告，大题“联经的思想名著，引发增长知识的欲求”下，加上这么一行字：
@@ -766,8 +666,6 @@
 知识像一团火，开始必定是被某个外在的使者引发，但之后，它就自己鼓动自己了。——英国文学家约翰逊（JohnSamuelson）
 
 一见之下，为之大笑。《联合报》竟把约翰逊SamuelJohnson错成JohnSamuelson！真荒谬绝伦也！（1991年9月28日）
-
-
 
 梁肃戎不但无耻，而且肉麻
 
@@ -781,8 +679,6 @@
 
 看来令人浑身起鸡皮疙瘩。梁肃戎不但无耻，而且肉麻。龚定盦有诗道：“万人丛中一握手，使我衣袖三年香。”系指对贤者而言，宋美龄又算老几啊？（1991年9月28日）
 
-
-
 陈正澄来坐
 
 陈正澄上午来坐。他新从大陆回来。他说欧洲宫殿美，但中国宮殿显示帝王威严。
@@ -795,8 +691,6 @@
 
 上次他来，送我一册他著的《计量经济学》。（1991年9月29日）
 
-
-
 李远哲的“感性”戏
 
 昨天李远哲应邀到大学教育改革促进会主办的“大学教育研讨会”上致词时，谈到当年在台大大一时大家都要选三民主义，回想当时的通识教育，最糟糕的还是三民主义。他指出，他并非抨击思想课程，也不是不懂三民主义，而是认为大学生要修的社会学科很多，三民主义至多只有百分之五至百分之十的分量，却要花两个学期去学习，没什么道理。
@@ -808,8 +702,6 @@
 我猜李远哲这次莫名其妙的、生硬而唐突表态，似与我揭发他对恩师王企祥负义行径有关。——他抓个毫不相干的黄祝贵来垫底而已。
 
 黄祝贵也教过我，还到我宿舍来看我，签名送了他著的一本书。我真怀疑李远哲了解多少黄祝贵，他趁机演“感性”戏而已。（1991年9月29日）
-
-
 
 《女人女人》票选风云男女
 
@@ -824,8 +716,6 @@
 《女人女人》一般都以谈话为主要内容，这次为庆贺播出一百集而将综艺歌唱与酒会结合，在节目中将以曾上过该节目的男女特别来宾为对象，供观众票选“男女风云人物”。
 
 据制作单位表示，“男女风云人物”各选五名，以目前票数统计的排行情形是，男性以李敖最多票，依次是罗大佑、苦苓、朱高正、侯德健；女性则以李昂居冠，依次是施寄青、蔡琴、甄妮、邱彰。制作单位特别强调，被选出来的人选仅限于曾上过《女人女人》节目的特别来宾而已。（1991年9月29日）
-
-
 
 屌神
 
@@ -861,21 +751,15 @@
 
 盖“生殖器崇拜”之新猷也。文字败笔中有胜境，民间文学之佳者也。（1991年9月29日）
 
-
-
 党外人士最后中了国民党下的毒
 
 叶菊兰来电，小屯告以我已早睡，故未通话。
 
 我对所有党外时代的朋友，都淡漠处之了。他们在我一生中，曾经在共同打倒国民党的战线上统一过，但在最后，我朝前朝大路去了，他们却误入了歧途。令人苦笑的是，国民党最后是贏家，它自己虽被反对者打得鼻青眼肿，但它下的毒，最后还是发作在反对者的身上。——看到反对者那样浑、那样小格局的处理台湾问题，岂不正是国民党四十年教化之功么？（1991年9月30日）
 
-
-
 张学良被长寿所害
 
 邓育昆、刘俊德筹拍张老帅张少帅电视剧，中午邀饭请教。我说张学良如果不那么长寿，一生做悲剧英雄到底，倒更好呢！糟的是他垂老露面，说了太多太多浑话和不真的话，无异自己糟蹋了自己，真令人遗憾、遗憾。（1991年10月1日）
-
-
 
 “最后的晚餐”
 
@@ -886,8 +770,6 @@
 饭后良榘邀上楼，第一次考察了什么是KTV，老同学畅怀大唱，我却殊觉庸俗无趣。坐到12点，与小屯先归。五个半小时，就这样泡汤了。
 
 我对知识的专注，使我完全在娱乐上交游上“隔世”了，我也甘愿“隔世”，我决定这是“最后的晚餐”，以后晚餐不和友人在外面吃了。（1991年10月2日）
-
-
 
 《一江春水向东流》还在查禁中
 
@@ -901,21 +783,15 @@
 
 这一消息，证明了所谓解严，根本是假的。国民党伪政府一有机会，它便钳制不绝。（1991年10月2日）
 
-
-
 冒充自己
 
 家具店小朋友送“李敖先生”买的货来，我签收了。小朋友问：“你是李敖的什么人？”我笑答道：“我是冒充李敖的人。”
 
 后来他知道原来我就是李敖本人，大吃一惊。（1991年10月3日）
 
-
-
 疯团长
 
 段造时来，说在玉里疗养院有一精神错乱的团长，每天犹在批菜单、发派令。——官迷即使疯了，还照样官迷不已也。（1991年10月3日）
-
-
 
 女作家及诺贝尔奖
 
@@ -926,8 +802,6 @@
 戈迪默著作中，有三本书被查禁达十二年。比起我来，真是小巫一个！
 
 戈迪默说：“不管你写什么，不管那些检查人员认为那多么的‘具煽动性’，在南非，你不可能用你的作品去激发群众，因为群众是不读这些东西的。”此言甚令人哭笑不得。（1991年10月4日）
-
-
 
 大陆播出日军细菌部队暴行
 
@@ -943,8 +817,6 @@
 
 蒋介石是死了，但他的走狗李登辉、郝柏村以下还活着，他们看到这种罪证，比对一下蒋介石对日本“以德报怨”的王八蛋行为，不知作何感想？（1991年10月4日）
 
-
-
 《中央日报》与口水
 
 国民党《中央日报》登：
@@ -953,13 +825,9 @@
 
 其实，用吐口水的下流方法，朱高正等无耻小子们是始作俑者，《中央日报》不知报道，石永贵之流反为朱高正捧场如此，真是一群莫名其妙的党棍也！（1991年10月4日）
 
-
-
 “选个国代比叛乱还难”
 
 谢聪敏来电说在彰化他那选区竞选的种种难处，难到“助选人个个要为他买保险”的程度。我说如果容易，民进党会分给你、让你出马去选吗？我又归纳说：“选个国代比叛乱还难。”他为之大笑。（1991年10月5日）
-
-
 
 “宁入地狱，不坐冤狱”
 
@@ -999,21 +867,15 @@
 
 报道得不错，但是，如果把每一位法官的名字都亮出来，那样才对这些可恶的执法人员有一点警惕作用。否则他们做了坏事，没人知道，小人更无忌惮了。（1991年10月5日）
 
-
-
 清早三点的军车声
 
 清早三点起来做工时，但闻窗外军车隆隆，盖国民党伪政权“双十节”前阅兵预演也。说什么庆祝“中华民国”建国八十年，建国者想到他们建的国，沦落到台湾变成蒋家和蒋家奴才的小朝廷，真悔恨交并矣！（1991年10月6日）
-
-
 
 乱世情鸯
 
 今日《联合报》：“六十八岁荣民黄坤生随国军来台前，曾和妻子立誓纵使分手也不得嫁娶，黄坤生四十三年来谨守誓言未娶，只收养了一个儿子。两年前，他返乡探亲，发现妻子也独守空闺四十三年，为了报答妻子真情，让养子回到亲生父母身边，于是办理终止收养关系后，昨天搭机回大陆老家陪伴妻子度过晚年。住在桃园县中坜市的黄坤生，民国三十七年随国军来台，来台之前，曾经媒妁之言和江西籍方姓女子结婚，婚后不久即转战各地，二人聚少离多，来台后即断了音讯。民国六十年，黄坤生自军中退伍，在中坜地区一家工厂担任警卫。来台后，黄坤生对家乡妻子仍不忘情，因为婚后两人曾在神前立誓，如果两人不得已分手，各自不得嫁娶，黄坤生谨守誓言，虽然友人不断替他说媒，劝他不要死心眼，但他都以心有所属，婉谢媒人好意，只在退伍那年，收养了邻居的一个小男孩为养子。海峡两岸开放交流后，黄坤生经由书信往来，得知现年六十七岁的妻子健在，心情十分激动。两年前返乡探亲，见到满头白发的妻子，两人相拥而泣。黄坤生回台后告诉亲友，妻子为他苦守四十三年，他一定要知恩图报，陪伴妻子度过晚年，和妻子补办结婚仪式，同时也让现年二十四岁的养子回到亲生父母身边，两人前天相偕到律师事务所办妥协议终止收养手续，了却一桩心事。黄坤生昨天在亲友的祝福下，搭机返乡陪伴老妻。临行前，被亲友笑称为‘痴情汉’的黄坤生，掩不住内心的激动，数度落泪，他频频说‘简直不敢相信原以为的悲剧会以喜剧收场’。”
 
 乱世情鸯，又见一章。（1991年10月6日）
-
-
 
 故宫博物院腐化
 
@@ -1022,8 +884,6 @@
 所印制复制品很多亦不成样子！
 
 台北实在已步步难行，一半时间，花在挤车中。（1991年10月6日）
-
-
 
 林荣三真是市侩
 
@@ -1043,8 +903,6 @@
 
 由于此间有部分读者与社区人士仍来电询问，并对此一情况不甚了解，前美洲自由时报公司的股东为了对此事有所交代，特透过本报做一宣布，以正视听。（1991年10月7日）
 
-
-
 瑞典社会主义出问题
 
 昨天《亚洲周刊》有《瑞典式社会主义被选民遗弃》一文。重点如下：
@@ -1063,13 +921,9 @@
 
 过去书刊对瑞典社会主义多为正面报道、肯定报道。此文则有新观点可注意。（1991年10月7日）
 
-
-
 《女人女人》
 
 今晚中视《女人女人》播出百集，播出以我为首的旧节目选辑。播出的是我谈文天祥一段。我当时谈到文天祥是花花公子，对自己肯花钱，家里养个崔苔菁等给他唱歌。结果“崔苔菁”三字被消音。——国民党文网之密，有如此者！（1991年10月8日）
-
-
 
 虎头蛇尾的反制
 
@@ -1080,8 +934,6 @@
 就在反制阅兵造成政局高度紧张之际，“100行动联盟”与“台湾建国运动组织”昨日却先后宣布取消反制阅兵行动。联盟并发表书面声明表示，由于立法院司法委员会已于审查会中废除刑法第100条、及修订101、102条，而反阅兵乃是要求废除刑法100条和平内乱罪的手段。加上国民党当局有关人士已承诺在本会期内，顺应民意支持废除刑法中和平内乱罪之规定，为免执政当局借机升高冲突，抹黑台湾人民力量，扭曲废除和平内乱罪的诉求，甚至让国民党保守势力及军系的反动力量俟机而动，借故推翻承诺，制造人民流血事件，所以该联盟决定暂时停止反阅兵。
 
 这些作政治秀的货色，在国民党一吓唬之下，就虎头蛇尾了。我看不起解严以后玩政治的人，他们其实都是懦夫。（1991年10月9日）
-
-
 
 虎头蛇尾外一章
 
@@ -1094,8 +946,6 @@
 又是虎头蛇尾懦夫行径外一章。
 
 晚报上说，警方凌晨已强制驱散在台大医院基础医学大楼前的懦夫群，懦夫们哀呼“军警侵入校园”、“践踏学术尊严”云云，其实玩政治，躲在校园内、用学术遮伞，又算哪门子好汉！（1991年10月10日）
-
-
 
 憋尿战
 
@@ -1113,21 +963,15 @@
 
 此憋尿之战也！憋尿与政治有关，首见于苏秋镇之大膀胱。秋镇当年以憋尿使国民党法案等不得通过，其膀胱有益于党外，比他人高明多多矣！（1991年10月10日）
 
-
-
 李远哲实际是“台独”头子？
 
 王企祥来电话判断：李远哲实际是“台独”头子，李镇源实际是他支持出来的。
 
 存此一说，以待查证。（1991年10月11日）
 
-
-
 国民党的内婚制
 
 国民党官僚钱复之女钱美瑞，将嫁“台湾麦当劳家族”孙至德。另一官僚张京育之子，将娶军头许历农之女。——国民党已尽量做到内婚制的集团了。（1991年10月12日）
-
-
 
 淡水看海
 
@@ -1135,13 +979,9 @@
 
 再去看海，看小屯在沙滩上与浪花比赛速度。海令人心旷神驰，百看不厌。（1991年10月13日）
 
-
-
 民进浑人榜
 
 民进党昨天第五届第一次党员代表大会，选出本届中央执行委员三十一人、中央评议委员十一人，并由中执委中互推选出十一名中央常务委员。三十一名中执委员是杜文卿、林瑞卿、张国堂、林文郎、施明德、蔡仁坚、姚嘉文、尤清、徐明德、江鹏坚、余陈月瑛、余玲雅、谢长廷、苏嘉全、许信良、方来进、朱星羽、张贵木、洪奇昌、张俊宏、陈水扁、傅文政、萧裕珍、许能适、颜锦福、李茂全、邱义仁、蔡有全、刘守成、萧裕正。十一名中常委是林文郎、施明德、姚嘉文、余陈月瑛、谢长廷、许信良、朱星羽、洪奇昌、颜锦福、邱义仁、刘守成。中评委十一人：汤金全、陈鸿荣、黄尔璇、黄玉娇、张维嘉、陈成林、吴乃仁、陈永兴、康水木、郑新助、周民进。全部是国民党政党编制。其中不是浑人者又几希！存此名单，以入笑史。（1991年10月13日）
-
-
 
 美帝的不公平贸易
 
@@ -1154,8 +994,6 @@
 三、花生酱价格急升，连美国农业部也吃不消，把花生酱从学校午餐计划中剔除。在花生产品制造商及消费者组织的一再要求下，美国总统布什才勉强把新一年度的外国花生配额增至一亿磅，而美国农业部估计，美国今年其实最低限度可以输入三亿镑花生。但这项妥协方案仍然使美国的花生种植者非常不满，他们声称从外国进口的花生将损害美国消费者的健康！日本的牧场主阻止美国牛肉入口时，用的正是美国牛肉不合日本人胃口，将损害日本消费者健康的理由，而美国的贸易官员当时也勃然大怒。美国的花生种植者现在又以类似的理由阻止外国花生进口，是否荒谬可笑，读者自能判断。
 
 四、把自由贸易与美国并提，大概只是一些人的误解；美国从来就是对外国产品限制甚多的国家。美国通过军事计划及科研项目对企业进行的补贴，每年也数以百亿美元计，这又是否与真正的公平贸易沾得上边呢？（1991年10月14日）
-
-
 
 黄任中的请帖
 
@@ -1189,15 +1027,11 @@
 
 我不认识黄任中，不知他为何寄请帖来。（1991年10月15日）
 
-
-
 波兰不肯“以德报怨”
 
 波恩法新社16日电：德国内阁周三决定付给波兰五亿德国马克（二亿九千五百万美元），作为波兰遭纳粹迫害者的赔偿金，结束长达二十年的争议。外交部发言人表示，波兰方面，波兰政府将送交一份外交照会至波恩，以正式放弃未来的任何赔偿要求。自1971年起，波兰便和前西德政府就该赔偿金问题进行磋商。二十年来，许多经历过集中营中和劳工迫害的侥幸生还者已经死亡。德国联合政府是在下议院通过一年前签署的德波友好合作条约前夕，做了上述的赔偿决定。波兰官方周三对于德国的赔偿决定表示欢迎，但曾亲身经历过纳粹迫害的人，均对这项决定提出抗议，认为协议中的赔偿是不够的。一名在十二岁时曾以政治犯名义被送往纳粹集中营的人士表示，波兰政府已尽其所能，但对身受纳粹之害的人而言，这样的赔偿却是微乎其微。
 
 看了以上德国对波兰的赔偿，回看日本对中国的被“以德报怨”，蒋介石的王八蛋，可想而知矣！（1991年10月16日）
-
-
 
 民进党的幼稚动作
 
@@ -1206,8 +1040,6 @@
 紧接在陈水扁之后质询的李庆雄也表明要“自首”，李庆雄则把10月初他在高雄举办的“台湾共和国之夜”资料当场送给吴东明，并拿出写有“台湾共和国万岁”的海报，问吴东明要不要办，并挂上海报：“要办要捕，放马过来！”
 
 为什么老是搞这些幼稚的动作啊？（1991年10月17日）
-
-
 
 台湾无处不中国
 
@@ -1219,8 +1051,6 @@
 
 台湾无处不中国。（1991年10月18日）
 
-
-
 别扭诗
 
 别人朝东我往西，
@@ -1230,8 +1060,6 @@
 别人拳打我脚踢，
 
 别人一万我万一。（1991年10月18日）
-
-
 
 林正杰的妖妄和可鄙
 
@@ -1253,13 +1081,9 @@
 
 好个“真实的热情”！林毓生以自由主义自命却私入国民党、林正杰以道德形象号召却私通黄绢绢，回过头来还谈大道理，他们的“真实”，原来如此！（1991年10月18日）
 
-
-
 国民党与年龄
 
 王宠惠做外交总长时只30岁，做国务总理时才40出头，他们那时代苟为人才，易被人所容。日后国民党变成鼠肚鸡肠，到了台湾，老人当政，纵国民党自己人中的所谓“青年才俊”，也难三四十岁就做“部长”“院长”了。从国民党人才年龄看这王八蛋的党，别有奇趣也。（1991年10月18日）
-
-
 
 大人物狂想曲
 
@@ -1267,15 +1091,11 @@
 
 不过大人物中，李敖是一例外。李敖游戏人间以成其大、不择人物以成其骂，立身坦荡淋漓，其狂想曲部分，偶亦外泄，以嘲世人，虽阮籍《大人先生传》，亦何以加焉！（1991年10月19日）
 
-
-
 搞政治的人岂可这么嫩？
 
 今日报上说：“竞选民进党主席落败后，施明德19日晚回到故乡高雄，为二届国代参选人陈菊的演讲会助阵，他自承近日的心境相当无奈、凄迷，尤其是日前调查局逮捕台独联盟三名盟员一事，让他益增无力感。”“施明德向近千群众演讲时表示，他19日在台北参加废除刑法100联盟的会议，商讨如何营救被捕的三人后，徒步至松山机场的十分钟路程中，突然感觉相当无奈，直到飞抵高雄演讲会场，看到还有这么多人冒雨聆听，终使其重拾信心。”
 
 搞政治的人，从无力感、无奈，到重拾信心之间，可以这样来去有无，未免太嫩了！感情这样不稳定，又何能搞政治？（1991年10月20日）
-
-
 
 蔡同荣论施启扬
 
@@ -1290,8 +1110,6 @@
 施启扬变得很多，在一次同学会中我曾和他交谈，觉得他不太像一个读书人的型，他是在这个社会学很懂得与人周旋的，在台湾这个官场如何应对，我觉得他的技术非常高明；和孩子时代，直直的个性想什么说什么的样子不太一样。现在他长得英俊，也是个人才，看他讲话的模样，是很典型的中国官场的产物。
 
 蔡同荣这段话，勾绘施启扬嘴脸，大体都对。不过他说孩子时代直直的个性一段，对施启扬而言，却有溢美，施启扬和我初高中同学同班时，即“少年老成”，比别人有城府也。（1991年10月21日）
-
-
 
 刘家顺
 
@@ -1317,27 +1135,19 @@
 
 当年离台之日，他是上了飞机，飞机起飞又折回地面，再被抓下来的。如今三十多年下来，他不再与闻政治，黑牢余悸也！（1991年10月21日）
 
-
-
 教士吻修女
 
 美联社传真，意大利成衣广告中，有一幅教士吻修女画面，巴黎天主教抗议之，但10月18日巴黎法庭裁定说无伤也。（1991年10月21日）
 
-
-
 小气赢家
 
 中仪嫂来，说周太太一趣事。周太太打牌时，贏了一千一百八十元。结账时还向输家多要二十元，说要凑足一千二百元才满足云。（1991年10月22日）
-
-
 
 你黑暗，我报复
 
 一、黑暗的环境是动态的，它此起彼落的使你不快、沮丧，但我纪律我自己：绝不花五分钟的时间去不快、去沮丧。而是立刻花五分钟的时间去快乐、快乐的报复它、快乐的去立刻开始做揭发它的实际行动。
 
 二、黑暗的环境是易忘的，它年深日久后使你淡忘、松懈。但我纪律我自己：精神上要永保斗志、有耐心的斗志。在睡眠时间以外，我要永远以充沛的、奋发的、打起精神的态度，去报复它，去立刻开始做揭发它的实际行动。（1991年10月22日）
-
-
 
 李镇源抄袭林永丰
 
@@ -1349,15 +1159,11 @@
 
 今天我打电话给《二二八医界再出发》的作者林永丰，我说这不是全抄你的书和话吗？永丰认为也是。（1991年10月23日）
 
-
-
 周渝夜谈
 
 周渝夜来。告诉我日前他责怪陈忠信，说你们民进党怎可以搞“台独”，走这种不对的路。陈忠信私下告诉他，说党中自许信良以下，很多人都不赞成“台独”，可是大家在新潮流系压力下，都不便反对云。
 
 我告诉周渝，所贵为政治家者，就在不受错误路线的裹胁，而要挺身维护大道。由此可见，台湾人中实在没有政治家。把好好的一个新党搞成了这样子，他们太令人失望了。（1991年10月24日）
-
-
 
 欧阳无畏死了
 
@@ -1365,15 +1171,11 @@
 
 我识欧阳无畏于开国文献会，他是我的读者，但我一直不知道他是喇嘛。（1991年10月25日）
 
-
-
 施启扬绝非台奸
 
 参与“100行动联盟”反阅兵行动的中研院院士李镇源，前天在高雄凤山公开承认他支持“台独”的立场，并批评行政院副院长施启扬为“毫无知识的台奸”。
 
 说施启扬是台奸，是厚诬坏人。施启扬不是东西，但罪未至台奸，轻予罪名，适见李镇源等蛋头之偏执狂耳！（1991年10月25日）
-
-
 
 黄水枝“替天行道”资料
 
@@ -1415,8 +1217,6 @@
 
 按此公所谓“黄帝教”，似应即为内政部登记的“轩辕教”。据《中华民国年鉴》（1989年）第1193页：“民国四十六年王寒生发起创立轩辕教，以继起轩辕黄帝道统恢复中国固有宗教，启发中华民族魂为目的，以尊天法祖为信条，以儒、墨、道三家同源为理论基础，以天人合一为最高境界，治哲学、科学、神学于一炉，以光大民族文化，净化现实生活，提高精神生活境界等为务，更以促进全人类迈向大同世界为使命。”由此看来，妄人王寒生创立轩辕教，尚无“替天行道”一至如此者，但宗教一立，顺流而下，走火入魔，即可发扬光大矣！世之创教教主，可不慎哉？（1991年10月26日）
 
-
-
 评范曾
 
 范曾昨日来台，一下机即被名人画廊负责人胡云鹏动粗。胡云鹏说：“这二年来，范曾一再说二年前名人画廊自日本引进的画是假画，使名人画廊损失惨重。去年他更以‘侯军’笔名出了《范曾假画案》一书，污蔑名人画廊，我是来机场和他当面对质的，但一看到他就火冒三丈，忍不住打了过去。1989年5月1日名人画廊举办范曾作品展，自日购得四十五幅他的作品，范曾太太曾告诉我这是好画，没想到在这些画失窃后，范曾却于5月14日透过大陆中新社发表声明，指责名人画廊作品是假画，就连画册也是盗印的。这些画在三个月后，为“刑事局”女警组侦破后，他曾透过台北某画廊李姓负责人前来拜访，并证实这些作品是真的。范曾也曾主动于《范曾作品集-中国人物画》上签名盖章表示真迹，以作为下次展出使用，却没想到他却匿名于北京出画，将原先的证实作品全部推翻，这种作风怎么是艺术家作为？曾经有人说范曾字画是‘托人家的命而活’，一点没错，我也忍无可忍，决定要找范曾当面理论。”
@@ -1427,15 +1227,11 @@
 
 他的字，做作讨厌，账房的毛笔字而已。（1991年10月26日）
 
-
-
 李登辉捧杨丽花！
 
 今天《中国时报》说：“称霸台湾歌仔戏界的首席小生杨丽花，昨天晚上以巨星式的独特舞台魅力，席卷了国家剧院。两厅院为庆祝建国八十年所安排的10月大戏中，特别在昨天光复节遨请最具中华文化的代表人物杨丽花演出《吕布与貂蝉》，杨丽花则以历久不衰的亲和力，贏得满场雷动的掌声。在台北市长任内就曾邀杨丽花首度在国父纪念馆表演的李总统，昨天也观赏《吕》剧的首演盛况。有趣的是，民进党党主席黄信介，及近来一直扮演两党协商角色的台视董事长陈重光，也都出席了昨晚盛会。”
 
 中华文化复兴到总统以下，带队至国家剧院捧最不入流、最低层次的落伍台湾民艺，这个岛无文化可言，于此更得进一步明证了！（1991年10月26日）
-
-
 
 “台湾人畏威而不怀德”
 
@@ -1445,8 +1241,6 @@
 
 蒋渭水语陈绥民：“台湾人畏威而不怀德。”岛民心态使然乎？（1991年10月26日）
 
-
-
 孙震真无耻！
 
 孙震昨天发表声明：“震自10月23日请辞台大校长以来，深受社会各界关切，郝院长、毛部长恳切慰留，本校同仁、同学亦责以应以校务发展为念，继续留任，师长、亲友、社会先进纷赐指教，勉以国事为重。震身受国家栽培、台大教育，感恩之心，无日或忘，不敢以一己之私，负社会厚望。经于10月26日邀本校教务、训导、总务三长、六学院院长（理学院院长在国外）、附设医院院长及主任秘书共商行止，获一致鼓励，决定打消辞意，继续留校服务。数日来，因震个人去留，引起长官、师友、社会各界不安与关切，震内心至感歉疚，敬申感激之忱。今后愿与本校同仁并肩携手，恪遵本校‘敦品励学，爱国爱人’之校训，加倍努力，为国育才，殷望长官、师友、各界贤达续予督导爱护，并盼本校同仁精研学术，各位同学专心向学，俾不负社会之期许。”
@@ -1455,21 +1249,15 @@
 
 10月23日他作辞职秀时，明掲“个人可以默尔而息，但作为台大校长不能受辱”，岂料三天以后就为了“一己之私”，恋栈权位，置被辱之台大校长于不问了。此人真无耻！（1991年10月27日）
 
-
-
 “忠党爱国”下场
 
 陈绥民来电。谈到他和他老同学孔令昇，前以大学生投笔从戎，为国民党立汗马功，至今双双投闲置散，连个像样的退休之资都没有。我请他转促孔令晟写点“官邸”中事，他说孔是不会泄密的。
 
 胡宗南打下延安时，陈绥民接收了《延安日报》，并做了延安市长。来台做国民党中六组总干事，殷海光问题、彭明敏问题、李翰祥问题，此公无役不与。他虽是党籍中人，性格倒颇坦诚痛快。（1991年10月28日）
 
-
-
 谢绝苏联、英国报社访问
 
 苏联报社总编辑及记者二人想访问我、另有英国记者亦想访问，陈中雄代约，我谢绝之。本月有海洋大学等多起请演讲，皆谢绝之。（1991年10月29日）
-
-
 
 大陆温饱问题
 
@@ -1489,21 +1277,15 @@
 
 目前，中共当局重点扶持的328个贫困县农民人均收入从1985年的206元增加到321元，增长53.4%，其中人均纯收入超过350元的有103个县，超过500元的有16个县，超过600元的有4个县，还有超过千元的。长期以来严重贫困的大别山区、井冈山区、沂蒙山区、武陵山区、太行山区、吕梁山区、甘肃中部干旱地区、宁夏南部山区、闽西南、闽东北等一些集中连片的贫困地区，已经基本解决了温饱问题，逐步转入已脱贫致富为主要目标的区域经济开发阶段。
 
-
-
 评黄君璧
 
 黄君璧死于昨日。此人画画尚好，字写得小家子气。
 
 宋美龄学画，本来要请溥心畲教她，但溥心畲说拜师要磕头，宋美龄摆臭架子，不肯，乃改请黄君璧。——人格高下，光此一事可知。（1991年10月30日）
 
-
-
 朱铭新作不成东西
 
 与小屯逛新开幕的新光三越百货公司，中有所谓艺馆者，展出朱铭不锈钢管扭曲出之人体，丑陋不堪。朱铭前以木塑成名，虽造型千篇一律，尚有始作之功。今则改调如此不伦不类，所谓艺术，自欺欺人耳！（1991年10月30日）
-
-
 
 宋楚瑜自承台湾人
 
@@ -1511,15 +1293,11 @@
 
 宋楚瑜这种党棍，口口声声反“台独”，其实心态都是取媚台湾人而已。其实，是不是台湾人并非关键，关键乃在以政治利害冒充台湾人，未免太不要脸了。（1991年10月30日）
 
-
-
 尤清作何感想？
 
 今日《自立晚报》登：明年底台湾举行的一项国际性历史考古会议指定台北县八里乡大堂坑遗址为观摩地点，但据台北县府及乡公所调查，面积广达八万七千平方米的遗址，有将近五分之四的山坡地，已被滥葬、滥垦破坏殆尽，届时呈现眼前的只是“普度众生”，而不是“文物古迹”，徒贻笑外人。依1980年12月台大考古人类学系所做的全省重要史迹勘查与整修建议中指出，当时大坌坑遗址有三层文化堆积，最下为大坌坑式绳纹陶文化层，或称大坌坑文化，与上层的圆山文化有间隔，而圆山文化与最上的十三行文化间又有中断现象，大坌坑遗址大致保存尚好。但是由最近县府、乡公所实地调查，位于观音山西北麓的大盆坑遗址已被破坏殆尽。
 
 这种新闻，不知身为台北县县长的尤清看了，作何感想？这种无能的民进党官僚，又与国民党官僚何以异？（1991年10月30日）
-
-
 
 文化费
 
@@ -1527,15 +1305,11 @@
 
 其实，每年每人分到了五十元以上又怎样？纵使是花上十四亿五千万元，建设出来的，是文化么？（1991年10月31日）
 
-
-
 有墓不扫，却去“谒陵”
 
 今天是窃国大盗蒋匪介石105岁冥诞，其奴才李登辉率五院院长及军政首长多人（包括行政院院长郝柏村、立法院院长梁肃戎、司法院院长林洋港、考试院院长孔德成、监察院院长黄尊秋、总统府代秘书长邱进益、国安会秘书长蒋纬国、国民大会秘书长朱士烈、国防部部长陈履安、参谋总长陈燊龄、总统府参军长蒋仲苓等），到大溪慈湖“谒陵”。同时“转往头寮陵寝向蒋故总统经国致意”，两代马屁，一体均沾。
 
 张学良也去慈湖“谒陵”了，此公放着自己父亲之墓不扫，却来谒仇人之陵，真是莫名其妙也！（1991年10月31日）
-
-
 
 1991年11月1日
 
@@ -1553,15 +1327,11 @@
 
 简单说来，只是六个字：孤独、快乐、定稿。（1991年11月1日）
 
-
-
 命名怪谈
 
 今日《中国时报》登：“台东县东河乡隆昌村阿美族青年高巍和，向往翱翔青天飞行员的神采，投入空军行列，历经二十五年努力，终于晋升少将，缔下原住民第一位将军的纪录。”“现年四十八岁的高巍和，在阿美族的社会里，有显赫的家世，父亲高贏清，曾任光复后第一、二届平地山胞议员。”“公余之暇，高巍和喜欢海钓，这和阿美族人一向滨海生活有关。谈到两个儿子，就读逢甲大学的老大高登辉，是父亲所命名。灵感也来自于二十年前父亲即已认识李登辉总统，正好用于孙子的命名。老二高志翔，则是高巍和热爱飞行，特别命名以明其志。”
 
 我就不相信二十年前他父亲因“认识李登辉总统”而有命名之事。因为二十年前，李登辉又是老几啊？（1991年11月1日）
-
-
 
 吴大宇死了
 
@@ -1597,8 +1367,6 @@
 
 由吴大宇之死，拉杂想起这些往事。（1991年11月2日）
 
-
-
 “胡茵梦悄悄提前出关”
 
 昨日《中国时报》登《胡茵梦悄悄提前出关》。中有数则可见一斑：
@@ -1615,16 +1383,11 @@
 
 胡茵梦的长处是不断力争上游、努力上进；但她不幸走上妖妄做作之路，误以妖妄之业为进步、为寄托，然后以做作出之。归根究底是无知妄作而已。（1991年11月3日）
 
-
-
 “黑牢”时代过去了？
 
 今天《联合报》登：“羁押在台北土城看守所的‘台独联盟’总部秘书长王康陆，日前写英文信给在美国新泽西州就读的儿子表示，在看守所中，受到有尊严的待遇。看守所长胡击雷昨天说，看守所对任何人犯，包括三十多名外国籍人犯，都给予人性尊严对待。胡所长表示，‘黑牢’时代已过去了，现在监所对人犯照顾不遗余力，都以人性管理，人犯只要合理合法要求，看守所都会答应、配合。”
 
 “黑牢”之说，起于我揭发台北土城看守所之文，如今十年下来，该所长仍胡扯如此，狱政败坏，李元簇、施启扬等皆不能辞其咎也！（1991年11月4日）
-
-
-
 
 “台湾当局纵容‘台独’活动”
 
@@ -1638,8 +1401,6 @@
 
 四、民进党搞“台独条款”本是“一石数鸟”之计。一方面是为“台独”造势力，一方面是想在引起北京和国民党的强烈反应之时，以“弱者”姿态骗取选民同情。但民进党能这样做，是谁为它提供了条件？国民党过去长期的高压统治在民间留下的恶劣印象至今仍较强烈，“二二八”事件万人以上遇害，20世纪50年代大屠杀中又有近万人被杀或被捕，仅这些人的亲友，以每人至少二十多亲友计算，恐怕有近百万人对台湾当局不满。其后年代因各种原因所造成的高度不满者，至少也在百万人之数。这约占台湾人口十分之一的高度不满者，很容易成为民进党的基本选民、坚决支持者或同情者。（1991年11月5日）
 
-
-
 迟来的道歉
 
 国民党行政院长郝柏村昨天在答复立委林聪明的质询时表示，政府当年在大陆的失败，对大陆同胞该感到愧疚；同样的对于当初在“二二八事件”中受害的本省同胞与外省同胞，政府也一样应该表示愧疚。
@@ -1648,13 +1409,9 @@
 
 [补记]根据《立法院公报》第八十卷第九十期“院会记录”，郝柏村的原句如下：“关于国家统一的问题，林委员所言当然是可能发生的。当然国民政府在大陆的失败，对大陆同胞是有所愧疚的，诚如林委员所言，政府对于二二八事变的受害者，无论是台湾同胞或大陆人士也都应该表示愧疚。至于对大陆沦陷的检讨，事实上不只今天，先总统蒋公到台湾来就开始检讨了；过去四十年的政策也就是根据检讨已往大陆失败的结果而来；诸如经济、政治政策都是根据大陆失败的原因而做的整军备战来拟订的。所以，对于这一点，我觉得我们已经做了。当然，今后我们如何因应大陆的变局，尤其是在最近发展很快的变局，我们该如何因应，应有所准备。我觉得林委员的意见很好。”
 
-
-
 贩书者言
 
 从陈律师处出来，去牯岭街书店一逛。书店老板犹忆前度李郎，说：“多年不见，学历史的只有你李先生发了财。”我笑说：“如果发了财，绝非由于学历史，学历史只能翻旧账，何能发财？”（1991年11月6日）
-
-
 
 五十二军老兵之言
 
@@ -1672,15 +1429,11 @@
 
 砍断攀绳的事，经擦车老兵为我道出，自可补正军头们之有意掩饰也。（1991年11月7日）
 
-
-
 宜兰独立说
 
 11月5日立委林聪明在立法院质询中，有一段说：“现在社会上有些人叫着主张公民投票，好像公民投票是万应的灵丹妙药。请问郝院长对于公民投票有怎样的看法？哪些问题可以公民投票？哪些问题不可以？投票结果要三分之二以上才算通过呢？还是通过半数就可以？投票对不赞成最后结果的人，有怎样的约束力？最近本席回宜兰拜访选民时，有人告诉我如果公民投票可以决定要不要成立‘台湾共和国’的话，在面对中共一再扬言，如果台湾真搞‘独立’，就要动武干涉的威胁下，拿台湾两千万人民的生命财产与福祉作为赌注，未免太冒险，代价太大。而我们宜兰县，地形封闭，和省内其他地区的交通不会比瑞士与德国、意大利或奥地利方便，宛如形成天然国界，又有国际港口，宜兰人的说话口音也和其他各县市不太一样，宜兰地方政府的自治权诉求相当强烈，也有搞独立的人才，实在具有独立‘建国’的优越条件，此次建议政府不妨以宜兰县作为试金石，先让宜兰县民举行公民投票，决定是否建立‘兰阳共和国’，假若中共真的武力干涉牺牲人数只有四十六万人而不是两千万人，尚且宜兰人还可以逃到台北、花莲去避难。如果中共不攻‘兰阳’，则‘中华民国’可以承认‘兰阳共和国’，我又多了一个邦交国家，其人口要比我们友邦格林纳达和东加王国多。‘兰阳共和国’若果真可以相安无事，以此模式主张‘台独’人士，才可以推论‘台湾独立’，中共也不会犯台。郝院长也许会认为这种说法是荒唐的，但是如果‘住民自决独立建国’的政治理念被肯定，将来澎湖、金马及台湾其他地区住民，可能也会相继要求以公民投票来决定是否独立建国，况且主张宜兰独立总比主张台湾独立冒险性要低得多，不知郝院长以为如何。”
 
 林聪明之言甚有反讽之趣。理论上，“台湾独立”之说如能成立，则“台独”之后，“宜独”（宜兰独立）也无法阻止也！因为以子之矛、攻子之盾，太言之成理了。（1991年11月8日）
-
-
 
 “郑南榕托梦”！
 
@@ -1690,13 +1443,9 @@
 
 叶菊兰今日来电找我，我没回电。菊兰是最优秀的女强人，却涉身政治，为群小所浼，致入歧途，真可惜也！（1991年11月9日）
 
-
-
 导演朱延平抄袭卓别林
 
 晚饭后偶见台视播国片《大小姐与流浪汉》。朱延平导演，许不了、胡茵梦主演。里面竟公然抄袭卓别林电影，这种国片导演，真胆大妄为也！（1991年11月10日）
-
-
 
 “一旦为贼常成靶”
 
@@ -1706,15 +1455,11 @@
 
 “一旦为贼常成靶”（Onceathief,alwaysatarget），此之谓也。（1991年11月11日）
 
-
-
 周劢夫来谈
 
 邻居周劢夫教授来谈书画，此公收藏本领甚可佩服。美中不足的是，他的收藏品中掺入不少党国大员之作，未免失之过宽了。
 
 他说他最佩服我挺身而斗的精神。（1991年11月12日）
-
-
 
 陈水扁指责许阿桂选择性执法
 
@@ -1728,13 +1473,9 @@
 
 本案闹得凶，原因之一是监委平日王八蛋，光喊狼来了扯淡，如今真的狼来了，反倒无人信了。事实上，这次弹劾理由是站得住的。（1991年11月12日）
 
-
-
 第四室老友聚餐
 
 台大第一宿舍第四室老友孙英善自美来台，中午与同室老友陈彦增、陈良榘聚餐。我笑说我李敖专心写书，不交新朋友了，老朋友也“遇缺不补”了。新朋不交、旧友不补，乃是参悟人生后一乐。朋友是写作的敌人，因为他们太耽误时间，胡适一辈子交游满天下，造势成功，写书失败，这是得不偿失的事。并且所交皆匪类劣种，他死后，连全集至今都印不出来，所谓朋友，岂可靠哉！（1991年11月13日）
-
-
 
 后起之秀的文字
 
@@ -1760,13 +1501,9 @@
 
 其实指斥为“死水”之说、拆穿捧朱熹之事，都是李敖有文在先的，司马文武写得不错，但也只是后起之秀而已。（1991年11月14日）
 
-
-
 《中央日报》多死六个
 
 昨日山线铁路造桥段大车祸，各报都登死亡三十人，唯独《中央日报》以头条登“乘客三十六人不幸丧生”，比别人多死六人。此虽报道上小事，然亦足见石永贵主持下党报之颟顸也。（1991年11月16日）
-
-
 
 陈良埙玩世不恭
 
@@ -1774,27 +1511,19 @@
 
 想当年此公做孙立人侍从参谋，绰号“副司令”，前程本大有可为，结果一场冤狱下来，一切成空。但他能以玩世自得，也算不幸中之幸事也。（1991年11月16日）
 
-
-
 尹章义来电
 
 尹章义来电“致敬”，他说看了我在《李敖求是评论》中的《泪眼中的废除<刑法>第100条运动》，很感慨。他说大学教授们当年既不敢挺身反抗，今日反倒出来作秀，实在可议。他说他不是轻易许人的人，但对李大哥的特殊风骨，实在佩服。
 
 尹章义在辅仁大学历史系执教，他以外省人搞台湾史，功力之深，使台湾同道学者瞠乎其后。有一次他私下告诉我：他搞台湾史，有比台湾人还行的抱负。我想他有点赌气的味道，不过事实上，他的确成绩过人。（1991年11月16日）
 
-
-
 西哈努克子死孙亡
 
 早餐时边吃边看书，顺便听到新闻中报道，西哈努克这次返国，告诉人民，他有五名儿女、十四名孙儿，都在他流亡期间被活活打死。政治斗争，凶残有如是者！（1991年11月17日）
 
-
-
 解牛经
 
 与陈彦增全家食于松江路一二四巷特厚餐馆，主持人乃淡水工商讲师徐茂雄，与郭文华同事。由徐先生亲自下厨，做牛肉，由头到尾，目有全牛，无不可食。我素不考究吃，但听其解牛经而已。（1991年11月17日）
-
-
 
 摄影家杨凡
 
@@ -1810,15 +1539,11 @@
 
 杨凡人很博学风趣，和我一见如故。（1991年11月17日）
 
-
-
 我不信郭廷亮被谋害
 
 报上说：“曾因‘匪谍案’被判刑的孙立人将军旧部郭廷亮，前天自台北搭乘109次复兴号列车返中坜时，在列车启动南下约三十米时突然跳车，摔成重伤，昨天自省立桃园医院转送台北荣总救治。荣总值班主治医师何治军昨天表示，郭廷亮有严重脑水肿现象，脑干完全衰竭，其昏迷指数只有三分，生命垂危。郭廷亮的家属及昔日袍泽昨天齐聚荣总，对郭坠车的原因议论纷纷。郭廷亮的子女质疑铁路单位所指其父因睡过头，过站后惊觉而跳车摔伤的说法。郭廷亮的大女儿郭志强表示，其父平日身体健康，不致构成他中午午睡过站跳车的行径或者失足，此外，其父平日随身携带一些有关‘孙案’不利于当局的‘重要文件’，坠车原因恐是‘怀璧其罪’，她要求有关单位提出现场目击者，并表示将自行搜证，必要时不惜采取法律途经。”
 
 我不相信郭廷亮是被谋害的说法。要谋害，早动手了，又何必延至今日？何况孙案中郭廷亮方面主要证据，早已被曾心仪和我公布，还有何“重要文件”可言？（1991年11月18日）
-
-
 
 国民党的电影问题
 
@@ -1836,19 +1561,13 @@
 
 中央电影公司是国民党党营机构。在金马奖上被国民党新闻局照顾如此，犯众怒了。存此投书为证，以见双方水平。（1991年11月19日）
 
-
-
 谢聪敏来电
 
 谢聪敏来电，约我到彰化县为他演讲助选，我拒绝了。我厌恶政治。（1991年11月19日）
 
-
-
 享受西湖
 
 江述凡来电，说：“我不去看西湖，我乃去享受西湖。”此真能得山水之乐者也！（1991年11月20日）
-
-
 
 苏秋镇谈台湾的选风
 
@@ -1856,13 +1575,9 @@
 
 我告诉秋镇，参选可别打李敖牌，人人恨我，我恨人人，李敖的仇人满天下，打李敖牌，反倒得不偿失。（1991年11月21日）
 
-
-
 高院法官与红包
 
 今天《中央日报》登：“由于最高法院法官责任较重，但待遇、职等却与二审的资深法官、庭长并无差别，使得二审法官不愿‘高升’三审的情形，有日增之趋势；最高法院为避免人才发生断层，影响裁判品质，将建议司法院重视该问题，并希望以拉大职务加给等方式，来增加二审庭长调升三审法官的‘诱因’。”其实，二审法官不愿“高升”，原因之一是在高等法院拿红包方便。高院法官最有实权，又可直接接触当事人与律师，上下其手起来，机会多多。这种机会，地方法院法官不足，最高法院法官又过头，唯有高等法院法官独享也。（1991年11月21日）
-
-
 
 黄奠华法官的持平之言
 
@@ -1890,13 +1605,9 @@
 
 许阿桂明明在两坏之间，掩护一方坏人而起诉另一方坏人，不公正如此，却还浪得英雄之名，光此一事，就足以证明台湾地区，人多么浑蛋。（1991年11月21日）
 
-
-
 王企祥责王敬羲
 
 王企祥来电告以：他为其弟王敬羲在香港盗印我的书十几年来没付李敖一块钱事，大感不平，当面责怪王敬羲不义，其母亦不直王敬羲所为。（1991年11月22日）
-
-
 
 妖妄的国代候选人
 
@@ -1904,15 +1615,11 @@
 
 公然妖妄如此却不知自己妖妄，台湾迷信风气，又见一斑。（1991年11月22日）
 
-
-
 周礼祭祖，浑蛋集合
 
 《中央日报》今日报道：中华圣教会昨天首度以失传三千年的周公大礼举办祭祖大典，借以推行礼教，慎终追远，弘扬孝道，并祈求国泰民安。主祭的总统府秘书长蒋彦士表示，此项祭祖大典能端正人心，有助于社会安定。昨天举行的建国八十年祭祖大典在中正文化中心广场举行，中华圣教会在广场上搭设的祭壇分祭天、祭地、祭列祖列宗祖先三层法坛，分别由总统府秘书长蒋彦士、总统府资政邱创焕、高雄市长吴敦义担任主祭官，祈求风调雨顺、国泰民安、社会安和乐利、家家平安。并由旧城国小学生身穿礼服，以八佾舞配合仪式进行。祭祀仪式方面，祭天、地有乐、歌、八佾舞配合，全以周公大礼进行，不过因此礼已失传三千年，所以略有修改；祭祖先则设有祖先百家姓氏祖先牌位，以供祭祀，仪式隆重。中华圣教会表示，该会鉴于现今社会风气不良，纲常伦理败坏，礼乐正音崩丧，因此借举办祭祖大典，以弘扬孝道，建立三纲五常。
 
 这一消息，证明了台湾的开倒车，开到“三千年”前了。我早就说蒋彦士大浑蛋，如今更添新证。（1991年11月24日）
-
-
 
 邓维桢谈许信良
 
@@ -1922,15 +1629,11 @@
 
 维桢说现代英雄只有几个礼拜寿命。搞政治的人人变成了商品，每天以刺激求售，可怜极了。（1991年11月24日）
 
-
-
 刘福增的请帖
 
 老同学刘福增分别于11日、20日寄请帖来，约我出席17日的“国大代表候选人刘福增竞选总部成立大会”和26日的“刘福增教授参选新竹县国代台北后援会”。前者由福增中学老同学李远哲“亲临主持”，后者由李远哲任“名誉会长”。
 
 福增不失为质直的读书人，何苦实际涉身政治一至于此？身为大学教授，不专业学术、维护尊严，却与市井俗人抢骨头，这种怪现象，举世唯台湾见之。（1991年11月25日）
-
-
 
 一人办报五十年
 
@@ -1938,13 +1641,9 @@
 
 这位日本老太太的精神，真可佩服。（1991年11月26日）
 
-
-
 美国总统级谎话
 
 本月20日《国际先锋论坛报》登出该报副社长本杰明布雷德利揭发美国总统们的谎言，其中揭发里根自称他在二次世界大战时在欧洲担任通讯部队摄影师，且拍摄过纳粹集中营惨状。这一自称，乃在1983年11月于白宫接见以色列总理沙米尔时透露的。但真相却是，里根在第二次世界大战时，从没离开过美国一步！（1991年11月27日）
-
-
 
 部分知己
 
@@ -1952,13 +1651,9 @@
 
 这位短命才子以文章不遇知己而哭，其实这种情形不以小牌作家为然，即使大牌作家如袁枚等，虽名满天下，但读者所测其浅深，也极有限，所谓文章遇得的知己，也只是部分而已。我李敖以文章名，但读者所知，也只是部分而已、甚至是一小部分而已。（1991年11月28日）
 
-
-
 假扣押了胡秋原住宅
 
 胡秋原诽谤我，刑事方面判决确定，判处拘役四十天，缓刑两年；民事方面，被我索赔四百万，郭律师今天上午代我会同法院执行人员，到台北县新店中央新村第五街十一号胡秋原家，假扣押他的住宅产权。由胡秋原的媳妇应门，胡秋原自楼上下来签字。“封条”就贴在他的书橱旁边。法院书记官对胡秋原说，你们打官司解决吧。胡秋原无奈诺诺。郭律师告诉我经过，我闻而大笑。（1991年11月29日）
-
-
 
 开车者言
 
@@ -1967,8 +1662,6 @@
 他还举一个有趣的例子。他小时候，要买脚踏车，他父亲说：“买什么车，就要回大陆了，到时候卖给谁呀？”
 
 我告诉他白崇禧浇花的故事。白崇禧在家浇花，有朋友来说：“浇什么花，就要回大陆了！”（1991年11月29日）
-
-
 
 碑林玩意儿
 
@@ -1988,8 +1681,6 @@
 
 前一阵子，陈大络打电话找我，我没理他。（1991年11月30日）
 
-
-
 刘辰旦来谈
 
 刘辰旦自高雄来，上午与我谈两小时。
@@ -2002,23 +1693,17 @@
 
 辰旦说我们过去冒险犯难反国民党，是玩真的。人家看我们，好像看马戏团空中飞人，飞来飞去，下面是没有安全网的。今天则不然，今天可安全多了。可是摔不死、没有危险性的空中飞人，谁又要看啊？（1991年11月30日）
 
-
-
 “真人不露相”？
 
 李宁今天在电话中说：电视画面可打八十分时，实际人的模样可打一百一十分。她说我在电视中的画面还不错。
 
 我的模样其实很平凡，看我模样绝对看不出我是这么厉害的人，此“真人不露相”者耶？（1991年11月30日）
 
-
-
 此马来头大
 
 与陈彦增全家吃湖北菜。彦增持交他在中兴大学法商学院企业管理学系《企业管理学报》的稿本及该校王德馨教授的审査意见书。王德馨“建议题目不提‘马克思’，酌改为‘马克斯韦伯MaxWeber与其组织管理思想’，较原题目‘马克思韦伯生平简述’，具有学术意味”，我看了一笑。
 
 军阀时期，有恐马克思情结，并马眉叔《马氏文通》都査禁之；国民党时期，更有恐马克思情结，并梁实秋译马库斯奥瑞利阿斯（MarcusAureliusAntoninus）的《沉思录》（MEDITATIONS）都被检査，纵马库斯奥瑞利阿斯早于马克思一千七百年，也不得不受池鱼之殃。如今大学教授易“马克思”为“马克斯”，似不无残余情结也。（1991年12月1日）
-
-
 
 小人物的抗议方式
 
@@ -2035,8 +1720,6 @@
 昨天上午，士林分院审理终结，将张女判决七个月有期徒刑。张女在聆听判决后，情绪突然激动并不断叫骂起来，然后掀开自己的上衣，当庭裸露胸部表示不满，法警见状，立即上前制止，将张女拖出庭外，强制张女将衣服穿好后，让她离去。
 
 在我看来，张女的行为岂能仅以“可能患有精神衰弱现象”一笔带过！有些小人物，他们痛恨司法不公，别无他法，只好诉诸如此直接方式。若真的精神衰弱，当送医检查，何能一判刑就七个月，势必坐牢？动辄判刑在六个月以上不得易科罚金，此国民党法官举轻若重之惯技耳！（1991年12月1日）
-
-
 
 任显群有“衣冠冢”
 
@@ -2058,8 +1741,6 @@
 
 回想1975年8月28日任显群死后，9月3日《中央日报》登出的讣闻中，“未亡人”项下由“章筠倩顾正秋”并列，并无“侧室”之说，后面双方所生子女也混列。如今任显群死后十六年，居然发生老公独占现象，代母夺父，亦孝子不匮也耶？（1991年12月2日）
 
-
-
 宋美龄秘辛
 
 丁颍来，午请他吃饭。王企祥及丁颍友人周伯乃等在座。企祥看了我在《求是评论》写宋美龄的事，席间谈到一些秘辛：
@@ -2078,23 +1759,17 @@
 
 七、“一二三自由日”，谷正纲推王企祥上台讲话，王企祥说他站在台上，一言不发。盖他不愿被耍为“反共义士”也。（1991年12月2日）
 
-
-
 李登辉厚颜自吹
 
 《世界论坛报》今日登：由《天下》杂志主办的发现台湾巡回摄影展，目前正在台北新光三越百货公司展出，李登辉特别应邀于11月29日前往参观。在五十分钟的参观中，李登辉详细观看了四大主题的图片，并提供许多他回忆所及的史实。讲到兴起时，李登辉竟向陪同他参观的《天下》杂志发行人殷允芃表示，目前对台湾史有研究的有三个人，一个是中研院的曹永河，另一位是史迹专家林衡道，还有一个就是他自己。
 
 李登辉学的是农业经济，居然自吹他是台湾史三大有研究者之一，真未免厚颜自吹矣！（1991年12月3日）
 
-
-
 马速良
 
 刘绍唐电话中言一趣事。他说传记文学社校对中年轻的一辈，已经对过去的事生疏了。例如校到京戏名角“马连良”，就有改为“马速良”者，原来校对以为马跑得快才是好马也！
 
 此事虽小，可见代沟之大。（1991年12月4日）
-
-
 
 国民党“配票作业”
 
@@ -2130,8 +1805,6 @@ ________________________
 
 特予留存，以为国民党“配票作业”存证。（1991年12月5日）
 
-
-
 人权中美比较论
 
 4日，《人民日报》对美式人权展开强烈抨击，将中美的犯罪率及流浪汉人数相互比较。
@@ -2146,13 +1819,9 @@ ________________________
 
 该文认为人权是资产阶级的概念，真正的人权是足以维持吃住的权利，相对而言，美国有一群为数极少的百万富翁，拥有百亿元的资产，“其生活丰衣足食，住在豪华保全的宅邸内，出门坐着防弹车，生存权毫无顾虑。”“这些人怎么会管一般人的死活？”（1991年12月5日）
 
-
-
 大富翁“穷”死
 
 财政部赋税署长侯伯烈昨天指出，国泰集团创始人蔡万春去世后，由于没有留下遗产，因此他积欠的两千七百万税款无法追回。侯伯烈表示，欠税人去世后，依法所欠税款，必须先自遗产中扣除，但是蔡万春已因中风在床，被禁治产宣告达十年以上，名下也没有任何财产，再加上蔡万春夫妻已经离婚，三个儿子又已分家，因此这笔欠税就变成呆账了。（1991年12月5日）
-
-
 
 买新裤，改旧裤
 
@@ -2161,8 +1830,6 @@ ________________________
 远东百货公司大廉价，今天下午去买现成的西裤二条。另请售货小姐代把旧裤二条改过，——裤腿放长，因为小姐说现在已经不流行短裤腿了。
 
 我今天买新裤的原因是旧裤穿了十多年，有点瘦了。现在新裤流行肥大，穿起来稍舒气。但旧裤又舍不得丢，所以改一改。售货小姐代改，因买新裤，只要五十元。（1991年12月6日）
-
-
 
 乱世浩劫二例
 
@@ -2204,8 +1871,6 @@ ________________________
 
 四十多年乱世浩劫，每家有每家的不幸。把一些特例收集，更可为悲欢离合做些死证。（1991年12月7日）
 
-
-
 看扁阿扁
 
 今天《中央日报》登：
@@ -2230,23 +1895,17 @@ ________________________
 
 此事在法理上，民进党陈水扁方面的确站不住。我曾说民进党一朝小人得志，就会一切学国民党，是国民党第二。如今不但学国民党非法代签，甚至连事后狡赖的嘴脸都一模一样。搞政治的人之不可令人信任，连阿扁都要被看扁也。（1991年12月7日）
 
-
-
 监委拿黑心钱吃白饭
 
 今日《联合报》载：“监察院年终检讨会昨天闭幕，从民国三十七年开始行使职权的资深监委，将在年底全数退职，昨天在增额委员的频频致意下，结束其职司风宪的神圣使命，正式全数告别四十三年的政治生涯。”“行宪后第一次监察院院会在首都南京召开，当时国内战火频仍，但监察委员高风亮节的御史形象，在国人心中有很高的评价。第一届行宪监委共有一百八十位，报到一百七十八人，民国三十八年来台时有一百零四位，在岁月的冲击下，资深委员逐渐凋零，到七十八年2月10日中央民代退职条例公布时，只剩三十一人。后来因自然淘汰、辞职或涉案遭判刑而去职，目前只剩十五位，将全数于12月31日退职，告别四十三年的政治生涯。”
 
 其实，监察委员就压根儿未曾“高风亮节”过，他们只是御用鹰犬而已。他们连自己遭遇不平（如监委何济周案、如监委宋英之夫雷震案），都不敢弹劾，何况老百姓？四十三年拿黑心钱吃白饭，有愧职守，正在此辈也！（1991年12月7日）
 
-
-
 买脚踏车
 
 下午与小屯在建国南路信义路口买一脚踏车，车行老板认出我，算我三千六百元。
 
 与小屯分骑而归。（1991年12月7日）
-
-
 
 十万人一个图书馆每个人不到一本书
 
@@ -2262,8 +1921,6 @@ ________________________
 
 台湾在国民党统治下的读书风气，竟是如此！至于所读之书是否为值得一读之书，更谈不到了！（1991年12月8日）
 
-
-
 买喜马拉雅猫
 
 十多年不养猫了，今天下午与小屯在林森北路看中一小公猫，索价一万六，最后以一万二成交，是喜马拉雅猫（Himalayancat）。今年10月14日出生。这种猫头宽而圆、脸短眼大，为波斯猫与暹罗猫交配的品种，20世纪30年代才“问世”的。
@@ -2271,8 +1928,6 @@ ________________________
 这只小猫的特色是脸部耳部足部尾部的褐色很淡，娇态毕呈而“贼相”不显，最为可爱。
 
 售猫者江西雩都李台香女士，爱猫备至，与猫说话，自称妈妈。（1991年12月8日）
-
-
 
 胡虚一破财印书行孝
 
@@ -2304,8 +1959,6 @@ ________________________
 
 以上所记，足见内容亦甚丰富。胡虚一不没先人及同乡之功德，亦义举可钦。只是此种文字，宜由《湖南文献》等刊物刊出，不宜由胡老师自费来印耳。
 
-
-
 吴丰山主持的黄色广告
 
 吴丰山主持的《自立晚报》每天都登黄色广告。以今天的为例，择其十则：
@@ -2329,8 +1982,6 @@ ________________________
 九、“莱茵茶艺咖啡软玉温香抱满怀触摸的感觉真好闻香专线7112100。”——李敖按：触功加嗅功。
 
 十、“不是王牌不登场袒裎相见拆真招神秘刺激大开界酒国英雄尽管来3115958、3115974。”——李敖按：“袒裎相见”自胜“若隐若现”。（1991年12月10日）
-
-
 
 彭明敏谈话
 
@@ -2358,8 +2009,6 @@ ________________________
 
 我认为以彭明敏的高格调，他一定后悔率先支持过李登辉。（1991年12月11日）
 
-
-
 假神道拉票
 
 今日《联合报》：
@@ -2374,15 +2023,11 @@ ________________________
 
 古人是假神道设教，今人是假神道拉票。——为搞政治，高等知识分子竟低级如此，太不对了！（1991年12月11日）
 
-
-
 熊式一死了
 
 报载：“以王宝钏一剧‘令英国人流泪’的戏剧大师熊式一先生，本年8月2日离台，飞赴大陆北京。熊氏年近九十，此行系为探视其散处各地之五个子女，现在北京外语学院执教之熊德聣教授为其长子。熊氏抵北京后身体状况正常，不料8月20日发病，开始昏睡，但经医院检査心肺正常，熊公自信心甚强，认为没病，后来验血，发现白血病晚期（血癌），9月8日正式住院抢救一周无效，终于9月15日与世长辞。”
 
 我初见此人于二十多年前，在吴申叔家，对我恭维备至。两年前我在贵阳街看画，他还过来打招呼。但我以此人著英文《蒋介石传》，谀蒋不已，不喜欢他。（1991年12月11日）
-
-
 
 “引清兵入关”？
 
@@ -2398,8 +2043,6 @@ ________________________
 
 民进党式台湾人玩政治，就这么好笑。每次都不用大脑，叫出一个口号来中风疾走。今天是“总统直选”、明天是“公民投票”；一阵子是号召“重返联合国”、一阵子是严防“引清兵入关”……口号喊得爽，可惜全无可行性，也根本不切实际。这些浑人，光靠口号就可自淫自慰，其愚真国民党望尘莫及也！（1991年12月11日）
 
-
-
 登广告自曝其矛盾
 
 《自立晚报》出现满版由“民主进步党中央助选团”刊出的广告。其中一段是：
@@ -2410,8 +2053,6 @@ ________________________
 
 既然“独立”已是“客观存在的事实”，那么整天吵着还要“台独”“台独”的人，岂非“脱了裤子放屁”？可见在逻辑上，他们的举动，就是自我矛盾的。这批人头脑这样坏、思考能力这样糟，还玩政治呢！（1991年12月11日）
 
-
-
 李镇源的可鄙
 
 许强医师台大医院前身台北帝大医科第一届毕业、日本九州帝国大学医学博士，曾任台大医学院内科副教授，并兼附设医院第三内科主任，1950年因“意图破坏国体，以非法方式颠覆政府”，被国民党政权枪决，当时才三十七岁。
@@ -2421,8 +2062,6 @@ ________________________
 报上说：李镇源表示，许强是台湾很优秀的医师，他个人深受许强耿直、有正义感的人格所影响。许强是关心国是，并没有要推翻政府，却被以《刑法》第100条入罪、枪毙。李镇源表示，能在“世界人权纪念日”追悼许强的贡献，他感到很欣慰。
 
 我却觉得李镇源很可鄙。若说许强的耿直、有正义感的人格影响了你，为什么你拖了四十年才发生“效果”？四十年间，为什么你一路做懦夫？你的勇气，不发生在国民党黑暗作恶之时，只发生在国民党“洗面革心”之后，这种勇气与时机，未免配合得太安全了吧？（1991年12月11日）
-
-
 
 刘捷与《黑龙江百科全书》
 
@@ -2447,6 +2086,3 @@ ________________________
 通信处：邮政编码：150040
 
 黑龙江省哈尔滨市动力区王兆新村四栋一单元六楼三号
-
-
-
