--- a/06.沉思日记类/李敖随写录后集.md
+++ b/06.沉思日记类/李敖随写录后集.md
@@ -1,4 +1,8 @@
-#《李敖随写录后集》目录
+# 李敖随写录后集
+
+<!-- toc -->
+
+## 目录
 
 * 《李敖随写录后集》自序
 * 一、邓维桢和他太太
@@ -154,8 +158,6 @@
 * 一五一、在民主基金会讲话
 * 一五二、金兰俗务尾声
 
-
-
 《李敖随写录后集》自序
 
 刚刚写完了《李敖随写录前集》自序，意犹未已，再写这篇《李敖随写录后集》自序。
@@ -184,25 +186,17 @@
 
 1994年9月22日
 
-
-
 邓维桢和他太太
 
 邓维桢来，谈写作和出书计划。维桢是朋友中最会计算、最肯用头脑的人。他会不断的求新求变，创造机会，掌握主动，并灵活进出于计划放收之中。他的太太又最干练，所以相得之下，能够成就惊人。（1991年12月12日）
-
-
 
 信义公寓今昔
 
 今天信义公寓做修漏工程。三十坪的信义公寓如今使用了二十七年，房子已相当老旧。1964年买它的时候，房价是新台币十二万元（六万付现金、六万分期付款）。二十七年下来，房价已达九百万（楼下今年售出之价）。光此一事，可觇世变。（1991年12月13日）
 
-
-
 沈登恩
 
 与陈良埙、沈登恩午饭。饭后去参观远景台大店。登恩搞出版，造次必于是、颠沛必于是，在出版上的精神与信念，非任何市井出版商可及。可借他时运不济，一次《诺贝尔文学奖全集》计划失败，害得他至今万劫难复。失败之后，他备受人间冷暖。但我一直对他不冷。每逢年节及我生日，他必亲送礼物以示不忘。小沈亦性情中人也！（1991年12月14日）
-
-
 
 路上拾遗所见
 
@@ -258,8 +252,6 @@
 
 全文也算是台湾“乡土文学”了。只是内容将李郝二分法，思路未免太简单了。——蒋家奴才一丘之貉，岂有李好郝坏之理，都是劣种啊！（1991年12月15日）
 
-
-
 每人每年只花二十元买书
 
 今日《中央日报》记者陈济元采访报道：行政院新闻局副局长廖正豪，昨天应文化大学新闻研究所之邀，做专题演讲时指出，四十余年以来，国人的生活从勉强温饱，到今天衣食无缺、生活富裕，物质生活已不虞匮乏，然而，精神生活却极为贫乏。据统计国人每年每人花在购买图书出版品的钱，平均才二十元新台币而已。廖正豪表示，国人应在“饱暖思艺文”，重新省思对固有民俗文化的参与程度，借以提升生活的品质云。
@@ -269,8 +261,6 @@
 这种现象出自主管图书出版品的头子之口，而自己不以为羞，亦真官僚也！
 
 何况，两个头子只提每人每年平均买书的钱只二十元等等，而不提所购何书，也是皮相之见。事实上，一年纵二十元买书，买的书，也绝大多数是“怪力乱神”之作，真正的正经书，还是靠边站的！（1991年12月16日）
-
-
 
 《中央日报》乱说人是民进党
 
@@ -282,15 +272,11 @@
 
 殊不知苏秋镇根本不是民进党、也不屑是民进党。文化党棍石永贵主持下无知荒谬，竟一至于此！（1991年12月16日）
 
-
-
 如此学术中立！
 
 非党盟电视文宣录影带，涉及未经同意引用诺贝尔奖得主李远哲部分，中央选举委员会昨天已予以删除。非党盟会长苏裕夫说，他支持李远哲博士强调学术中立的观点。
 
 我的看法是：李远哲分别为抢同一块骨头的罗美文、刘福增说一点也不中立的话，到头来又对二人双双撤荐，出尔反尔，实属未妥。书呆行径，害人而不自知也。（1991年12月17日）
-
-
 
 “蒙最高法院判死刑定谳”
 
@@ -314,15 +300,11 @@
 
 强迫捐赠之事，应非事实。但是捐赠手续，确有可议。试看昨天电视新闻上播出死刑犯具结书画面，劈头竟是“蒙最高法院判死刑定漱”字样，此照抄官衙胥吏拟稿可知也，岂不可笑？如此行文，若被日本鬼子借镜以去，那可就荒唐荒到东洋国去了！（1991年12月17日）
 
-
-
 选举与风水
 
 今日《联合报》登：台湾地理师协会副理事长陈冠宇说：每次的选举前，有些名气的地理师总是异常忙碌，常会受托替好几个候选人算运势、看风水，当地理师向某些原本打算参选的人表示，今年的“运”不旺，常令他们打消念头，干脆先为人抬轿，择年再参选。除此，请地理师为候选人的竞选总部看风水，也是相信风水的候选人必经的程序。
 
 台湾妖妄之风日浓，连选举一事也扯进来了。全世界的选举，都没时兴风水的，台湾却独树一帜。民主政治落到这班人手里，真是“风水”欠佳啦！（1991年12月18日）
-
-
 
 郑自才
 
@@ -332,29 +314,21 @@
 
 郑自才刺蒋，有大功于党外。如今垂老回来入狱，由太太“代夫出征”，其志亦可令人理解。唯独为了竞选，竟不得不听后生小子新潮流一批人摆布，以“台湾共和国”为政见，未免失之矣！（1991年12月19日）
 
-
-
 郝军头所信何教？
 
 今天《中央日报》：“行政院长郝柏村夫妇，昨天晚上参加了基督教台北卫理堂星期团契主办的圣诞感恩圣乐崇拜。郝院长夫妇是应总统府资政李国鼎的邀请，参加了圣诞感恩圣乐崇拜。他们于7时25分抵达位于新生南路的卫理堂。”
 
 郝柏村日前还到各淫祠上香拜佛呢！他到底信什么教啊？（1991年12月20日）
 
-
-
 高玉树无耻
 
 今天《联合报》有大标题广告：“高玉树暨全国民主非政党联盟重要声明”，其中第三条竟出现“感谢民主政治元老总统府资政高玉树先生以顾问身份助选”的文字，自己“重要声明”感谢自己，高玉树太无耻了吧？（1991年12月20日）
-
-
 
 “六亿农民皆诗人”之后
 
 上海《解放日报》日前刊出一则报道指出，中共部分地方大搞假大空“形式主义”的把戏，要求群众背诵唐诗运动，并拦路抽考，处置背不出者，这种华而不实的怪事，简直就是中共大跃进时代“六亿农民皆诗人”的翻版。这则题为“老谱翻新”的报导，明显反映出大陆社会在改革开放十年后，仍存在许多人为不合理的制度与政策。报导说，一位退居二线的领导干部，到某地调查研究，竟遇上一件近乎离奇的怪事。某地为创出独家“特色”，兴师动众地掀起一场颇具声势的群众性背唐诗运动。例如，为了人人过关、个个达标，有关部门别出心裁，在街巷道口设“考场”，拦路抽考妇孺老幼。若背不出“唐三李”云云者，则要报上姓名，听候处置。如抽考路人，目不识丁者，大概也不能例外。这位老同志了解情况后，立即找当地同志直率进言，说叫老百姓学文化要一笔一画地打实基础，何苦要搞这些华而不实的名堂。但该地的一些干部，为动员老百姓背唐诗，已经喊破了嗓子、累出了大汗，要“降温”恐怕也已很难；况且还有些人认为此举是件创建本地“特色”的大动作，既然已经“大办”，就不能虎头蛇尾，就此收场。文章说，有人也许认为这是闻所未闻，但恐怕只是老谱翻新而已。文章表示，中共大跃进时代的“六亿农民皆诗人”，“文化大革命”当中那位顾妈妈的“典型”，仍令大陆同胞记忆犹新，只是时至拨乱反正十年后的今天，这类假大空的把戏仍时有发生，岂不令人深省？
 
 以上《中国时报》香港专电。这又是中国文化走火入魔、令人哭笑不得的一例。（1991年12月21日）
-
-
 
 中医解决不了检验问题
 
@@ -368,13 +342,9 @@
 
 “上池之水”是还没降落到地面上的水，雨露是也；“视见垣一方人”指能看到隔着墙那一边的人。（1991年12月21日）
 
-
-
 回潘毓刚电
 
 夜回潘毓刚电。毓刚说，蔡明殿告诉他，李敖把台湾人给得罪了，因为他写文章替陈仪说好话。我说只要该说的真理，得罪谁我也不在乎。（1991年12月21日）
-
-
 
 海上缉私事件
 
@@ -404,8 +374,6 @@
 
 平心而论，以上争执，起于偶然，大陆渔民并非处心积虑，有备而来，主其事者绝不可庸人自扰，把小事化大，大事化僵，给两岸交往留下伤痕。倘若能以悲天悯人、设身处地的心态，把它看做邻居小孩打架闹事来处理，好像小孩玩球，无意中球掉落人家庭院，于是翻墙拾球，自是常情，免不了损坏人家的花草，引起墙里墙外的孩子一阵叫骂，甚或打斗，只要大人出面，纾解一下，便皆大欢喜，各自散去，依旧是好邻居。正如中新社所说：两岸渔民共同一海域捕鱼，曾涌现出许多互相救护、互相帮助的感人事迹，像这种不愉快的事情，应该是可以避免的，也值得我们想思。我们也深信掌握国运民命的领导人，必定会以两千万人的福祉为基础，做出理性的处置。（1991年12月22日）
 
-
-
 陈大革谈宋楚瑜的阴谋
 
 陈大革及其妹陈大雅午后二时半来，他即将返美。我忙得还没吃午饭，小聊一阵。大革请我送一本书慰其弟，我乃题《国民党研究》扉页如下：“大代老弟：彼可取而代之。”
@@ -413,8 +381,6 @@
 我跟大革说：“三十年前，我只在你跟我家六小姐婚礼上，见过陈大代一次，并合照一相。那时候他瘦得像鬼。如今我在电视上看到他，完全是一副大官样子啦！”
 
 大革说宋楚瑜为了抵制关中系的大将陈大代，故意在台中推出形象与大代相近的国民党候选人暗为抵制，结果双双落选。——宋楚瑜为了党争，宁使国民党当选名额降低，也不让关中系上垒。（1991年12月23日）
-
-
 
 倒胃的邻居
 
@@ -426,15 +392,11 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 会开了两小时，真浪费时间！我固辞主任委员，但无人肯接。（1991年12月23日）
 
-
-
 教授以下，大量出笼
 
 中央社电讯说：教育部学术审议委员会年终统计指出，一年来，以作送审教师资格者有1476人，审查时发现10人以抄袭的著作送审，约占0.67%，除未通过其送审的教师资格外，五年内也将不再受理这10人申请送审教师资格。这10人包括2人送审教授资格、3人送审副教授资格及5人送审讲师资格。学审会一年来审议包括军警校院与空中大学的专科以上学校139所及海外专上学校16校教师资格，人数共计7105人，其中，以学位送审者5674人，占79%；以著作送审者1476人，占21%。以学位送审通过教师资格的人数是567人。以著作送审教师资格者，通过917人，比率为62.13%。
 
 上一统计，可见台湾学术标准之滥！教授以下，大量出笼如此！（1991年12月23日）
-
-
 
 泰国艺品
 
@@ -442,21 +404,15 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 我对艺器收藏，taste颇高，俗人不知也。（1991年12月24日）
 
-
-
 吕佳真勤奋
 
 今早10点交《求是评论》第三期校稿给吕佳真，她一连工作十一小时，赶出淸样。她的工作能力与热忱，我生平仅见。她和我一样，有“工作狂”。但她更能吃苦耐劳、更勤奋。（1991年12月24日）
-
-
 
 己所不信，施之于人
 
 昨日《联合报》登读者孙明先生投书，略谓：“民进党在此次选举中的主诉为‘总统直选’……但当有人质问民进党自己选党主席为何也用党代表间接选举而不用党员直选时，民进党没有给人明确的答复。……这两天在民进党的竞选书摊上，看到了台湾独立建国联盟总本部前主席许世楷著的《台湾宪法论》，书中第169页：‘在台湾，我们应该采用何种政治制度？……两相比较，我们会发现采用总统制的国家，比较易于变质为独裁政治……，容易变质为经由国民选举出来的独裁者。’第11页：‘在现在的中华民国体制下主张总统直选，是有其运动上的必要的，但是这一个主张与将来的台湾共和国宪法要规定总统制或内阁制，是可以分开来想。’第19页：‘新国家运动欲以总统直接民选为主题展开运动，所以战术上较倾向于主张总统制。笔者希望将来的重要政治制度，不要以一时的运动上战术需要来下决定。’换句话说未来可以‘不要’总统直选，但现在，却可以向国人推销。”
 
 我早就怀疑民进党中有点常识的人，都不会相信开倒车的总统制，明明不相信却以之为号召，是为政治不择手段，且以制度为儿戏，真正的政治家不忍为也。而许世楷之流，公然以自己不信的制度，不择手段明目张胆施之于人，这又算什么啊？民进党太不入流了。（1991年12月25日）
-
-
 
 刘福增何苦去竞选
 
@@ -465,8 +421,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 维桢说，落选之夜，福增太太来电，声音都快哭了。
 
 我说，福增是老实人，却又热衷于无聊的政治，真是不智。他如不那么热衷，不先自己宣布竞选，摆出张忠栋式滑头身段，临时在民进党抢个不分区代表名额，以他的党外资历，应无问题。何苦亲自出马？最后又被他老同学李远哲摆一道，撤销“推荐”，弄得灰头土脸。福曾不好好的做教授，却干这些，真是不智。（1991年12月26日）
-
-
 
 四分之一世纪后
 
@@ -494,8 +448,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 他点头同意我的话。（1991年12月27日）
 
-
-
 “哲学家”叹息
 
 楼下即东丰街，原有一家电玩店，路过时在窗外常见里面有一枯瘦的穿西装打领结小老头在玩，原来是哲学教授劳思光。有时高信疆也和他一起。我笑问信疆：“你怎么这么无聊、这么‘与民同乐’，怎么带劳思光做起你们身份不该去的地方，玩起你们身份不该有的娱乐？”信疆笑着说：“谁带他来了？——是他带我来的呀！”听了信疆之言，相互大笑。
@@ -505,8 +457,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 今天晚饭后，与小屯在东丰街，一人走过，忽闻大声叹息一声，小屯注意一看，说：“那不是劳思光吗？”果然是他。
 
 我说：“这个书呆子，又出没东丰街了，哲学学到徘徊于电玩之中、叹息于马路之上，哲学可真无计可施了。”（1991年12月27日）
-
-
 
 吴丰山无能主持下的《自立早报》
 
@@ -532,8 +482,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 而本报昨晚均无法联络社长吴丰山、发行人吴树民等人。（1991年12月28日）
 
-
-
 陈翰珍的真面目
 
 青年党监察委员95岁的陈翰珍年底与其他老贼一起退职。今日《中国时报》有专文写他，可述评者如下：
@@ -546,13 +494,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 四、“从民国十七年，北京农大毕业后，他按月抽储薪水的百分之五充做‘翰珍奖学金’之基金，民国四十年后，待遇改善，改抽一成，以助清寒子弟求学。他说：‘若待有余而济人，则一生无济人之事。有心帮助人，就要强迫自己节衣缩食，民国十七年，设了翰珍奖助学金后，我连烟都戒了。’”——这一段，言行俱佳。不过，照李世杰书中所说，陈翰珍于政治犯悲惨处遇之调查，漫无心肝，可见此人嘉言懿行，适为沽名钓誉，真正务实弹劾，不敢为也！（1991年12月29日）
 
-
-
 台湾山水，还能看乎？
 
 决定不租金兰大厦车位了，也打算把喜美车卖掉。今日午后与小屯开车做售前之游。闻说七星山因寒流下雪，小屯没见过雪，乃决定上山。不期一上仰德大道，就陷于车阵中，在车中五小时，始转到北投脱身归来。我早就感到台湾假日到处人山人海，今日又躬逢其盛，乘兴而去，败兴而返，胃口倒尽了。以后再也不上当了。（1991年12月29日）
-
-
 
 理发师之言
 
@@ -560,15 +504,11 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 理发师们认出我，跟我聊起来。53岁的理发师说，我们这年纪上下的人，已经很少有理发师了，大多都改行了。学理发，要一年半出师，收入不多，没人要干了。“纯理发”连房租都不够，所以只有在巷子里租个月租三万以下的房子，由一个老板、两个师傅三个人共同维持小局面。至于大街上的，都不是“纯理发”，得掺进色情才够开支，而小姐们学理发，只两三个月就可应付。几十年下来，理发业变化一至于此！（1991年12月30日）
 
-
-
 老代表总算退职了
 
 老立委、老国代、老监委今天全部退职，财政部国库署官员表示，565位资深民意代表退职，每人除可领530万元的退职金外，同时可享受年息18%的优惠存款，估算之下，国库除提拨30亿元的退职金外，同时每月须再支付200万元的利息，一年2500多万元，而且活得愈久，国库就付得愈多。
 
 四十四年来，这一大批老而不死的人，他们是国民党伪政权的支持者、蒋家天下的拥护者和四十四年来不劳而获的民主花瓶扮演者。四十四年来，他们千百人中，竟没有一个人敢公然辞职以谢天下、没有一个人肯公然拒领薪水于不顾，还满口救国救民仁义道德，这种令人厌恶的人类，求诸古今中外历史，也是绝无仅有的！如今他们总算人人携巨款以退职了。我们一生中的四十四年，都做了他们的观众，真倒霉哉！（1991年12月31日）
-
-
 
 梁肃戎临别瞎说
 
@@ -587,8 +527,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 二、所谓“合法”，所谓“依法而来，依法而去”，全是谎言。四十四年不改选，并无任何合法的根据。所以真相乃是“非法”、“非法而来，非法而去。”
 
 三、四十四年来，所有迫害人权的恶法，如梁肃戎所自豪的《惩治叛乱条例》、《出版法》等，无一不是老贼们的杰作，在这杰作下，禁书无数、沉冤无数，梁肃戎竟还说是“保障言论出版及人权自由”，真是瞪眼瞎说。（1991年12月31日）
-
-
 
 抱小老虎
 
@@ -622,8 +560,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 碰到送切蛋糕的唐琪。她向动物园现场负责人说：“我是李敖小妹妹的同学，我们从小就崇拜他。”（1992年1月1日）
 
-
-
 巴基斯坦的怪判决
 
 去年12月14日美国《侨报》登出《怪刑罚——变性之刑》如下：
@@ -654,21 +590,15 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 一位德国律师就表示：“这是世上首宗以变性为刑罚的判决，相信也不会是最后一宗。”（1992年1月2日）
 
-
-
 末代秀才
 
 据中新社报道，中国最后一个秀才、有“上海第一老人”之称的110岁人瑞苏局仙，去年12月30日去世。苏局仙生于清光绪八年（1882）11月23日，24岁时考取末科秀才，一直以诗、书驰名沪上。直到去世前两天，还在寓所为上海百岁老店“五芳斋”书写了一幅“寿”字。上海《文汇报》在报道此则消息时称，至此中国自隋代以来，延续一千三百多年（587-1905）的科举制度选出的人才已全部离开人世。（1992年1月3日）
-
-
 
 碰到郑淑敏
 
 今天上午在荣民医院排队领药时，有两人插队，我斥责之。事后有一漂亮摩登女士回过头来说：“李敖先生你的《北京法源寺》写得好极了！”我一时认不出她来。后来她拿出名片，才知道她是郑淑敏。我说：“十多年前远流老板介绍过。你越来越年轻，认不出你来了。”
 
 她现任中华电视公司企划室经理。我还以为她一直在《中国时报》。——我与人不往还，许多人事异动都不清楚了。（1992年1月3日）
-
-
 
 西藏人权史料
 
@@ -698,8 +628,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 我深信像西藏这种落后的顽固的黑暗的神权统治，只有共产党对付得了它，只有靠共产党的霹雳手段，才能达到某种程度的解决。（1992年1月3日）
 
-
-
 俞大维乃一浑人
 
 俞大维96岁，台湾大捧特捧之。其实此人乃一浑人，读书虽多，但学而不化。
@@ -709,8 +637,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 《中央日报》又登：“俞大维有相当深厚的国学根底，就国学界而论，毛子水是他最佩服的人，俞大维家里的墙上便挂着一幅毛子水的字：‘经文纬武奇男子，特立独行大丈夫。’这两句话用以形容俞大维倒是十分的贴切。”其实毛子水亦一浑人，“国学根底”去陈寅恪远甚。
 
 俞大维一辈子做蒋介石高级走狗，算是什么“奇男子”、“大丈夫”？名词定义乱用一气，此国民党统治下之是非标准也！（1992年1月4日）
-
-
 
 六十岁前的出专书计划
 
@@ -725,8 +651,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 合计起来，六十岁生日前要完成一百二十万字专书定稿。每天至少一千字用在写专书上面。
 
 《北京法源寺》是二十二万字的量，比照该书厚度，可出六册专书。（1992年1月5日）
-
-
 
 郭廷亮生平事略
 
@@ -745,8 +669,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 先生与李玉竹女士结缡十余年，育一子二女。子志忠从商，媳黄素月勤俭持家，长女志强，修读国立空大社科系，适乐君山涛，任教桃园凌云国中。次女碧莲，适林君扔蚊，均从事电子业，咸能自立。惟子女对其父遭数十年之冤屈，宿怨难平，虽人以邈，屈辱犹存，切望究其公道，补其万一，还其应有，恕子女洗辱，众人释怀，更慰先生在天之灵！
 
 此文文笔甚劣。（1992年1月5日）
-
-
 
 林洋港何以无耻？
 
@@ -772,25 +694,17 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 两相对照，林洋港之无耻嘴脸，跃然纸上。（1992年1月6日）
 
-
-
 大陆枪决人口贩子
 
 路透社北京6日电：《中国妇女报》今天报道，哈尔滨有四人因绑架六十多名妇女并将之贩卖为奴，已遭处决。这四人中有两人是夫妻。报道中说，去年12月27日原有十六人因涉及此案被判死刑，但其中十二人获得减刑。这宗人口贩卖案的主谋是张振江和他的妻子黄淑珍（皆译音）他们自1987年起诱拐黑龙江省的女子，将之售至他省，已嫌人十万元人民币（一万八千五百美元）。落入他们手中的女子共有六十人，目前已有十八人被寻获并送回家。中国大陆有些孤远地区的富农因无法娶得当地女子，而愿意以金钱购买外地女子为妻。绑架和贩卖女子为奴因而成为十分普遍的事。（1992年1月7日）
-
-
 
 法官糊涂，无独有偶
 
 嘉义地方法院少年法庭公然违法裁定，将涉及刑责五年以上的少年犯，以明显违法的手法，将其轻罚——“保护管束”，且此案毫无救济方法，现正引起院检双方的尴尬与不知如何救济。该案由法官曾永霖裁定，案号为1990年度少训字第313号。《少年事件处理法》中明文规定，少年犯触最轻本刑五年以上有期徒刑之罪责时，应裁定“移送检察官”，以追究其刑责。曾永霖处理邱X辉案时，法院仍采事前送审制度，必须经过当时担任嘉义地方法院院长、现任台南地方法院院长陈建民的审阅后，判决和裁定才能生效。而陈建民竟让这种法律文书过关，法官糊涂，可真无独有偶也！（1992年1月7日）
 
-
-
 李登辉的“正学”论
 
 士林外双溪临溪路七十二号“素书楼——钱穆先生纪念馆”昨天落成启用。李登辉“特颁书面贺词”，中有“拒辟邪辞，阐扬正学”之语，真是鬼话。这些伪政客伪学人，一辈子靠窃国大盗蒋介石，又何“正学”之有啊？（1992年1月7日）
-
-
 
 溢领黑心钱
 
@@ -810,33 +724,23 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 根据以上资料，可见立委也、国代也，二十年来，不但领黑心钱，而且是溢领黑心钱，国民党固然，民进党亦不例外。民进党立院党团干事长彭百显说：“在延会期结束后，都会以‘比照过去会期’的方式，将剩下的日子以‘法案研究’的名目来付，事实上，延会是不是需要，有检讨的必要，在一切正常化后，什么时候开会，什么时候结束都应正常化，国会议员应有的尊严与配备都应提供，但不应用混淆的名义或惯例来做，许多人抨击立委岁公费有多少，其实像我个人，两年来上百万的钱都给了助理，我还得要去捐钱，该给的给，比如助理费，不该花的当然不能浪费。”话虽说得冠冕堂皇，但他本人，还是照样溢领不误。（1992年1月7日）
 
-
-
 增额立委更不要脸
 
 前立委雷渝齐今天在《联合报》投书说：“……立委溢领二十年延会费，在立法院每年法定会期八个月之外，整整四个月都算是延会，无论星期日、国定纪念日、甚至休会期间，均按日领取延会费。消息曝光后，引起各界惊讶与反弹，许多增额立委竟表示不淸楚有无溢领延会费，不知是故意推倭责任，或是近年来立委所领钞票太多而根本未在意这笔钱的存在，暂且不论。唯就事论事，纵使溢领延会费有所不当甚或触犯刑章，似不宜过分苛责现任增额立委，盖此事由来已久，早成惯例。唯近年来立委待遇大幅成长，几乎已超过原本薪资相同的监委一倍不说，而且还要求自目前每月二十余万元的收入，调整到三十余万元，其不合理的程度，远非溢领延会费一事所能望其项背，殊堪重视。举例言之，立委要求将目前助理二人费用每月五万元调整到助理四人每月十二万元，另补助司机费用二万元，合计每月十四万。而目前各级民意代表之助理费用，可由民意代表视同薪津的一部分领取，并非核实给付。倘立委不聘用助理及司机，则三年任期可有新台币五百余万元纳入私囊；即使聘用助理及司机，亦难保不用这些人协助立委经营事业甚或从事非法关说工作，有否每月再增列九万元费用之必要，有待深入探讨，不容立委一意孤行。依现行预算法之规定，立法院不能提出预算案交由院会审议，必须由行政院汇编后提出。至于行政院为什么不能严予把关而任由立委予取予求，报载一位官员说得好：‘谁敢得罪他们’，因为立委可以依法大刀刪除行政院所属各机关预算作为报复。甚至立委还能利用这把大刀，威胁行政官署让他们承包工程、垄断采购案，其不当得利，动辄数百万元，甚或千万元以上。类似行径，又与‘强盗’何异？忆及多年前一位水电工因恐支票退票而抢劫二十万元，经人追赶后立即丟弃所抢款项，仍被移送军法判处死刑枪决。而立委利用宪法賦予刪减预算的大刀，从事与抢劫无异的行径，竟毫无责任可言？难道立委是‘有照强盗，？”
 
 雷渝齐所论大体不错。唯他说“似不宜过分苛责现任增额立委”，却是大错特错的。“增额立委”口口声声骂万年立委拿黑心钱，而他们却照拿如此，可谓更不要脸也。（1991年1月8日）
 
-
-
 王小痴死了一周年
 
 王小痴死了一周年。小痴本名王翼樟，生于1928年。自幼入福州名宦林则徐、沈葆桢后人所创办专收缙绅子弟的童官小学，时书画金石名家陈子奋担任该校美术课程，见小痴少年岐嶷，许为入室弟子。小痴亦受教唯谨，不惰不休，于书、画、印无不精擅，深得陈氏真传，陈氏之篆刻作品，且时由小痴代为奏刀。小痴领悟性高、记忆力强、好读书。胜利后以在学之中学生即兼任福州《三民日报》总编辑，1949年只身来台，先在保安司令部做记录员，后来偶绘《三叔公漫画》由《新生报》连载，与《牛哥漫画》中的土包子、牛伯伯齐名。他主持过《新生报》《新生漫画》周刊，罗致当时漫画家张英超、梁中铭、又铭兄弟、李敬洪、李费蒙（牛哥）兄弟、梁乃予、罗慧明等为基本作者，又与李敬洪、牛哥、张我风等先后创办《民风画刊》及《兄弟画报》，而成为台湾漫画界的先驱。来台之初，另与俞敏庵、苗勃然、田野牧、梁乃予等青年篆刻家筹组台湾印学会，推陶寿伯为会长，参加各次美术展览。1957年，佐郑拯人在台南创办《成功晚报》，任总编辑；小痴能写、能画、能编，使《成功晚报》风行南部。后台北《民族晚报》社长李汉仪遨他担任《民族晚报》副总编辑；又应中央电影公司总经理龚弘之聘，任中影公司顾问；1961年与吴申叔、王莫愁、阎奉璋等合组联合传播公司，开台湾传播事业之先河。小痴综揽企划、推展、经营等一切事务，曾首次邀约白雪溜冰团、哈林球队等来台表演；1964年承办亚洲影展，由于凌波初次来台、陆运涛等香港影业巨子于影展结束后坠机身亡，昼夜忙碌不眠不息，致罹恙入台大医院，庸医误诊为舌癌，住院四年，开刀八次，其中又因庸医严重错失，致使舌根尽除，照射钴六十过量，出院之日不仅无法正常饮食及言语，且形貌全非，变成科学怪人。出院后以笔代言，多所不便，乃辞去《民族晚报》及中影职务。自创南方影业公司，从事影片摄制及发行业务。推出《成功岭上》、《古宁头大战》、《女兵日记》、《海军与我》等影片。后因影业景气低迷，暂停经营，以“龙中天”为笔名，为党外杂志写《论蒋经国》等文，风行一时。1989年生病，再被三军总医院庸医误诊，于1991年1月8日去世，活了六十四岁。（1992年1月8日）
-
-
 
 俞大维当时为何不说话？
 
 今日《世界论坛报》有黄钟《俞大维放马后炮》一则，说“前国防部长俞大维近日欢度九六大寿，他的口述历史《俞大维传》也同时出版。在提到‘孙立人事件’时，俞大维说：‘孙立人不听余伯泉劝告，大事做不成，却出了大事。他如果当我的副部长，肯定什么事都不会发生。’”“俞大维在军界多年，部属将官阅人无数，应该深知孙立人个性习气。若孙真有谋反之意，则自应依法处置，否则应还其清白。但俞大维忝为九人调查委员会之一，明知孙立人系遭诬陷，乃莫须有之罪，自当发挥道德勇气，为孙止谤白冤，奈何竟眼睁睁看着孙立人成为政治牺牲品？当时不说话，现在才来说大话，岂不有放马后炮之嫌？”“况孙立人当年是依总统令撤职查办，并‘发交国防部随时察考’，而俞大维正是当时的国防部长，若孙无罪，则何须‘察考’？而‘察考’又系何种罪刑？翻遍《六法全书》都无此规定，亦无此类罪刑，俞大维受过西方教育，懂科技，也应懂民主法治，他当时为何不说话？”此论是也。（1992年1月8日）
 
-
-
 牛仔裤
 
 上午去金山买西书等，归途碰到江述凡。他正在买牛仔裤，我从没穿过这种裤子，在军法看守所时，李国龙送我一条，可是没穿就改送人了。日前买的两条西裤，天冷穿起来太单薄了，我又不喜欢加穿卫生裤，看到述凡买牛仔裤，我也买了腰围三十五的两条，每条六百二十元。看起来是洋名洋货，其实是外销成衣用洋名者。中国货以洋名行销，我于裤见之。（1992年1月10日）
-
-
 
 杨西崑来坐
 
@@ -847,8 +751,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 他谈到当年蒋廷黻做驻俄大使时，曾持蒋介石的信，向斯大林要回蒋经国。这一史实，推翻了蒋经国自动回来的说法。
 
 他谈到蒋梦麟媚军阀的事。又说王世杰有自卑感。（1992年1月10日）
-
-
 
 余秋里断臂记
 
@@ -864,13 +766,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 1936年9月，红二方面军长征到达甘肃省南部的徽县、成县，从歼灭敌三十七军毛炳文部队中缴获了一批止血钳，红二方面军卫生部长贺彪就立即组织给余秋里做手术。那次手术，除止血钳是缴获外，刀子是借老百姓的那种剃头刀，锯子是老乡使的普通钢条锯，锯子不好，截骨很吃力，至今伤口还不平，有个突出部位。手术后，吐了一个小时，没有休息多久，一周后就又随部队出发了。（1992年1月11日）
 
-
-
 大陆人民是外国人？
 
 《就业服务法》立法出现妙文，在草案中，第67条有关外国人之规定，民进党籍立委坚持将大陆人民纳入外国人专章之内，最后如其所愿。台湾政客无情短视如此，真令人气愤。（1992年1月12日）
-
-
 
 李焕侈言变化气质
 
@@ -878,13 +776,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 文中有一段说，“救国团”办各种训练与活动，照“经国先生的指示”，第一目的，在“变化中国青年的气质”。其实，蒋经国、李焕之流，自己又有何气质？中国青年的气质被他们一变化，才真的要命呢！（1992年1月13日）
 
-
-
 转型期中的知识分子嘴脸
 
 《中国时报》登“转型期中当代知识分子的角色定位”，集合一群教授做知识分子身段发言，其实他们都是好出风头的懦夫而已。其中胡佛指出，现在的知识分子出现泛政治化、泛统独的言论取向，谈学术、文化、公共政策的人少了，什么问题都要以省籍、政治来谈。现在风气大开，知识分子批评的压力和危险性已大为降低，原本可以走出更宽广的言论道路，不料现在情形却正好相反：“实在不知道问题出在哪里！”胡佛这问题提得颇耐寻味，其实答案很简单。这些懦夫教授只是与时推移、投大众所好而已。他们不敢也不能“走出更宽广的言论道路”，所以弄成今天这种滑稽现象。真可厌也！（1992年1月14日）
-
-
 
 李登辉等又“上坟”了
 
@@ -892,25 +786,17 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 这一群无耻之徒，又去向蒋氏父子“上坟”了。他们没有一个像个男人！（1992年1月14日）
 
-
-
 林洋港口出无耻之言
 
 林洋港昨天在“中枢纪念经国先生逝世四周年大会”中提出报告，以“蒋故总统经国先生遗爱常新”为题，大拍马屁。他说蒋经国之“盛德伟业，灿若日星，举世景仰”，这种语句，是何等无耻！中朝大吏口出如此无耻之言而人不以为奇，这是林洋港无耻外又加上群众的无耻，太不成话了！（1992年1月15日）
-
-
 
 台湾人猪比
 
 农林厅统计，台湾去年年底毛猪在养头数有一千万头。由此可见，台湾人民平均每两人有一只猪，人猪比是二比一。（1992年1月16日）
 
-
-
 梁夫人新寡后
 
 在录影带店，有人背后叫我“李敖兄”，回头一看，原来是何怀硕。小聊几句。我说：“我有一次看到你陪梁先生（实秋）回他家，现在你常去看梁太太吗？”他说：“不去了。梁太太也搬走了。梁先生死后，梁先生的朋友都不去了，她又恢复交她以前的朋友了。”（1992年1月17日）
-
-
 
 陆晋德的观点
 
@@ -929,8 +815,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 我认为陆晋德的观点是正确的。
 
 判这案子的高院法官是刘士元，他乱判过许多案子，此法官实在程度有问题。（1992年1月18日）
-
-
 
 惩许案文件
 
@@ -960,8 +844,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 我留存上面这一重要文件，以显示执法人员许阿桂明明站在无法无天的一方，却还浪得司法正义之名、司法英雄之名，可见这个社会是何等荒谬！本案重点在依《刑事诉讼法》，检察官并无自行论断自诉合法与否之权，但许阿桂竟公然抹杀保护人权的自诉制度，如此玩法之执法人员，却还口口声声自以为有理，这种女人实在不可理喻并且可厌也！（1992年1月19日）
 
-
-
 《中国时报》的浑蛋社论
 
 今日《中国时报》以“正义不彰将何以恢宏志士之气——评许阿桂被惩事件”为题，发表拥许阿桂社论，立论浑蛋已极。
@@ -971,8 +853,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 二、该社论又说：“我们何爱于许阿桂？我们也何憎于公惩会？我们所葸葸顾虑者，是许阿桂在侦查华隆案中所展现的不畏强御的精神与道德勇气，在滔滔者天下皆是的公务员中，卓荦不群，并对久所诟病的司法风气，有澄清和振奋作用，已获得社会大众的肯定。如今却给公惩会泼下一头冷水，不但使许阿桂忿忿难平，也使其他有志与社会不合理现象挑战的公务员感到寒心，望而却步。正义不彰，又如何能恢宏志士之气，开拓新境。这一惩戒案对于国事前途的影响实在不小，固不只为许阿桂一个人平冤白谤而已。”——这段话，更是公然颠倒是非。华隆案是两大特权集团——张建邦家和翁大铭家——的窝里反。许阿桂只敢起诉翁家，不敢起诉张家，这叫什么“不畏强御的精神与道德勇气”？明明是该予以谴责的懦妇检察官，却被浑人捧为“司法英雄”，这才真正叫“正义不彰”呢！
 
 由《中国时报》的社论，可以看出一般老百姓是多么浑蛋，余纪忠、余建新父子是多么浑蛋。（1992年1月20日）
-
-
 
 乱世情鸯又二例
 
@@ -996,8 +876,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 乱世情鸯，又见二章。（1992年1月10日）
 
-
-
 女总理控极右派领袖诽谤
 
 美联社巴黎19日电：法国总理克雷松夫人的办公室说，针对极右派的“法国民族阵线”领袖雷朋日前公开指称政府是“一窝子专门行窃、勒索、为非作歹的帮派分子”的谈话，克雷松夫人已提出诽谤之诉。
@@ -1010,19 +888,13 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 执政的社会党近来在民意调查中声望远逊其他政党，该党已矢言在为今年3月举行的全国性区域选举从事竞选活动时，将把对雷朋大加挞伐列为重点工作。（1992年1月20日）
 
-
-
 周联华伪君子
 
 教棍周联华在华视晨间节目中呼吁捐款给“台湾世界展望会”中“苏联粮荒捐款专户”，以为救援。这种伪君子，从没听说他为中国人自己人的粮荒捐过什么。（1992年1月21日）
 
-
-
 “五绝”与“七绝”
 
 晨去历史博物馆。归来得陈瑞康赠画。陈瑞康说张隆延说：“郑曼青吹牛说自己是诗、书、画等‘五绝’，其实该说‘七绝’才对——外加绝子绝孙！”陈瑞康说别人骂人，都是背后骂，不敢写出来，只有李敖敢写出来。（1992年1月21日）
-
-
 
 “小警总”
 
@@ -1030,13 +902,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 我每写作，江江必上书桌捣乱，似在干扰我出书也，其行径与“警备总部”又何以异？乃赐以绰号，曰“小警总”。（1992年1月22日）
 
-
-
 在中央图书馆
 
 下午三至六，在中央图书馆看资料，与张锦郎、应凤凰二位长谈。张锦郎诚笃好学，是罕见的好人；应凤凰勤勉努力，人所不及也。（1992年1月22日）
-
-
 
 “解运费”
 
@@ -1053,8 +921,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 她说，李陆续用同样手法向她骗色，又向她勒索四万六千元的“解运费”，由于李索求无厌，昨天中午12时许，她才决定向警方报案，将李绳之以法。
 
 如此荒谬事件，竟发生在大学生身上，国民党办的什么教育！（1992年1月23日）
-
-
 
 宠猫江江颂
 
@@ -1088,13 +954,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 惟我江江，一身肥肉。（1992年1月23日）
 
-
-
 劝谢聪敏去做流氓
 
 谢聪敏来电。我笑谓你如想当选，一、脱离民进党；二、改行做流氓，才有机会。他大笑。（1992年1月23日）
-
-
 
 政治作用的精神病院
 
@@ -1110,13 +972,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 陈中雄送我台湾省立玉里养护所照片，并存于此，以见玉里精神病院的外观。（1992年1月24日）
 
-
-
 有关大陆的一些统计数字
 
 根据大陆《消费者》周刊的统计，大陆人口一天消费酒三万六千吨，一年可喝掉相当于一个半杭州西湖的酒；一天抽掉香烟两亿两千包；这些香烟一盒一盒并排，长达一万八千八百公里，可绕地球赤道半圈。统计显示，大陆现有人口十一亿三千万，每天城乡消费总额二十一亿两千万元人民币。计每天消费粮食七十四万吨，相当于一个粮食基地县全年的总产量；消费猪肉四万七千吨，即每天要屠宰猪只一百万头；鸡蛋一千八百万公斤，即十八万六千只蛋鸡的全年产量；生活用布三万六千公里，可以绕赤道一圈；燃煤六十万吨，相当于一个大型煤矿井的全年产量；购买报纸五千万份。（1992年1月24日）
-
-
 
 立法院的怪力乱神
 
@@ -1132,31 +990,21 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 除了替在任的立法院长屋内风水伤脑筋外，郭信次在任秘书长时，其办公室内的摆设也颇为讲究。在办公室的大门上，他贴了“小门神”避邪，不用心看还无法发现；而在他的椅子后边，还挂了一串佛珠。据说，他每天都会播放诵经录音带，不时来上一段；连在议场辅佐议事时，他的桌上也经常摆着一本佛经。（1992年1月24日）
 
-
-
 林洋港与小偷
 
 家中1月20日被窃。两日来加做铁窗工程。记得多年前林洋港主政时夸下海口，说三年内当让铁窗业失业，意谓政府可使小偷绝迹，人民夜不闭窗可也。如今多年下来，小偷猖狂益甚，林洋港屁放过了，脸也不红。光此一事，可见国民党官僚一态。（1992年1月25日）
-
-
 
 老美也违反著作权了
 
 25日香港《虎报》报道，大陆已出现首宗由中国人控告美国人违反著作权保障的案例，原告要求大陆的法院尽早做出公正的判决。报道说：北京师范大学李景楷教授控告一家美国电脑公司，及其华籍共犯。他说：“北京中级人民法院已经处理本案达三年之久，但是迄今仍然未能做出任何决定。”“如果法院不能以公平、公正的方式审理本案，那么我会认为中国不但不能保护外国的著作权，它也无法保护它自己的著作权。”他指的是中国才在最近和美国签署了保障著作权法案的备忘录。1988年11月，李景楷控告美国的迪吉多电脑公司，以及一位叫做王永明的华人电脑专家涉嫌侵犯他的专利。1989年3月，有关各方同意庭外和解，但是后来王永明反悔。去年7月，法院再度审理本案，但迄今未有任何判决。李景楷拥有五笔输入法的专利，他的这种方法被相当广泛的利用来把中文输入电脑。1985年4月1日，当中国专利局开始接受专利申请时，李景楷和王永明在同一天向该局提出专利申请。王永明虽然未获专利，但是他仍然想办法在美国获得专利。1987年4月，王永明和美国公司签署协议，让该公司利用这个输入方法设计电脑。该公司又在1988年10月把这种方法和产品引进大陆。李景楷认为这侵犯到了他的专利，于是提出诉讼。（1992年1月26日）
 
-
-
 在光华商场书肆
 
 午后骑脚踏车去光华商场。碰到应凤凰、李高雄等。应凤凰正在买一中文电脑，准备带到美国写论文。她的力争上游、舍高薪之职而去留学，都是令人佩服的。李高雄前曾买到胡颂平《胡适之先生年谱长编初稿》稿本，上有陈雪屏等删改笔迹。问我意见。我说由《王世杰日记》可证他们这些所谓胡适的朋友，皆参与其事。他们刪改的主要目的在使胡适百分之百变成与国民党协同一致之人，不敢有丝毫干犯之语。一年多前出版的《胡适的日记》，据远流出版公司王荣文暗中见告，亦遭吴大猷“检查”过，有的未予发表。总之这些所谓胡适的朋友，真面目原来如此！（1992年1月26日）
 
-
-
 包公的矛盾
 
 夜陈兆基带烧饼、酱肉来，熬小米粥共食之。我向他说，京戏《铡美案》中包公夹于护婿之皇太后与争公道的弃妇中间，至感内心冲突。他最后选择了支持弃妇争公道。——包公不是一开始就百分之百的走公道之路的，但最后他选择成功了。这才是真包公。这出京戏能表达出包公的矛盾与挣扎，很不错。（1992年1月26日）
-
-
 
 谢聪敏反暴力却被暴力相向
 
@@ -1190,8 +1038,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 此事甚令人怵目。同日《联合报》载：此次游行，身为地主的民进党彰化县党部主委郑银添却缺席。他表示，彰化县的民进党员派系倾轧，前天第一次召开执行委员会议就发生二位执委互殴的暴力事件，存心“漏”他的气，他哪有脸去参加反暴力游行。郑银添说，彰化县的民进党派系头头若再不检讨，仍自立山头，各行其是，他会在今年底的立委选举，让想当立委的民进党人士开放自由参选，每个人都“死得”很难看。他又表示，去年11月他出任县党部主委后，就被下同派系的人一再抵制杯葛。本月25日下午，他主持第一次执行委员会议，就有人蓄意找碴，散会后还发生两位不同派系的执委互殴流血，民进党本身都无法自制避免暴力，声援反暴力游行，岂不是太讽刺。——由此可见，民进党以乱招党员，最后相率以暴，地方党部主委都无法控制局面了。（1992年1月27日）
 
-
-
 收到章太炎字
 
 午后光华商场山东峄县赵中令出示为我留下的章炳麟写给陈三立的中堂，以二万元成交，一偿收藏太炎法书素愿。
@@ -1218,15 +1064,11 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 又在周代炽的店里碰到赵中令，我看到店中郑孝胥的字，不类真品。周代炽说郑孝胥做汉奸后字价大跌。赵中令说，从另一面看，郑孝胥忠于清室，也是忠臣啊。（1992年1月27日）
 
-
-
 探谢氏兄妹
 
 下午去仁爱医院五五八室看谢聪敏，房门口一警察一便衣保护之。他的伤势尚不重，但空手掩护他的谢秀美反倒被打昏，昨晚还输了血。我到隔壁病房看了秀美。我向秀美说：“你是全世界最伟大的妹妹，当年我们坐牢时，你在外面奔走，受尽了罪，你太伟大了。以后别再跟你哥哥乱跑了。他若欺负你，你告诉我呀！”
 
 我告辞时，聪敏太太送我出来，私语我说：“李先生可否劝劝聪敏回美国去吧，不要搞竞选了。”我答道：“像我们这个年纪的人，告诉他你已经落伍了，这是多难的事啊！”（1992年1月28日）
-
-
 
 刘辰旦电传
 
@@ -1246,8 +1088,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 辰旦见解甚是。（1992年1月29日）
 
-
-
 张大千题牡丹诗
 
 以张大千画牡丹复制品赠一中学弟张昇平。上有张大千诗：
@@ -1262,15 +1102,11 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 张大千人虽俗，字却不俗。（1992年1月30日）
 
-
-
 林森是谁？
 
 江述凡来电说，他有林森字一幅，儿女不知林森是谁，他很呕。拿到裱画店去裱，把儿女不知之事讲给了裱画店老板听，老板说，他们太年轻了，怎么知道做过第一任台湾省主席的林森呢？述凡一听之下，更呕了。
 
 代沟之深，往往令人哭笑不得！（1992年1月30日）
-
-
 
 近史所一研究员
 
@@ -1278,13 +1114,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 刘凤翰且是抄袭大王。他写的《圆明园兴亡史》，乃抄袭中共学人著作，居浩然曾予揭发。（1992年1月31日）
 
-
-
 刘福增落选原因
 
 邓维桢来坐。刘福增告诉他：在小选举区，如不贿选，可高票当选；但一贿选，就只好落选了。（1992年1月31日）
-
-
 
 秦始皇陵新消息
 
@@ -1292,27 +1124,19 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 按《史记-秦始皇本纪》：“始皇初即位，穿治骊山，及并天下，天下徒送诣七十余万人，穿三泉，下铜而致椁，宫观百官奇器珍怪徙藏满之。令匠做机弩矢，有所穿近者辄射之。以水银为百川江河大海，机相灌输，上具天文，下具地理。以人鱼（人鱼有四脚，声如小儿啼，似即今天的“娃娃鱼”之类）膏为烛，度不灭者久之。二世曰：‘先帝后宫非有子者，出焉不宜。’皆令从死，死者甚众。葬既已下，或言工匠为机，臧皆知之，臧重即泄。大事毕，已臧，闭中羡（羡是冢中神道），下外羡门，尽闭工匠臧者，无复出者。树草木以象山。”可见当年的设计、气派与残忍。（1992年1月31日）
 
-
-
 宠猫会开电风扇
 
 今天一奇事。我进厨房，但见电风扇直吹，宠猫江江坐在电风扇上面，不敢下来。原来它淘气，跳到电风扇上，按下开关，电风扇就启动了。
 
 今天它又打破上不了流理台的纪录，终能一跃而上，并且一上再上。其弹性已近大猫水准。（1992年1月31日）
 
-
-
 高信疆博物馆
 
 高信疆送画一幅，画题“小园龟硕”，是大陆画家陈谷长画的。信疆几年来送了我不少艺术品。我笑说：“我这个家，将来是李敖纪念馆兼高信疆博物馆。”（1992年2月1日）
 
-
-
 台北贿选价
 
 陆啸钊说，范圣告诉他，台北市选举买票，每票两千元，有人包买云。（1992年2月1日）
-
-
 
 贺年片上的“台独”
 
@@ -1334,21 +1158,15 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 此贺年片上的“台独”也。（1992年2月1日）
 
-
-
 从卧游到梦游
 
 梦到人去伦敦，江山如画，若不胜情。我因纸上作业详尽，对伦敦及世界许多地方都熟悉，如今竟来梦中，此真卧游转为梦游矣！（1992年2月2日）
-
-
 
 台北人与车
 
 台北市“主计处”指出，到去年11月底为止，每户平均人口量3.33人，人口密度每平方公里10004人。
 
 不但人多，车也多。台北市机动车辆到去年底，共有1330200辆，其中汽车536998辆，机车793202辆。（1992年2月2日）
-
-
 
 妖僧的新妖妄
 
@@ -1368,25 +1186,17 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 此妖僧林云的新妖妄也！（1992年2月2日）
 
-
-
 买张伯英、章太炎法书
 
 午与高信疆、柯元馨及高英轩吃饭。饭后在“亚细亚佳”看到张伯英二副小联。因为我是内行，说得店中人服了我，乃以一万六双得之。又买到章太炎赠杨谱笙篆字陶诗一中堂，原定价四万五，店中人以原价二万元让给我这行家。（1992年2月2日）
-
-
 
 二老友
 
 明天即旧年三十。今晚约胡虚一、郭鑫生二老友吃饺子，各赠他们洋酒一瓶。胡虚一愤愤傅正待他不正、王晓波流言对他波及，我说你写出来嘛。对傅正、王晓波这种人，只有揭发之，才是正确的态度。（1992年2月2日）
 
-
-
 宋楚瑜陪洋主子吃早餐的代价
 
 由美国民间发起、国会议员赞同的每年一度的“全球早餐祈祷会”（NationalPrayerBreakfast），即国民党宣传所谓“美国总统早餐会”者，今年由国民党中央党部秘书长宋楚瑜带队前往，一行十五人敬陪末座在洋主子面前吃了一顿早餐，耗资十万美金，其他旅费尚不算在内。如此凯子相与贱相，真是可鄙。（1992年2月2日）
-
-
 
 妖僧的鬼广告
 
@@ -1406,13 +1216,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 《时报周刊》也登出同样的广告，真可耻也！（1992年2月2日）
 
-
-
 一中老同学
 
 下午一中老同学詹复昌来，约我参加其子婚礼，他知道我概不参加婚丧喜庆，所以也不相强。请帖上双方家长用的是“我们的孩子……”字样，并附新郎新娘照片，可算别致。他走后，一中老同学陈正澄来，谈他每天仍花时间复习英文德文日文，并花半小时读我送他的《资治通鉴》，正澄用功，一如往昔也。（1992年2月3日）
-
-
 
 有关高山族与性问题的人权报告
 
@@ -1427,8 +1233,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 雏妓问题是台湾社会颇为关切的重点，可靠的评估显示，台湾目前约有10万名未满18岁的娼妓。1991年警方的初步统计数字指出，警方共查获1152名雏妓，其中204人未满14岁；880人介于14至16岁之间，而山地少女则有224人，警方在社会压力之下，近年来已展开打击雏妓的运动，妇运人士期盼已久的青少年福利法已于1989年通过，是项法律使青少年福利机构、检察官及当事人得以向法庭申诉终止家长对当事人的监护权，并可在对父母将子女推入火坑的起诉案件中，指定合格的律师为受害人辩护，如雏妓系自愿卖淫且父母无力执行安全监护的责任时，法庭则可以指定适当的机构，指导当事人进入妇女习艺所接受六个月以上两年以下的辅导教育。但法律漏洞和文化因素依旧对起诉过程形成障碍，以父母强迫子女卖淫为例，现行法律要求当事人应在起诉行动展开之前先行提出申诉，但实则当事人每每不愿或心怀畏惧而襄足不前，数项报告显示，岛上的妓院常以暴力、施打毒品及其他威吓的手段，使雏妓无从脱身。
 
 人权报告中把这一部分凸显写出，算是一种进步。（1992年2月3日）
-
-
 
 复兴文化中的古迹
 
@@ -1448,13 +1252,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 李严秀峰即李友邦之妻。这一古宅位于台北县芦洲乡中原村，地处新庄平原的边陲，正对着观音山，现存建筑建于清光绪二十九年（1903年）。国民党整天搞复兴文化、台北县又是民进党县长尤清的辖区，竟令古迹荒废如此！（1992年2月3日）
 
-
-
 语曾心仪
 
 曾心仪来电，我说：“我在台湾岛上做人独立，我是真正的‘台独’。”（1992年2月4日）
-
-
 
 周才蔚来电拜年
 
@@ -1466,19 +1266,13 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 才蔚说你李敖只在书房里用功，不知道外面许多实际的事。例如蒋孝武有次去基隆，竟电刑警队，给他找三个姑娘陪他上床，这种荒淫之事，你李敖就不知道。（1992年2月5日）
 
-
-
 录影带可看的不多
 
 不可轻易看电影录影带，因为得不偿失。以一小时为单元比较，主动看一小时书，收获多于被动看一小时录影带。除非那录影带经保证是得可偿失的。（1992年2月5日）
 
-
-
 蔡万霖的“金玉满堂”
 
 在京兆尹吃饭，遥望对面蔡万霖家过年大张红幔，上写“金玉满堂”四字，觉得好笑。《老子》（第九章）：“金玉满堂，莫之能守；富贵而骄，自遗其咎。”《世说新语-赏誉》：“王长史谓林公：‘真长可谓金玉满堂。’林公曰：‘金玉满堂，复何为简选？’王曰：‘非为简选，直致言处自寡耳。’”当然大土蛋蔡万霖是不懂这两段古书的。（1992年2月5日）
-
-
 
 胡虚一揭发傅正信
 
@@ -1520,13 +1314,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 以上胡虚一来信，存件如上。此信甚重要，可以看到《自由中国》人物傅正的真面目。（1992年2月6日）
 
-
-
 冒雨骑脚踏车
 
 王惠群请陆啸钊和我、小屯于陶陶园。饭后去重庆南路买书，冒雨骑车，一刻钟抵家。买到日本版《九成宫》，印刷之精美，比中国人的还逼真。（1992年2月7日）
-
-
 
 饮食八戒
 
@@ -1536,13 +1326,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 烟酒茶咖啡早在二三十年前就戒掉了。（1992年2月8日）
 
-
-
 周之鸣
 
 周之鸣6日送我雕猴古玉一块以贺猴年。今午请他老两口儿吃饭。我跟他老伴儿说：“周之鸣本来是我敌人，他印过专书来骂过我呢！后来被我统战，变成了朋友。陈立夫写信给他，责备他上了李敖的当。你要代我好好整整他，他可不是什么好人！”周之鸣听了，在旁边一直笑。（1992年2月9日）
-
-
 
 屠申虹之言
 
@@ -1550,31 +1336,21 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 屠申虹又说：只有一个老婆，反倒会离婚；有两个老婆，反倒安全。因为女人的注意力都集中在斗对方，男的反倒安全了。（1992年2月10日）
 
-
-
 视野问题
 
 与陈平景通电话，他说汪荣祖婉告他：“敖之自诩足不出户能知天下事，其实视野上是会有死角的。”我说：“荣祖说得对，可是我的博学，使视野太宽了，有点死角也不要紧呀！”（1992年2月11日）
-
-
 
 宠猫江江淘气创新纪录
 
 抽屉没关好，露一小缝。宠猫江江乃伸一攀下去，一次又一次，掏出牙线棒，丢在地下。及我发现，已祸害满地矣！（1992年2月11日）
 
-
-
 戒之在失
 
 邻居张院长之父每晚将保险箱钥匙串在腰上，以防其妻等人觊觎。我说齐白石也有大同小异作风。孔丘言人老“戒之在得”，其实“戒之在失”亦即斯言之变相也。（1992年2月11日）
 
-
-
 西藏新女性
 
 新华社拉萨8日电：今年48岁的藏族妇女白曲是西藏自治区乃东县的县长，她自1984年任职以来，政绩斐然。去年，乃东县粮食产量居全区第一；人均收入达六百元，居全区第二。在和平解放前，西藏地方政府法典中明文规定奴隶与妇女不允参加军政事宜。”因此，旧西藏没有一位女官员，被视为半个人身的西藏妇女百分之九十五都是文盲。（1992年2月12日）
-
-
 
 李宁大买《北京法源寺》
 
@@ -1582,15 +1358,11 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 昨天电话中，我问李宁为什么要如此破钞买了这么多送人，她笑说现在流行参禅、流行送佛书善书，我看你这本书论佛的部分很精彩，所以姑且当做佛书善书，以做功德之心分送友好。我听了，为之大笑。（1992年2月12日）
 
-
-
 施性忠是第一流政治人才
 
 施性忠来电，我说国民党帮民进党清党了。施性忠说你老哥说搞政治是笨蛋，只对了一半，我早就预言民进党会被解散，它解散后，政治还是得有人出来搞的。
 
 施性忠是第一流政治人才，但台湾人不知始终支持他，这是台湾人的没见识。（1992年2月12日）
-
-
 
 囚犯产品大哥莫笑二哥
 
@@ -1628,8 +1400,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 美国传媒大骂“奴工产品”，历时一年。美国政府和国会的政客的反对“奴工产品”运动，也将近一年。现在《商业周刊》文章一出，政论家和政客们突然都变做哑巴，是充耳不闻，抑或是难开尊口？（美洲《侨报》，1992年2月19日）
 
-
-
 七日参禅，军头落泪
 
 今天报上说：“前国防部副部长、现任国策顾问陈守山，昨天下午在台北县万里乡灵泉寺打完整七天的‘禅七’后，在结束茶会上谈感想时，为参禅所得，感动得三度哽咽，甚至泪下。他说，人如果只有物质生活而没有精神生活，将只是虚度一生。”“现年七十二岁的陈守山说，参禅这七天，是他今生感受最为深刻的日子；昨天皈依佛门后，心中更是得到无限安详。他说：‘拿到的皈依手册，比这一年所得的勋章，都还要高。’”
@@ -1637,8 +1407,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 陈守山在国防部副部长前，曾任警备总司令。这种人一辈子做走狗，临老失官，看破红尘，又与军阀孙传芳皈依佛门何以异？
 
 陈守山是继国民党国防部长陈履安之后，在灵泉寺参禅的又一巨头。基本上，这些人并无大脑，故每为妖僧所乘。（1992年2月13日）
-
-
 
 叶菊兰问题
 
@@ -1665,8 +1433,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 第三条罪状同样不能成立。所谓“大力支持中共不要放弃以武力攻打台湾”，这话说得极不准确。中共从来就没有想“打台湾”，“以武力为后盾，对付台湾人民。”叶以“扬州十日”、“嘉定三屠”来吓唬台湾人民，是不伦不类的历史比拟，也是不负责任的政治宣传手法。中共所要攻打的，是万一台独成了气候，与台独势力一起将台湾从祖国分裂出去的帝国主义势力。如果美帝国主义者参与行动，我认为中共出于民族大义，也将照打不误。美国在台独分子心目中固然是了不得的、神圣不可侵犯的庞然大物，但如以为中共也将匍匍在美帝国主义的脚下发抖，我以为是打错了算盘。但对于中共来说，打只能是迫不得已而为之的。不到除打之外别无选择，绝不会打。真的打起来了，又绝不会不考虑如何最大限度地使台湾人民的生命财产不遭受损失。而且，中共始终把“打”看成下下策，只有和平统一才是上上策。但“打”虽为下下策，此策又不可丟。因为它是在万一情况紧急下，对付台独及外国侵略势力的一把撒手锏。台湾及海外爱国人士在台独势力日益猖撅的情况下，懔于民族的危亡，对在万不得已的情况下，使用此一下下策有所认同，我认为绝非坏事。相反，这表现了他们为维护祖国统一而无所畏惧的伟大爱国精神，令人赞叹、佩服！但度之常情常理，这些爱国人士与台湾有很深的联系，他们是爱台湾的，怎么可能去鼓动中共“攻打台湾”呢？
 
 从叶的质询中，使我深深感到台湾主张和平统一的爱国人士、学者们的处境是很艰难的，随时会被人戴上“中共代理人”、“媚共”的帽子加以诽谤、打击。所发表的见解，也随时会遭到令一切正直的人为之扼腕的“扭曲”。此种情况，能否有所作为呢？为了国家民族的前途，我们能否使一切热血的爱国之士有较好的境遇，而不再背负悲剧的命运呢？（1992年2月13日）
-
-
 
 听刘绍唐、杨西崑谈往
 
@@ -1700,19 +1466,13 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 杨西崑谈到斯威夫特（JonathanSwift）那篇《为了免除爱尔兰穷人的子女成为他们父母的负担而提出的一个温和建议》（AModestProposalforPreventingtheChildrenofPoorPeopleofIrelandfromBeingaBurdentoTheirParents），言斯威夫特讽刺不如吃小孩之肉，以解决问题。又提到海斯利特（WilliamHazlitt）之文，海斯利特说他热心救世，但自己不能付出受刑的代价。我疑此意出自海斯利特《席间谈》（TableTalk）一书，来日当细考之。（1992年2月14日）
 
-
-
 引以为耻
 
 远流出版社出版《读书社群》第十三期中，有王荣文《九二年，我们下定新决心！》一文，中有一段说：“读史以识世局、决大势。我们相信庞大的历史读者一定能促动并鼓励两岸的作家对中国的历史做不同视角的思考及深入的探讨；我们更乐意看到更多位如李敖、高阳、柏杨等，勤于耕耘史学的优秀作者。”我读了，深感未甘。昔初唐四杰，有“王（王勃）、杨（杨炯）、卢（卢照邻）、骆（骆宾王）”之称。杨炯闻之，却说吾愧居卢前，耻居王后！”今我耻居高柏诸人之前，这种国民党文人的名字，跟在我屁股后面，我的屁股都引以为耻啊！（1992年2月15日）
 
-
-
 引以为荣
 
 今天《中央日报》载：“尽管台北的天空阴沉沉下着雨，台北国际会议中心里，却洋溢着既温馨又热闹的气氛。由文建会与文化总会共同主办的艺文界新春联谊茶会——‘新春文荟’，昨天下午在台北会议中心三楼宴会厅举行。茶会由文化总会会长李总统登辉先生主持，遨请国内知名艺文界人士近四百人参加，李总统于致词时期勉艺文界人士，扮演火车头的角色，在世界文化变异的转折点上，建设并创造出属于‘当代的’‘中国的’艺术与文化。”——李登辉在台湾，邀请了“知名艺文界人士近四百人”，都不遨请李敖、四百人排名都排不到李敖，李敖的无名可想！这真是我的光荣！（1992年2月16日）
-
-
 
 台湾市侩满脑肥肠
 
@@ -1720,13 +1480,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 此台湾市侩的大脑也！连脑满肠肥都不配，只是满脑肥肠耳！（1992年2月16日）
 
-
-
 邵玉铭不要脸
 
 今日《中央日报》登邵玉铭《典型在夙昔——杭立武先生二三事》，中说杭立武“推动人权保障运动。在我政府解严之前，西方许多国家一再批评我政府不够尊重人权。国内许多反对人士也持此一立场。杭公早在民国六十八年即成立‘中国人权协会’。不仅如此，他为了要让全世界知道我们对人权的重视与做法，特别在民国七十年嘱我邀请世界各国知名学者专家在关岛举行‘世界人权会议’”。这话真不要脸。杭立武邵玉铭所搞的是什么人权保障！正相反的，他们保障的乃是国民党伪政府的摧残人权。他们搞这种会、抢先登记这种会，就在鱼目混珠，防止真正的人权保障会出现。如今还夸夸其谈，真不要脸啊！（1992年2月16日）
-
-
 
 美国食人魔
 
@@ -1752,21 +1508,15 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 自来食人魔只是吃人而已，但此公“只吃他真正心爱的人”，有趣哉！（1992年2月16日）
 
-
-
 胡基峻
 
 胡基峻去美五个月返台。今午请他和仲伟烈、郭鑫生吃饭。胡基竣为人正直纯朴，不改本色，是好朋友。他陪我办《求是报》半年，《求是报》文字作业，只出于我和他两人之手。他是“台大哲学系事件”的受害人，被迫害离台大后，从事新闻业，本行哲学方面成绩自然耽误了。由于从事新闻业多年，他养成了整天追新闻的习惯。《求是报》停了，他还每天忙个不停，我一直笑他把大好时间太多花在新闻上的不智，他还笑嘻喀的申辩呢！（1992年2月17日）
-
-
 
 写作主力两大类
 
 余生写作，主力在两大类。第一类是写小说，是性灵之作，写来上天下地，独与天地精神往来，行云流水，如东坡作文。
 
 小说以外，另一类是思想史文字，是学术之作，写来句句有据，是笨功夫加上聪明解释。（1992年2月17日）
-
-
 
 中共的人权论
 
@@ -1775,8 +1525,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 在谈到不公正、不合理的世界政治和经济秩序，对发展中国家人民享受人权和各项基本自由形成严重阻碍时，他指出，改变这种状况需要国际社会的共同努力，但发达国家负有主要的责任。有的人不愿意承认这一现实，却要发展中国家在政治上接受它们的价值观和意识形态，甚至为此不断向发展中国家施加政治和经济压力，使正常的经济援助和贸易往来也被附加上一个所谓“人权状况”的条件，这不是在促进和保护人权，而是在维护人权的口号下输出价值观，是真正的人权政治化。
 
 中共此论甚辩，但甚值得注意。（1992年2月18日）
-
-
 
 胡虚一信中的傅正
 
@@ -1808,8 +1556,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 上面胡虚一来信，事关雷震被傅正及民进党扭曲真相，特存件以斥之。（1992年2月19日）
 
-
-
 我在台大研究所
 
 前给孙震信，今得台大复函如下：
@@ -1840,8 +1586,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 成绩似尚不恶。（1992年2月19日）
 
-
-
 张灵甫死事异说
 
 陈又亮来电说，他在大陆得知，孟良崮之役张灵甫并未如国民党宣传自杀的，而是投降了。但共军前锋尖刀团方面因衔恨，把他给干掉了。中共不愿背人家投降了还要干掉之名，乃传出战死之事。
@@ -1868,13 +1612,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 与陈又亮电话对照起来，不胜有趣。如今，国民党“总统蒋公”也完蛋了、国民党“赳赳桓桓之士”也烟消云散了，特存张灵甫异说于此。（1992年2月19日）
 
-
-
 国民党还在做票
 
 午前苏秋镇来坐。他说他们这次以非政党联盟参选国代，原是说由新光财团支持，结果被摆了一道，财团并没出钱，反倒要捡他们的便宜。又说高玉树打电话告诉他，他的票因监票困难，被国民党做了手脚。他应得一万七千票，结果开出来只有三分之一得票数。（1992年2月19日）
-
-
 
 看周之鸣藏艺品
 
@@ -1892,61 +1632,41 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 周之鸣又给我看石涛的画，枯笔焦墨，上有“法无定相、气慨成章耳”之语，“慨”字设作“概”字。（1992年2月19日）
 
-
-
 今日开明书店
 
 为给《求是评论》《书店之死》配图，今天上午再去中山北路开明书店一次。原来我以为三楼四张桌子都是开明书店的，今天我却发现，职员伏案做的，竟是“面包部产量日报表”！可见今日开明书店，连三楼都不能保全矣！（1992年2月20日）
-
-
 
 张福淙来坐
 
 张福淙下午来坐，他说金兰大厦CD座独立后，内斗不已，现在已吵着要再行与ABEF座统一。我说统一可以，必须怎么走的，再怎么回来。当时是联名要脱离的，现在要回来，也得联名把前次的联名作废才行。没有表示，若无其事的回来，我是不同意的。（1992年2月20日）
 
-
-
 最老的特务
 
 与谷正文、陆啸钊晚饭。谷正文谈到王天木，已九十七岁，尚以骗人维生。——干的是林云一行。王天木是汉奸特务。（1992年2月21日）
-
-
 
 台大与二二八
 
 台大政治系三年级大学新闻社负责人蔡佳泓、经济系三年级台大大陆问题研究社负责人樊家忠（都是1971年次）来寓，约3月2日到台大讲蒋介石与二二八史事，我想做一点“机会教育”，遂同意前往。他们给我看这一“台大二二社区意识周”的“活动主旨”说：“台湾大学素有浓厚的本土思想，自二二八事件以来，台大师生因不见容于当局而牺牲生命者不知多少；多年来在当局的刻意掩饰下，绝大部分的受难师生仍旧含冤未雪，不见天日，造成台大社区对于二二八这段历史仅有浅薄的意识；今年，我们希望台大社区能开始凝聚属于自身的二二八意识，以及更为鲜明的本土形象，因此我们筹办一系列活动，希望收到抛砖引玉之效，作为台大社区意识形塑的开端。”依我看来，我不以什么“本土思想”、“本土形象”为然，所以更乐为赴会，以为纠正也。（1992年2月22日）
 
-
-
 美国人权三重标准
 
 《纽约时报》2月18日刊出读者投书，说在近半个世纪里，美国对人权问题采取了三重标准：一、美国人权问题不容外国干涉（理由是属内政）；二、美国对“友邦”或盟友的人权问题，经常不闻不问，更不干预（例如英国对北爱尔兰新教徒及印度人人权的侵犯）；三、对于拒绝配合美国外交战略的国家，则以人权为理由干涉其内政。投书说，里根政府在尼加拉瓜马拿瓜港布下水雷，海牙国际法庭裁决美国违反国际法。美国不予理会。这意味着美国在行动上不许别人干涉“内政”，连国际法庭都不能干涉也！投书之论甚是。（1992年2月23日）
-
-
 
 邱进益的谎话
 
 邱进益说二二八总统府档案开放须经法定手续，但秦孝仪主编、“中华民国重要史料初编编辑委员会”编辑的《中华民国重要史料初编》，平均每页都有“录自总统府机要档案”的字样，这些大溪档案又是怎么公开的？根据什么公开的？可见邱进益在说谎话。（1992年2月23日）
 
-
-
 夜读之乐
 
 清早2点头痛而醒，乃服止痛药后读书到8点。一连六小时夜读之乐，拜头痛之赐也。六小时边读边分类，速度如神。（1992年2月23日）
-
-
 
 赖泽涵袭我之论
 
 台视热线追踪做二二八节目。赖泽涵肯定陈仪搞一国两币之功，使大陆金融崩溃不致祸台。此袭李敖之论也。我为陈仪说公道话，有影响如此。（1992年2月24日）
 
-
-
 胡适死了三十年
 
 今日胡适死了三十年。三十年前那天傍晚，我在文星，胡秋原匆匆赶上楼，说刚才胡适在中央研究院讲话时当场昏倒了，恐怕不行了。不久即传来死讯。胡秋原赶上楼的目的是因这一突发情况，要修改他写的批胡文章，并去电徐复观一齐修改。我当时就对他们这些老一辈的人的作风感到奇怪：“为什么胡适一死，你们就要把文章写得客气了呢？”孔子说吾道一以贯之，对某些耍笔杆的人，叫他们一以贯之而无所修改，太难了。（1992年2月24日）
-
-
 
 郭为藩抄袭
 
@@ -1954,15 +1674,11 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 郭为藩引孟子“林木不可胜用也”，把该读平声的胜字读成胜利的胜字，如此水准的文化建设委员会主任委员！（1992年2月25日）
 
-
-
 彭明敏“不惜给人利用”
 
 彭明敏23日在洛杉肌举行记者会，说：“我不是政治人物，是一位单纯书生。”因此他对回台的工作目标，未做任何决定，但只要有助于民主政治，“他们要我做什么，我就做什么。”彭明敏透露，他不断在思考回台可能会发生何种情况，不过最后的结论是，“为了民主发展，我不惜给人利用。”
 
 我真替他捏一把汗！万一给人利用了，又无助于民主发展，则如之何？（1992年2月25日）
-
-
 
 国民党的贿选价码
 
@@ -1970,13 +1686,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 简明景发言后，其他省议员随后也大发牢骚，有人说鼓励“花钱”的“元凶”是国民党；有人甚至说，花钱是代表国民党向民众“对不起”，因为国民党常做错事；还有议员直刺剌的说，这次国代因“没有钱赚”，所以脑筋动到改变监委产生方式上。这些议员，搅臭搅到如此坦白程度，真是妙极！（1992年2月25日）
 
-
-
 《北京法源寺》广告词
 
 江述凡免费为我打“新光社”广播广告。我自拟一则如下：“《北京法源寺》是李敖写的第一部长篇小说。三十多年来，一般以为李敖是思想家、是历史家，其实李敖更是文学家。这本特立独行的小说，对话精彩、布局特殊，使你看了，会深刻的感到，原来这种小说才是真的小说。”（1992年2月25日）
-
-
 
 赖宪沧
 
@@ -1986,13 +1698,9 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 宪沧是好人，我在台中一中初二甲时，他在初二丁。高一甲时两人同班。是我最早认识的台湾朋友之一。。（1992年2月26日）
 
-
-
 比台湾人更台湾人
 
 我年纪愈大，愈比年轻的台湾人更台湾人，因我年纪减去他们年纪，足证我在台湾时间比他们久。（1992年2月26日）
-
-
 
 彭明敏声明
 
@@ -2048,8 +1756,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 1992年2月18日
 
-
-
 台大怪火案
 
 今日《台湾时报》有消息四条，与我演讲有关：
@@ -2087,8 +1793,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 〔记者江静玲台北报道〕台湾大学学生会表示，虽然该校活动中心发生火灾事件，该校社团及学生会等自治组织，自2月28日起推出的“台大二二八社区意识周”将如期举行。
 
 “台大二二八社区意识周”主办单位表示，鉴于当局刻意的掩饰下，绝大部分关于台大在二二八期间的资料均未能公诸于世，造成多年来台大社区对这段历史在意识上的空白。因此，该校各自治组织社团决定社区意识周，并将继之于3月初举办二二八系列座谈。（1992年2月27日）
-
-
 
 《人民日报》论西藏
 
@@ -2142,8 +1846,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 格勒现任中国藏学研究中心社会文化所副所长兼人类文化学研究室主任。他于1986年获中山大学人类学博士学位，从而成为中国第一位获得博士学位的藏族学者。他的主要论著有《甘孜藏族自治州史话》、《论古代藏族文化的起源、形成与周边民族关系》、《藏北牧民》等。他曾多次出访欧美诸国，参加国际学术会议和学术交流。
 
-
-
 海峡两岸二二八
 
 中新社北京2月27日电：值台湾“二二八”事件四十五周年之际，居住在北京的台湾籍人士今日在此间人民大会堂举行集会，呼吁国民党当局彻底公开该事件有关材料和真相，公布殉难名单，抚恤其家属，以告慰殉难者在天之灵。
@@ -2170,8 +1872,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 
 台北方面也是阵阵“二二八”活动。晚间电视访问，由赖泽涵、李筱峰等一面倒，甚看不惯。台湾知识分子视野太小，缺乏见识，只会作悲情秀，不知自省也。（1992年2月28日）
 
-
-
 在民主基金会讲话
 
 今天上午应邀到民主基金会参加“民间学者看二二八事件研究报告”，我讲话约一小时，掌声多起，极受欢迎。
@@ -2181,8 +1881,6 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 午与陈兆基、陈绥民吃饭。陈绥民说：“在大陆见到熊向晖，老交情还是老交情啊！”陈兆基说：“可是，二十年前若见到，早给干掉啦！”
 
 三台电视午晚间新闻皆播出我的讲话。（1992年2月29日）
-
-
 
 金兰俗务尾声
 
@@ -2205,6 +1903,3 @@ CD座下午有“代表”找张善惠的太太，又提出新的要求，即水
 前天福淙回话，因CD座自订章程把他们自己捆死，事事要全体四分之三通过才能动弹，所以一时转不过来。我乃于今晚召开ABEF座住户大会，选出张福淙为主任委员，自此卸下此职了。
 
 其实我蛮感谢CD座这些不识大体的邻居，正因为他们的胡闹，使我认真写出了不少驳倒他们的文字，使人们见识见识人间百态。同时我得此就力使力，得以摆脱俗务，亦一大快事也！（1992年2月29日）
-
-
-
